--- a/f2h2h1.github.io/_draft.html
+++ b/f2h2h1.github.io/_draft.html
@@ -1799,11 +1799,22 @@ KiB 和 KB 和 Kb 和 Kbps 的联系与区别
                 Angelfish 用于移动设备的
                 新版的 Konqueror 也是用 QtWebEngine 了
                 看来不止 windows 即使是 linux 也没有几个浏览器用 webkit 了
+                    playwright webkit 内核浏览器
+                    python -m playwright install --with-deps webkit
+                    留意命令的输出，可以找到安装路径
+                    Playwright downloads Chromium, WebKit and Firefox browsers into the OS-specific cache folders:
+                        %USERPROFILE%\AppData\Local\ms-playwright on Windows
+                        ~/Library/Caches/ms-playwright on macOS
+                        ~/.cache/ms-playwright on Linux
+                    这个就是浏览器的可执行文件 Playwright.exe
+                    估计是 playwright 团队单独维护的
         gtk 也有类似的项目 webkitgtk
             也是用 Webkit
             GNOME Web
         CEF
             Chromium Embedded Framework
+        WPE
+            WebKit port for embedded platforms
     CCT 和 TWA
         Chrome Custom Tabs (CCT 自定义标签页)
             CCT 共享 Chrome 主进程：CCT 与用户设备上已安装的 Chrome 浏览器共享同一个渲染进程
@@ -1815,7 +1826,12 @@ KiB 和 KB 和 Kb 和 Kbps 的联系与区别
     旧时代的插件
         ActiveX
         Silverlight
-        Flash
+        多媒体插件
+            Windows Media
+            RealPlayer
+            Quicktime
+            Flash/Shockwave/Authorware
+            旧时代的流媒体是怎么实现的？
         applet
         java web start
         https://github.com/ruffle-rs/ruffle 一个用Rust编程语言编写的Adobe Flash Player模拟器
@@ -4912,7 +4928,7 @@ nas
                     coinops
                     Lakka
                     OpenDingux
-                    EmuELEC
+                    EmuELEC （Emulation Embedded Linux Entertainment Center）
                     RetroBat
                     Lauchbox
                 刮削器 Scraper
@@ -4922,7 +4938,17 @@ nas
                 主机bios
                 游戏rom
                 金手指
-            影视刮削
+            媒体中心应用 media center application
+                Emby（前称Media Browser）
+                    以前是开源的，现在是闭源的
+                Jellyfin 在 Emby 开源版本的分支
+                Kodi （Xbox Media Center，XBMC）
+                Emby 和 Jellyfin 都是 服务端+客户端
+                Kodi 是纯粹的客户端， Kodi 可以作为 Jellyfin 或 Emby 的客户端
+                    如果是单机 nas 的话其实直接用 kodi 也不是不可以的.
+                Kodi 和 OpenELEC 和 LibreELEC 和 CoreELEC 和 EmuELEC
+
+                影视刮削
             刮削器信息的翻译？
             nas 来接收 dtmb 的信号，或者其它信号（例如收音机，卫星电视这类）
         放在哪里？体积？噪声？辐射？
@@ -5028,7 +5054,8 @@ nas
         交响乐 就是 管弦乐
         音乐 与 数学的联系？
             声音和音乐计算 (Sound and music computing, SMC)
-摇滚乐队
+摇滚乐队（Rock band）
+    摇滚（Rock and Roll，岩石和滚动，通常简称 Rock）
     主唱
     吉他
         主音吉他
@@ -5344,7 +5371,105 @@ nas
     经济 -&gt; 政治 -&gt; 历史 -&gt; 人类学 -&gt; 医学 -&gt; 生物 -&gt; 化学 -&gt; 物理 -&gt; 数学
     数学和物理谁是本源？
 无线电
-    HAM工具箱 https://ham.quickso.cn/
+    无线电 radio ，收音机的英文也是 radio
+    雷达 radar （Radio Detection and Ranging，无线电探测与测距）
+    无线电波 radio waves
+    业余无线电（英语：Amateur Radio），也被称作火腿电台（英语：ham radio）
+        HAM工具箱 https://ham.quickso.cn/
+    软件无线电 (SDR)
+        软件无线电 (SDR) 是一种无线设备，
+        通常包括一个可配置的射频前端和一个用于执行数字功能的 FPGA 或可编程的片上系统 (SoC)。
+        商用 SDR 硬件可以发射和接收不同频率的信号，
+        从而实现从 FM 无线电到 5G、LTE 和 WLAN 等多种无线标准。
+    遥控器
+        「闪光枪」（Flash-Matic Gun），
+            这是因为它能发射光线，照射到位于电视屏幕每个角落的光电管，从而控制电视
+            这是最古早的无线遥控器
+        红外线（IR，Infrared）
+        射频 （RF，Radio Frequency，无线电频率）
+            27MHz/240Mhz/315Mhz/433Mhz/868Mhz/915Mhz/2.4Ghz
+    蓝牙（Bluetooth）
+    低功耗蓝牙（Bluetooth Low Energy，BLE）
+    蓝牙Mesh（Bluetooth Mesh）
+    iBeacon
+        虽然由苹果提出，但也是开放协议，基于 BLE
+    uwb
+    nfc 和 RFID
+    AirTag
+        苹果专属
+        安卓中有哪些类似 AirTag 的技术
+            Samsung Galaxy SmartTag
+            Moto Tag
+            Tile Pro/Mate
+            Chipolo ONE
+    zigbee
+    Thread
+    Matter
+    wifi
+    移动电话？蜂窝网络？
+        1g 2g 2.5g 3g 4g 5g
+    卫星通讯
+    星链
+    磁条卡，ic卡，sim卡
+电力
+    单位
+        电流 电压 功率 电阻 
+    电力从发电厂到用电设备的流程
+        发电→升压→输电→降压→配电→进户→使用
+        进户（电表→断路器（总闸）→漏电保护→断路器（分闸）→开关→插座）→使用（电器的插头→电器本体）
+        这个是大致的流程，民用电和工业用电似乎还有一些区别
+    直流电（direct current，DC）
+        电压
+            1.5-72（1.5 3 5 6 9 12 24 36 42 48 72）
+        一般用在 汽车 干电池 消费者电子设备
+        电池
+            形状
+                圆柱状电池
+                矩形
+                纽扣
+            化学电池/干电池/湿电池
+                现在常见的电池都是化学电池
+                根据电解质来区分
+                    电解质是液体的就是湿电池
+                    电解质是糊状液体的就是干电池
+            根据是否能再次充电来区分
+            根据电解质成分来区分
+    交流电（alternating current，AC）
+        单相
+            两线
+                火线 零线
+            三线
+                火线 零线 接地线
+        三相
+            三线
+                三根火线
+            四线
+                三根火线 零线
+            五线
+                三根火线 零线 接地线
+        电压
+            低压 (Low Voltage)：1kV以下，包括 \(380V/220V\)。
+            中压 (Medium Voltage)：\(6kV,10kV,20kV,35kV\)。用于城市配电。
+            高压 (High Voltage)：\(110kV,220kV\)。用于区域电网传输。
+            超高压/特高压 (UHV)：\(330kV,500kV,750kV,1000kV\)。用于长距离、大容量传输
+        如何使用 万用表 测出 哪条是火线 哪条是零线 哪条是接地线？
+    安全电压(Safety Voltage)
+        36 以下，一些语境下 48 42 也算是安全电压
+    电流战争
+        直流电 -&gt; 爱迪生
+        交流电 -&gt; 西屋公司 -&gt; 特斯拉当时是西屋公司的工程师
+    弱电 和 强电
+        强电是用作一种动力能源
+        弱电是用于信息传递
+        这些都算是弱电系统
+            电话通信系统
+                固话 传真
+            计算机局域网系统 包括 wifi
+            有线电视信号分配系统
+            保安监控系统
+            消防报警系统
+            其它电子设备
+                打印机 复印机 扫描仪 碎纸机 打卡机 门禁
 各种笔记软件 或 gtd 或 wiki 或 pkm 或 思维导图 的总结
     笔记(note)
         印象笔记
@@ -5902,7 +6027,106 @@ wordpress
                 例如 出版社 电台 电视台 自媒体
     媒质 又是 什么？
 广播和电视
-
+    广播 broadcast
+    电视 television
+        tele 远程的
+        vision 视力
+    有影响力的电视台
+        bbc
+        cctv/cgtn
+        日本
+            富士、朝日、TBS、TV TOKYO、NTV
+        美国
+            cnn、Fox News
+    OTT （Over The Top ）
+    OTA（Over The Air）
+    dvb（Digital Video Broadcast）
+    IPTV（Internet Protocol Television）
+        dvb 来自广电 同轴电缆
+        iptv 来自电信运营商 专用的网线
+        ott tv 来自互联网公司 普通的网线
+    分辨率
+        sd hd fhd uhd 这类描述来自电视行业
+        1080p 2k 4k 8k 这类描述来自电影行业
+        所以其实两边不是严格对应的
+        电脑的显示器好像又有一套标准
+        qvga hvga svga wvga fwvga WSVGA XGA WXGA SXGA UXGA WUXGA
+        4320p (8k)：7680x4320
+        2160p (4K)：3840x2160
+        1440p (2k)：2560x1440
+        1080p（高清）：1920x1080
+        720p（高清）：1280x720
+        480p（标清）：854x480
+        360p（标清）：640x360
+        240p（标清）：426x240
+        144p：256x144
+    帧率（fps， frame per second 帧每秒 每秒显示帧数）
+        24
+        25
+        30
+        48
+        50
+        60
+        75
+        120
+        240
+    码率（DataRate）
+        单位是kbps（千位每秒）
+        多媒体行业在指音频或者视频在单位时间内的数据传输率
+    电视的制式
+        PAL
+        NTSC
+        SECAM
+    视频格式
+        容器
+            mp4 flv avi mkv
+        视频编码
+        音频编码
+        字幕
+        dvd
+            文件系统
+                通用光盘格式（Universal Disk Format，简称UDF）
+                ISO 9660
+            目录
+                AUDIO_TS 一般为空
+                VIDEO_TS (Video Title Set)
+                    VOB（视频对象 Video Object）
+                        包含音频、视频和字幕
+                    IFO（信息文件 Information）
+                        导航信息，指示播放器如何查找和播放内容
+                    BUP（备份文件 Backup）
+                        内容和 IFO 一样，是 IFO 的备份
+                    一个 vob文件对应一个ifo文件，对应一个bup文件
+            为什么dvd中会有 游戏？
+            有没有dvd模拟器？
+            什么是dat文件？
+    显示器和电视的区别
+        面板材料
+        输入延迟
+        音响
+    OSD （on-screen display 屏幕菜单式调节方式）
+    还有 ppi dpi lpi
+    刷新率（refresh rate）
+        单位是 Hz
+        刷新率 是显示器的参数
+        帧率 是视频的参数
+        60Hz 就是每秒刷新60次
+        60fps 就是每秒显示60帧图像
+    接收
+        视像头 麦克风
+    存储
+        视频格式 音频格式
+    传输
+        接口
+            HDMI VGA DVI DP RF端子
+        模拟信号 数字信号
+        介质
+            无线电 有线（电话线 同轴电缆 网线 光纤）
+    显示
+        显示器 音响
+    各种标准 和 组织
+    隔行扫描 逐行扫描 垂直同步/防撕裂技术 hdr
+    DLSS FSR
 从ed到perl还有正则表达式
     qed ed ex vi vim grep sed awk perl
     qed
@@ -5988,6 +6212,7 @@ wordpress
     文字处理器通常是处理富文本 rich text
     除了 vi/vim 和 emacs 的编辑器
         Neovim
+        SpaceVim
         nano
         Pico (Pine composer)
     在浏览器中的富文本编辑器
@@ -7202,4 +7427,8 @@ ls *.md 2&gt;/dev/null | grep -v '^_' \
 | while read file; do echo "{\"title\":\"$file\",\"updateTime\":\"$(stat -c %Y "$file" | cut -d. -f1)\",\"createTime\":\"$(stat -c %W "$file" | cut -d. -f1)\"}"; done \
 | printf "[$(awk 'NR &gt; 1 { print prev "," } { prev = $0 } END { if (NR &gt; 0) print prev }')]" \
 | python -m json.tool
+
+
+查看GitHub仓库被谁star
+https://github.com/{{your_user_name}}/{{your_repo}}/stargazers
 </code></pre>
