--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -325,7 +325,11 @@ php bin/magento server:run --port=8080 --workerNum=10
   ],
 </code></pre>
 </li>
-<li>在 php 的配置文件启用命令行的 opcace <code>opcache.enable_cli=1</code></li>
+<li>在 php 的配置文件启用命令行的 opcache <code>opcache.enable_cli=1</code></li>
+<li>启用 jit 也能提升速度，但启用 jit 需要禁用 xdebug ，启用 jit 需要启用 opcache<pre><code>  opcache.jit=1255
+  opcache.jit_buffer_size=128M
+</code></pre>
+</li>
 <li>使用开发者模式可以不用编译，但运行速度会变得更慢</li>
 <li>关掉 xdebug 后速度也有提升</li>
 <li>运行这句 composer 命令 <code>composer dumpautoload -o</code> 后速度也有提升<ul>
