--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9247 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9257 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=blog.mauve.icu/The%20Burrows-Wheeler%20Transform%20%E5%9D%97%E6%8E%92%E5%BA%8F%E5%8E%8B%E7%BC%A9%E7%AE%97%E6%B3%95.html>2026-01-01 The Burrows-Wheeler Transform 块排序压缩算法</a></li>
+
+<li><a href=mabbs.github.io/%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2026-01-01 年终总结</a></li>
+
+<li><a href=babyno.top/%E8%87%AA%E5%88%B6%E7%9A%84%E7%90%83%E4%BC%9A04%E9%87%91%E6%89%8B%E6%8C%87.html>2025-12-31 自制的球会04金手指</a></li>
+
+<li><a href=babyno.top/%E5%88%9B%E9%80%A0%E7%90%83%E4%BC%9A04%E6%B8%B8%E4%B9%90%E5%9C%BA%E4%B8%8A%E7%BA%BF.html>2025-12-31 创造球会04游乐场上线</a></li>
+
+<li><a href=iphyer.github.io/NOT%20IN%20vs%20LEFT%20ANTI%20JOIN%3A%20A%20Performance%20Comparison.html>2025-12-27 NOT IN vs LEFT ANTI JOIN: A Performance Comparison</a></li>
+
+<li><a href=jerkwin.github.io/%E5%9C%9F%E7%8B%97%E5%B0%8F%E7%99%BD.html>2025-12-24 土狗小白</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202551%20%E6%B3%A2%E9%A9%AC%E5%80%92%E8%AE%A1%E6%97%B617%E5%91%A8%20%E4%BB%8E%E6%B3%A2%E5%A3%AB%E9%A1%BF%E7%9A%84%E7%97%85%E5%8F%8B%E5%88%B0%E6%B3%A2%E9%A9%AC%E7%9A%84%E8%B7%91%E8%80%85.html>2025-12-23 折返点 2551 波马倒计时17周 从波士顿的病友到波马的跑者</a></li>
 
 <li><a href=hijiangtao.github.io/2025%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2025-12-20 2025年终总结</a></li>
 
@@ -68,6 +82,10 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202546%20%E8%B7%91%E6%AD%A5%E8%81%8A%E6%BD%9C%E6%B0%B4.html>2025-11-16 折返点 2546 跑步聊潜水</a></li>
 
 <li><a href=blog.forecho.com/PAHub%EF%BC%9A%E4%B8%BA%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%E8%80%85%E6%89%93%E9%80%A0%E7%9A%84%E5%9C%A8%E7%BA%BF%E5%A4%8D%E7%9B%98%E4%B8%8E%E5%AD%A6%E4%B9%A0%E7%A4%BE%E5%8C%BA.html>2025-11-16 PAHub：为价格行为交易者打造的在线复盘与学习社区</a></li>
+
+<li><a href=www.cnfeat.com/%E6%88%91%E7%9A%84%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E5%A5%BD%E7%89%A9%20004_100%20%E8%B1%86%E7%93%A3%E6%97%A5%E5%8E%86.html>2025-11-15 我的长期主义好物 004/100 豆瓣日历</a></li>
+
+<li><a href=www.cnfeat.com/%E6%88%91%E7%9A%84%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E5%A5%BD%E7%89%A9%20005_100%20%E4%B8%8D%E7%B2%98%E9%94%85.html>2025-11-15 我的长期主义好物 005/100 不粘锅</a></li>
 
 <li><a href=www.cnfeat.com/%E6%88%91%E7%9A%84%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E5%A5%BD%E7%89%A9%20002_100%20%E7%83%A7%E6%9D%AF.html>2025-11-14 我的长期主义好物 002/100 烧杯</a></li>
 
@@ -18458,6 +18476,8 @@
 <li><a href=kexizeroing.github.io/A%20quick%20way%20to%20serve%20HTTPS%20localhost.html>Dec 31 202 A quick way to serve HTTPS localhost</a></li>
 
 <li><a href=kexizeroing.github.io/Learn%20from%20Advent%20of%20Vue.html>Dec 27 202 Learn from Advent of Vue</a></li>
+
+<li><a href=kexizeroing.github.io/Understand%20lazy%20resource%20pattern.html>Dec 26 202 Understand lazy resource pattern</a></li>
 
 <li><a href=kexizeroing.github.io/Understand%20npm%20concepts.html>Dec 14 202 Understand npm concepts</a></li>
 
