--- a/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
+++ b/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
@@ -23,7 +23,7 @@ COPY . .
 
 RUN npm install
 
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
 </code></pre>
 <ol>
 <li>Use explicit Docker base image tags. By specifying the <code>FROM node</code>, you always build the latest version of the Docker image that has been built by the Node.js Docker working group. The shortcoming of building based on the default node image is that docker image builds are inconsistent. Also, the node Docker image is based on a full-fledged operating system, full of libraries and tools that you may or may not need to run your Node.js application.</li>
@@ -54,13 +54,13 @@ COPY package*.json ./
 
 RUN npm install
 
-# Copy remaining source code AFTER installing dependencies. 
+# Copy remaining source code AFTER installing dependencies.
 COPY ./src/ .
 
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
 </code></pre>
 <ol>
-<li>By default, Docker runs commands inside the container as root which violates the Principle of Least Privilege when superuser permissions are not strictly required. You want to run the container as an unprivileged user whenever possible. The node images provide the <code>node</code> user for such purpose. </li>
+<li>By default, Docker runs commands inside the container as root which violates the Principle of Least Privilege when superuser permissions are not strictly required. You want to run the container as an unprivileged user whenever possible. The node images provide the <code>node</code> user for such purpose.</li>
 </ol>
 <pre><code class="lang-dockerfile">FROM node:19.7.0-bullseye-slim
 
@@ -76,7 +76,7 @@ USER node
 
 COPY --chown=node:node ./src/ .
 
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
 </code></pre>
 <ol>
 <li>Configure the app for production. The <code>NODE_ENV=production</code> environment changes how certain utilities behave, increasing performance. Using <code>npm ci</code> instead of <code>npm install</code> ensures a reproduceable build, and <code>--only=production</code> prevents installing needed dev dependencies.</li>
@@ -86,7 +86,7 @@ CMD [ "node", "index.js" ]
 <pre><code class="lang-dockerfile">FROM node:19.7.0-bullseye-slim
 
 # Set NODE_ENV
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 WORKDIR /usr/src/app
 
@@ -99,14 +99,14 @@ USER node
 
 COPY --chown=node:node ./src/ .
 
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
 </code></pre>
 <ol>
 <li>Use the EXPOSE instruction. EXPOSE documents to users of the image which port the application expects to be listening on. You will still need to publish the port at runtime, but this makes it clear to end users what to expect.</li>
 </ol>
 <pre><code class="lang-dockerfile">FROM node:19.7.0-bullseye-slim
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 WORKDIR /usr/src/app
 
@@ -121,7 +121,7 @@ COPY --chown=node:node ./src/ .
 # Indicate expected port
 EXPOSE 3000
 
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
 </code></pre>
 <ol>
 <li>Use a <code>.dockerignore</code> file to ensure you are not COPYing unnecessary files into the container image. This helps speed up Docker builds because it ignores files that would have otherwise caused a cache invalidation.</li>
@@ -232,10 +232,10 @@ spec:
         app: nodejs-hello-world
     spec:
       containers:
-      - name: nodejs-hello-world
-        image: your-docker-username/nodejs-hello-world:latest
-        ports:
-        - containerPort: 3000
+        - name: nodejs-hello-world
+          image: your-docker-username/nodejs-hello-world:latest
+          ports:
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
@@ -244,8 +244,8 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 80
-    targetPort: 3000
+    - port: 80
+      targetPort: 3000
   selector:
     app: nodejs-hello-world
 </code></pre>
