--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -9,12 +9,12 @@
 <blockquote><p>The sky is</p>
 </blockquote>
 <p>Output:</p>
-<blockquote><p>blue<br/>
+<blockquote><p>blue\
 The sky is blue on a clear day. On a cloudy day, the sky may be gray or white.</p>
 </blockquote>
 <p>As you can see, the language model outputs a continuation of strings that make sense give the context <code>"The sky is"</code>. The output might be unexpected or far from the task we want to accomplish. This basic example also highlights the necessity to provide more context or instructions on what specifically we want to achieve.</p>
 <p>Prompt:</p>
-<blockquote><p>Complete the sentence:<br/>
+<blockquote><p>Complete the sentence:\
 The sky is</p>
 </blockquote>
 <p>Output:</p>
@@ -22,15 +22,15 @@ The sky is</p>
 </blockquote>
 <p>Well, we told the model to complete the sentence so the result looks a lot better as it follows exactly what we told it to do. This approach of designing optimal prompts to instruct the model to perform a task is what's referred to as prompt engineering.</p>
 <p>A question answering (QA) format is standard in a lot of QA datasets, as follows:</p>
-<blockquote><p>Q: <code>&lt;Question&gt;?</code><br/>
+<blockquote><p>Q: <code>&lt;Question&gt;?</code>\
 A:</p>
 </blockquote>
 <p>When prompting like the above, it's also referred to as <em>zero-shot prompting</em>, i.e., you are directly prompting the model for a response without any examples or demonstrations about the task you want it to achieve. One popular and effective technique to prompting is referred to as <em>few-shot prompting</em> where we provide exemplars. Few-shot prompts enable in-context learning which is the ability of language models to learn tasks given a few demonstrations.</p>
 <p>Keep in mind that it's not required to use QA format. For instance, you can perform a simple classification task and give exemplars that demonstrate the task as follows:</p>
 <p>Prompt:</p>
-<blockquote><p>This is awesome! // Positive<br/>
-This is bad! // Negative<br/>
-Wow that movie was rad! // Positive<br/>
+<blockquote><p>This is awesome! // Positive\
+This is bad! // Negative\
+Wow that movie was rad! // Positive\
 What a horrible show! //</p>
 </blockquote>
 <p>Output:</p>
@@ -48,8 +48,8 @@ What a horrible show! //</p>
 </blockquote>
 <p>You can design effective prompts by using commands to instruct the model what you want to achieve such as "Write", "Classify", "Summarize", "Translate", "Order", etc. It's also recommended that some clear separator like "###" is used to separate the instruction and context.</p>
 <p>Prompt:</p>
-<blockquote><p>### Instruction ###<br/>
-Translate the text below to Spanish:<br/>
+<blockquote><p>### Instruction ###\
+Translate the text below to Spanish:\
 Text: "hello!"</p>
 </blockquote>
 <p>Output:</p>
@@ -57,9 +57,9 @@ Text: "hello!"</p>
 </blockquote>
 <p>Be very specific about the instruction and task you want the model to perform. The more descriptive and detailed the prompt is, the better the results. This is particularly important when you have a desired outcome or style of generation you are seeking.</p>
 <p>Prompt:</p>
-<blockquote><p>Extract the name of places in the following text.<br/>
-Desired format:<br/>
-Place: <code>&lt;comma_separated_list_of_company_names&gt;</code><br/>
+<blockquote><p>Extract the name of places in the following text.\
+Desired format:\
+Place: <code>&lt;comma_separated_list_of_company_names&gt;</code>\
 Input: "Although these developments are encouraging to researchers, much is still a mystery. “We often have a black box between the brain and the effect we see in the periphery,” says Henrique Veiga-Fernandes, a neuroimmunologist at the Champalimaud Centre for the Unknown in Lisbon."</p>
 </blockquote>
 <p>Output:</p>
@@ -71,7 +71,7 @@ Input: "Although these developments are encouraging to researchers, much is stil
 </blockquote>
 <p>One of the most promising applications of language models is the ability to summarize articles and concepts into quick and easy-to-read summaries. The <code>A:</code> is an explicit prompt format that's used in question answering, and we can instruct the model to summarize into one sentence.</p>
 <p>Prompt:</p>
-<blockquote><p>Explain antibiotics<br/>
+<blockquote><p>Explain antibiotics\
 A:</p>
 </blockquote>
 <p>Prompt:</p>
@@ -79,18 +79,18 @@ A:</p>
 </blockquote>
 <p>The best way to get the model to respond to specific answers is to improve the format of the prompt.</p>
 <p>Prompt:</p>
-<blockquote><p>Answer the question based on the context below. Keep the answer short and concise. Respond "Unsure about answer" if not sure about the answer.<br/>
-Context: ...<br/>
-Question: What ...?<br/>
+<blockquote><p>Answer the question based on the context below. Keep the answer short and concise. Respond "Unsure about answer" if not sure about the answer.\
+Context: ...\
+Question: What ...?\
 Answer:</p>
 </blockquote>
 <p>When your prompts involve multiple components like context, instructions, and examples, XML tags can be a game-changer. Use tags like <code>&lt;instructions&gt;</code>, <code>&lt;example&gt;</code>, and <code>&lt;formatting&gt;</code> to clearly separate different parts of your prompt. Combine XML tags with other techniques like multi-shot prompting (<code>&lt;examples&gt;</code>) or chain of thought (<code>&lt;thinking&gt;</code>, <code>&lt;answer&gt;</code>). This creates super-structured, high-performance prompts.</p>
 <p>For harder use cases, just providing instructions won't be enough. This is where you need to think more about the context and the different elements you can use in a prompt. Other elements you can provide are input data or examples.</p>
 <p>Prompt:</p>
-<blockquote><p>Classify the text into neutral, negative or positive.<br/>
-Text: I think the vacation is okay.<br/>
-Sentiment: neutral<br/>
-Text: I think the food was okay.<br/>
+<blockquote><p>Classify the text into neutral, negative or positive.\
+Text: I think the vacation is okay.\
+Sentiment: neutral\
+Text: I think the food was okay.\
 Sentiment:</p>
 </blockquote>
 <p>Output:</p>
@@ -98,28 +98,28 @@ Sentiment:</p>
 </blockquote>
 <p>Another interesting thing you can achieve with prompt engineering is instructing the LLM system on how to behave, its intent, and its identity. This is particularly useful when you are building conversational systems like customer service chatbots. We can explicitly tell it how to behave through the instruction. This is sometimes referred to as role prompting.</p>
 <p>Prompt:</p>
-<blockquote><p>The following is a conversation with an AI research assistant. The assistant answers should be easy to understand even by primary school students.<br/>
-Human: Hello, who are you?<br/>
-AI: Greeting! I am an AI research assistant. How can I help you today?<br/>
-Human: Can you tell me about the creation of black holes?<br/>
+<blockquote><p>The following is a conversation with an AI research assistant. The assistant answers should be easy to understand even by primary school students.\
+Human: Hello, who are you?\
+AI: Greeting! I am an AI research assistant. How can I help you today?\
+Human: Can you tell me about the creation of black holes?\
 AI:</p>
 </blockquote>
 <p>Perhaps one of the most difficult tasks for an LLM today is one that requires some form of reasoning. It's important to note that current LLMs struggle to perform reasoning tasks so this requires even more advanced prompt engineering techniques.</p>
 <p>Prompt:</p>
-<blockquote><p>The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1.<br/>
+<blockquote><p>The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1.\
 Solve by breaking the problem into steps. First, identify the odd numbers, add them, and indicate whether the result is odd or even.</p>
 </blockquote>
 <p>Output:</p>
-<blockquote><p>Odd numbers: 15, 5, 13, 7, 1<br/>
-Sum: 41<br/>
+<blockquote><p>Odd numbers: 15, 5, 13, 7, 1\
+Sum: 41\
 41 is an odd number.</p>
 </blockquote>
 <h3>Few-Shot Prompting</h3>
 <p>While large-language models demonstrate remarkable zero-shot capabilities (<em>simply feed the task text to the model and ask for results</em>), they still fall short on more complex tasks when using zero-shot prompting. Few-shot prompting can be used as a technique to enable in-context learning where we provide demonstrations in the prompt to steer the model to better performance.</p>
 <p>Prompt:</p>
 <blockquote><p>A "whatpu" is a small, furry animal native to Tanzania. An example of a sentence that uses
-the word whatpu is:<br/>
-We were traveling in Africa and we saw these very cute whatpus.<br/>
+the word whatpu is:\
+We were traveling in Africa and we saw these very cute whatpus.\
 To do a "farduddle" means to jump up and down really fast. An example of a sentence that uses
 the word farduddle is:</p>
 </blockquote>
@@ -135,11 +135,11 @@ the word farduddle is:</p>
 <p>It seems like few-shot prompting is not enough to get reliable responses for the type of reasoning problem. Chain-of-Thought (CoT) prompting enables complex reasoning capabilities through intermediate reasoning steps. You can combine it with few-shot prompting to get better results on more complex tasks that require reasoning before responding.</p>
 <p>&lt;img alt="chain-of-thought" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hcqvzcmxovj31080h2n0i.jpg" width="700"&gt;</p>
 <p>Prompt:</p>
-<blockquote><p>The odd numbers in this group add up to an even number: 4, 8, 9, 15, 12, 2, 1.<br/>
-A: Adding all the odd numbers (9, 15, 1) gives 25. The answer is False.<br/>
-The odd numbers in this group add up to an even number: 17,  10, 19, 4, 8, 12, 24.<br/>
-A: Adding all the odd numbers (17, 19) gives 36. The answer is True.<br/>
-The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1. 
+<blockquote><p>The odd numbers in this group add up to an even number: 4, 8, 9, 15, 12, 2, 1.\
+A: Adding all the odd numbers (9, 15, 1) gives 25. The answer is False.\
+The odd numbers in this group add up to an even number: 17, 10, 19, 4, 8, 12, 24.\
+A: Adding all the odd numbers (17, 19) gives 36. The answer is True.\
+The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1.
 A:</p>
 </blockquote>
 <p>Output:</p>
@@ -154,13 +154,13 @@ A:</p>
 </blockquote>
 <p>The answer is incorrect! Now Let's try with the special prompt.</p>
 <p>Prompt:</p>
-<blockquote><p>I went to the market and bought 10 apples. I gave 2 apples to the neighbor and 2 to the repairman. I then went and bought 5 more apples and ate 1. How many apples did I remain with?<br/>
+<blockquote><p>I went to the market and bought 10 apples. I gave 2 apples to the neighbor and 2 to the repairman. I then went and bought 5 more apples and ate 1. How many apples did I remain with?\
 Let's think step by step.</p>
 </blockquote>
 <p>Output:</p>
-<blockquote><p>First, you started with 10 apples.<br/>
-You gave away 2 apples to the neighbor and 2 to the repairman, so you had 6 apples left.<br/>
-Then you bought 5 more apples, so now you had 11 apples.<br/>
+<blockquote><p>First, you started with 10 apples.\
+You gave away 2 apples to the neighbor and 2 to the repairman, so you had 6 apples left.\
+Then you bought 5 more apples, so now you had 11 apples.\
 Finally, you ate 1 apple, so you would remain with 10 apples.</p>
 </blockquote>
 <p>It's impressive that this simple prompt is effective at this task. This is particularly useful where you don't have too many examples to use in the prompt.</p>
@@ -214,6 +214,9 @@ She was born with a silver spoon in her mouth.
 <li>Use delimiters like triple quotation marks, XML tags, or section titles for clarity.</li>
 <li>Limit additional context in RAG. When providing additional context or documents, include only the most relevant information to prevent the model from overcomplicating its response.</li>
 </ul>
+<h3>Models need tokens to think</h3>
+<p>LLMs don’t reason like humans. They generate tokens sequentially, meaning they need structured generation to think properly. If a model jumps straight to an answer, it might just be guessing. If it walks through the solution step-by-step, it’s more reliable. The computation for the answer is distributed over multiple tokens, which makes it easier.</p>
+<p>For math and logic tasks, it’s best to ask the model to use external tools (i.e. if model can access python interpreter) rather than relying on its own reasoning. For the counting problem, because the model sees tokens not words, here "use code" also works.</p>
 <h3>Prompt Debiasing</h3>
 <p>Depending on their distribution and order within the prompt, exemplars may bias LLM outputs.</p>
 <p>When discussing the distribution of exemplars within a prompt, we are referring to how many exemplars from different classes are present. For example, if you are performing binary sentiment analysis (positive or negative) on tweets, and you provide 3 positive tweets and 1 negative tweet as exemplars, then you have a distribution of 3:1. Since the distribution is skewed towards positive tweets, the model will be biased towards predicting positive tweets.</p>
@@ -305,8 +308,8 @@ const response = await client.responses.create({
     {
       role: "user",
       content: "Write a one-sentence bedtime story about a unicorn.",
-    }
-  ]
+    },
+  ],
 });
 
 console.log(response.output_text);
