--- a/kexizeroing.github.io/A quick way to serve HTTPS localhost.html
+++ b/kexizeroing.github.io/A quick way to serve HTTPS localhost.html
@@ -70,20 +70,20 @@ ngrok http http://localhost:8080
 <p>Finally, let's combine the certificates we generated with the Node Express server.</p>
 <pre><code class="lang-sh">mkcert -key-file key.pem -cert-file cert.pem example.com localhost
 </code></pre>
-<pre><code class="lang-js">import https from 'https';
-import fs from 'fs';
-import express from 'express';
+<pre><code class="lang-js">import express from "express";
+import fs from "fs";
+import https from "https";
 
 const app = express();
 const port = 3000;
 
-app.get('/', (req, res) =&gt; {
-  res.send('Hello, HTTPS World!');
+app.get("/", (req, res) =&gt; {
+  res.send("Hello, HTTPS World!");
 });
 
 // Load SSL/TLS certificates
-const privateKey = fs.readFileSync('key.pem', 'utf8');
-const certificate = fs.readFileSync('cert.pem', 'utf8');
+const privateKey = fs.readFileSync("key.pem", "utf8");
+const certificate = fs.readFileSync("cert.pem", "utf8");
 const credentials = { key: privateKey, cert: certificate };
 
 // Create an HTTPS server
