--- a/kexizeroing.github.io/Built-in AI and run local LLMs.html
+++ b/kexizeroing.github.io/Built-in AI and run local LLMs.html
@@ -70,7 +70,7 @@
 <p>To trigger the model download and create the language model session, call the asynchronous <code>LanguageModel.create()</code> function. If the response to <code>availability()</code> was <code>'downloadable'</code>, it's best practice to listen for download progress. This way, you can inform the user in case the download takes time.</p>
 <pre><code class="lang-js">const session = await LanguageModel.create({
   monitor(m) {
-    m.addEventListener('downloadprogress', (e) =&gt; {
+    m.addEventListener("downloadprogress", (e) =&gt; {
       console.log(`Downloaded ${e.loaded * 100}%`);
     });
   },
@@ -78,12 +78,14 @@
 </code></pre>
 <h3>API usage</h3>
 <p>Before translating text from one language to another, you must first determine what language is used in the given text.</p>
-<pre><code class="lang-js">if ('LanguageDetector' in self) {
+<pre><code class="lang-js">if ("LanguageDetector" in self) {
   // The Language Detector API is available.
 }
 
 const languageDetector = await LanguageDetector.create();
-const result = await languageDetector.detect("I’m a software engineer and I have a great interest in web development.");
+const result = await languageDetector.detect(
+  "I’m a software engineer and I have a great interest in web development.",
+);
 
 console.log(result[0]);
 // {
@@ -92,7 +94,7 @@ console.log(result[0]);
 // }
 </code></pre>
 <p>Users can participate in support chats in their first language, and your site can translate it into the language your support agents use, before it leaves the user's device.</p>
-<pre><code class="lang-js">if ('Translator' in self) {
+<pre><code class="lang-js">if ("Translator" in self) {
   // The Translator API is supported.
 }
 
@@ -105,31 +107,35 @@ const translator = await Translator.create({
   //   });
   // },
 });
-const result = await translator.translate("I’m a software engineer and I have a great interest in web development.");
+const result = await translator.translate(
+  "I’m a software engineer and I have a great interest in web development.",
+);
 
 console.log(result);
 // '我是一名软件工程师，我对 Web 开发非常感兴趣。'
 </code></pre>
 <p>The Summarizer API can be used to generate different types of summaries in varied lengths and formats, such as sentences, paragraphs, bullet point lists, and more.</p>
-<pre><code class="lang-js">if ('Summarizer' in self) {
+<pre><code class="lang-js">if ("Summarizer" in self) {
   // The Summarizer API is supported.
 }
 
 const options = {
-  sharedContext: 'This is a user’s profile.', // Additional shared context that can help the summarizer.
-  type: 'key-points', // key-points (default), tldr, teaser, and headline
-  format: 'markdown', // markdown (default) and plain-text
-  length: 'medium',  // short, medium (default), and long
+  sharedContext: "This is a user’s profile.", // Additional shared context that can help the summarizer.
+  type: "key-points", // key-points (default), tldr, teaser, and headline
+  format: "markdown", // markdown (default) and plain-text
+  length: "medium", // short, medium (default), and long
 };
 
 const summarizer = await Summarizer.create(options);
-const result = await summarizer.summarize("I’m a software engineer and I have a great interest in web development. I love building web applications and exploring new technologies. My goal is to create user-friendly and efficient software solutions.");
+const result = await summarizer.summarize(
+  "I’m a software engineer and I have a great interest in web development. I love building web applications and exploring new technologies. My goal is to create user-friendly and efficient software solutions.",
+);
 
 console.log(result);
-// * The user is a software engineer with an interest in web development. 
-// * Their goal is to create user-friendly and efficient software solutions. 
+// * The user is a software engineer with an interest in web development.
+// * Their goal is to create user-friendly and efficient software solutions.
 // * They enjoy building web applications and exploring new technologies.
-// * The text provides a brief introduction to the user's professional background and interests. 
+// * The text provides a brief introduction to the user's professional background and interests.
 // * The profile lacks further details such as specific projects or accomplishments.
 </code></pre>
 <p>With the Prompt API, you can send natural language requests to Gemini Nano in the browser.</p>
@@ -185,7 +191,7 @@ for await (const chunk of stream) {
 </ol>
 <pre><code class="lang-js">import { pipeline } from "@huggingface/transformers";
 const segmenter = await pipeline(
-  "background-removal",       // Task
+  "background-removal", // Task
   "onnx-community/BEN2-ONNX", // Custom model
 );
 const result = await segmenter("input.png");
