--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -96,7 +96,7 @@
 <p><a href="https://codepen.io/jh3y/pen/GRwwWoV">https://codepen.io/jh3y/pen/GRwwWoV</a></p>
 <pre><code class="lang-css">.b:has(+ .b:hover),
 .b:hover + .b {
-  flex: calc(0.2 + (sin(30deg) * 1.5));
+  flex: calc(0.2 + sin(30deg) * 1.5);
   translate: 0 calc(sin(30deg) * -75%);
 }
 </code></pre>
@@ -248,8 +248,12 @@
 }
 
 @keyframes fade {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 </code></pre>
 <p>For shared element transitions, the set up like: First, in CSS, give each card an individual <code>view-transition-name</code>. Then, in JavaScript, wrap the DOM mutation in a view transition <code>document.startViewTransition</code>.</p>
@@ -354,15 +358,21 @@
     div {
       animation: spin linear both;
       animation-timeline: scroll();
-    } 
+    }
   }
 }
 </code></pre>
 <p>Next, change <code>scroll()</code> to <code>view()</code>, which means we can trigger animations when elements enter and exit the viewport. This time 0% is when the element is entering the scroll area and 100% is when it’s about to go out of that scroll area.</p>
 <pre><code class="lang-css">/* Animate images: https://codepen.io/una/pen/KKYZzJM */
 @keyframes appear {
-  from { opacity: 0; scale: 0.8; }
-  to { opacity: 1; scale: 1; }
+  from {
+    opacity: 0;
+    scale: 0.8;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
 
 img {
@@ -392,7 +402,7 @@ img {
 }
 
 @keyframes detect-scroll {
-  from, to  {
+  from, to {
     --can-scroll: 1;
   }
 }
@@ -446,7 +456,8 @@ img:hover {
   border: solid 4px #0000;
   border-radius: 16px;
   /* `0 0` means no transition resulting in a solid fill of the specified color. */
-  background: conic-gradient(rgb(0 0 0) 0 0) padding-box,
+  background:
+    conic-gradient(rgb(0 0 0) 0 0) padding-box,
     linear-gradient(45deg, #ffbc00, #ff0058) border-box;
 }
 
@@ -465,11 +476,13 @@ img:hover {
   grid-template-rows: repeat(10, 1fr);
 }
 li {
-  &amp;:nth-of-type(2) { grid-column: 18; } /* pushed to the last column */
+  &amp;:nth-of-type(2) {
+    grid-column: 18;
+  } /* pushed to the last column */
 }
 
 /* filter */
-body:has(#alk:checked) li:not(.alk) { 
+body:has(#alk:checked) li:not(.alk) {
   opacity: 0.2;
 }
 </code></pre>
