--- a/kexizeroing.github.io/CSS list-style-type styling.html
+++ b/kexizeroing.github.io/CSS list-style-type styling.html
@@ -41,9 +41,7 @@ li {
   counter-increment: count;
 }
 li::before {
-  content:
-    "[" counter(count) "] == ["
-    counter(count, lower-alpha) "]";
+  content: "[" counter(count) "] == [" counter(count, lower-alpha) "]";
 }
 
 /* It will render as:
