--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -32,13 +32,13 @@
 </li>
 <li><p>Find element that is causing the showing of horizontal scrollbar.</p>
 <pre><code class="lang-js">let all = document.getElementsByTagName("*"),
-    rect,
-    docWidth = document.documentElement.offsetWidth;
+  rect,
+  docWidth = document.documentElement.offsetWidth;
 for (let i = 0; i &lt; all.length; i++) {
   rect = all[i].getBoundingClientRect();
-  if (rect.right &gt; docWidth || rect.left &lt; 0){
+  if (rect.right &gt; docWidth || rect.left &lt; 0) {
     console.log(all[i]);
-    all[i].style.outline = '1px solid red';
+    all[i].style.outline = "1px solid red";
   }
 }
 </code></pre>
@@ -184,12 +184,12 @@ html {
 
 .card__thumb,
 .card__content {
-  grid-column: 1/2;  /* we can also use `grid-area: 1/-1` */
+  grid-column: 1/2; /* we can also use `grid-area: 1/-1` */
   grid-row: 1/2;
 }
 
 /* grid-area: 2 / 1 / 2 / 4; */
-/* grid-row-start / grid-column-start / grid-row-end / grid-column-end
+/* grid-row-start / grid-column-start / grid-row-end / grid-column-end*/
 </code></pre>
 <p>&lt;img alt="stack-elements-with-grid" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/stack-elements-grid.png" width="650" /&gt;</p>
 </li>
