--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -17,29 +17,29 @@
 <li><strong>mode</strong>: The mode you want to use for the request, e.g., <code>cors</code>, <code>no-cors</code>, or <code>same-origin</code>. (<code>cors</code> is default)</li>
 <li><strong>credentials</strong>: The request credentials you want to use for the request, e.g., <code>omit</code>, <code>same-origin</code>, or <code>include</code>. To automatically send cookies for the current domain, this option must be provided. (<code>same-origin</code> is default)</li>
 </ul>
-<pre><code class="lang-javascript">async function postData(url = '', data = {}) {
+<pre><code class="lang-javascript">async function postData(url = "", data = {}) {
   const response = await fetch(url, {
-    method: 'POST',
-    cache: 'no-cache',
+    method: "POST",
+    cache: "no-cache",
     headers: {
-      'Content-Type': 'application/json'
+      "Content-Type": "application/json",
     },
-    body: JSON.stringify(data)
+    body: JSON.stringify(data),
   });
 
   return response.json();
 }
 
-postData('https://example.com/answer', { answer: 42 })
+postData("https://example.com/answer", { answer: 42 })
   .then(data =&gt; {
     console.log(data);
   });
 </code></pre>
 <pre><code class="lang-javascript">// Checking if the fetch is successful
-fetch('flowers.jpg')
+fetch("flowers.jpg")
   .then(response =&gt; {
     if (!response.ok) {
-      throw new Error('Network response was not ok');
+      throw new Error("Network response was not ok");
     }
     return response.blob();
   })
@@ -47,37 +47,37 @@ fetch('flowers.jpg')
     myImage.src = URL.createObjectURL(myBlob);
   })
   .catch(error =&gt; {
-    console.error('There has been a problem with your fetch operation:', error);
+    console.error("There has been a problem with your fetch operation:", error);
   });
 </code></pre>
 <pre><code class="lang-javascript">// Uploading a file
 const formData = new FormData();
-const fileField = document.querySelector('input[type="file"]');
+const fileField = document.querySelector("input[type=\"file\"]");
 
-formData.append('username', 'abc123');
-formData.append('avatar', fileField.files[0]);
+formData.append("username", "abc123");
+formData.append("avatar", fileField.files[0]);
 
-fetch('https://example.com/profile/avatar', {
-  method: 'PUT',
-  body: formData  // this automatically sets the "Content-Type" header to `multipart/form-data`
+fetch("https://example.com/profile/avatar", {
+  method: "PUT",
+  body: formData, // this automatically sets the "Content-Type" header to `multipart/form-data`
 })
   .then(response =&gt; response.json())
   .then(result =&gt; {
-    console.log('Success:', result);
+    console.log("Success:", result);
   })
   .catch(error =&gt; {
-    console.error('Error:', error);
+    console.error("Error:", error);
   });
 </code></pre>
 <pre><code class="lang-javascript">// URLSearchParams as a fetch body
 async function isPositive(value) {
   const response = await fetch(`http://text-processing.com/api/sentiment/`, {
-    method: 'POST',
+    method: "POST",
     // this automatically sets the "Content-Type" header to `application/x-www-form-urlencoded`
-    body: new URLSearchParams({ text: value }) 
+    body: new URLSearchParams({ text: value }),
   });
   const json = await response.json();
-  return json.label === 'pos';
+  return json.label === "pos";
 }
 </code></pre>
 <h3>Abort API</h3>
@@ -105,14 +105,14 @@ function fetchVideo() {
     });
 }
 </code></pre>
-<pre><code class="lang-js">const controller = new AbortController()
+<pre><code class="lang-js">const controller = new AbortController();
 
-controller.signal.addEventListener('abort', () =&gt; {
-  console.log(controller.signal.reason) // "user cancellation"
-})
+controller.signal.addEventListener("abort", () =&gt; {
+  console.log(controller.signal.reason); // "user cancellation"
+});
 
 // Provide a custom reason to this abort.
-controller.abort('user cancellation')
+controller.abort("user cancellation");
 </code></pre>
 <p>You can use <code>AbortSignal.timeout()</code> to automatically create the abort signal which will abort after that duration. No need to create an <code>AbortController</code> if all you want is to cancel a request after it exceeds a timeout.</p>
 <pre><code class="lang-js">try {
@@ -130,11 +130,11 @@ controller.abort('user cancellation')
 }
 </code></pre>
 <pre><code class="lang-js">// `AbortSignal.any()`: will abort whichever is sooner
-const req = await fetch('/api/data', {
+const req = await fetch("/api/data", {
   signal: AbortSignal.any([
     AbortSignal.timeout(2000),
-    controller.signal
-  ])
+    controller.signal,
+  ]),
 });
 </code></pre>
 <h3>Build on Fetch</h3>
@@ -188,11 +188,11 @@ Content-Disposition: attachment; filename="picture.png"
 <h3>Process the form data in Node.js</h3>
 <ol>
 <li><p>What does <code>body-parser</code> do with express? Originally, there was only <code>body-parser</code>, not <code>express.json()</code>. <code>body-parser</code> extracts the entire body portion of an incoming request stream and exposes it on <code>req.body</code>. As of Express version 4.16+, their own <code>body-parser</code> implementation is now included in the default Express package so there is no need for you to download another dependency.</p>
-<pre><code class="lang-js"> // for JSON
- app.use(express.json());
+<pre><code class="lang-js">// for JSON
+app.use(express.json());
 
- // for form data
- app.use(express.urlencoded({ extended: false }));
+// for form data
+app.use(express.urlencoded({ extended: false }));
 </code></pre>
 <blockquote><p>About <code>{ extended: false }</code>:</p>
 <ul>
@@ -202,21 +202,19 @@ Content-Disposition: attachment; filename="picture.png"
 <p>Test the differences: <a href="https://stackblitz.com/edit/node-xa27zd?file=index.js">https://stackblitz.com/edit/node-xa27zd?file=index.js</a></p>
 </blockquote>
 </li>
-</ol>
-<ol>
 <li><p>However, <code>body-parser</code> does not handle multipart bodies. <a href="https://github.com/expressjs/multer">Multer</a> is a Node.js middleware for handling <code>multipart/form-data</code>, which is primarily used for uploading files.</p>
-<pre><code class="lang-js"> const express = require('express')
- const multer  = require('multer')
- // where to upload the files.
- // In case you omit the options object, the files will be kept in memory and never written to disk.
- const upload = multer({ dest: 'uploads/' })
+<pre><code class="lang-js">const express = require("express");
+const multer = require("multer");
+// where to upload the files.
+// In case you omit the options object, the files will be kept in memory and never written to disk.
+const upload = multer({ dest: "uploads/" });
 
- const app = express()
+const app = express();
 
- app.post('/profile', upload.single('avatar'), function (req, res, next) {
-   // req.file is the `avatar` file, which is the file you uploaded
-   console.log(req.file)
- })
+app.post("/profile", upload.single("avatar"), function(req, res, next) {
+  // req.file is the `avatar` file, which is the file you uploaded
+  console.log(req.file);
+});
 </code></pre>
 </li>
 </ol>
@@ -237,34 +235,34 @@ Content-Disposition: attachment; filename="picture.png"
 <h3>HEAD and GET</h3>
 <p>HEAD requests are just like GET requests, except the body of the response is empty. For example, if a URL might produce a large download, a HEAD request could read its <code>Content-Length</code> header to check the file size without actually downloading it. This kind of request can be used when you want to determine if the content has changed at all - a change in the last modified time or content length usually signifies this. HEAD is also the easiest way to determine if a site is up or down.</p>
 <pre><code class="lang-js">// Test if a file exists without downloading the entire thing
-const { ok } = await fetch('https://xx.com/foo.jpg', { method: 'HEAD' })
-console.log(ok)  // true or false
+const { ok } = await fetch("https://xx.com/foo.jpg", { method: "HEAD" });
+console.log(ok); // true or false
 </code></pre>
 <h2>Headers</h2>
 <p>The Headers interface allows you to create your own headers object via the <code>Headers()</code> constructor. A Headers object has an associated header list, and you can add to this using methods like <code>append()</code>. For security reasons, <strong>some headers can only be controlled by the user agent</strong>. These headers cannot be modified programmatically, like <code>Accept-Charset</code>, <code>Accept-Encoding</code>, <code>Access-Control-Request-Headers</code>, <code>Access-Control-Request-Method</code>, <code>Cookie</code>, <code>Date</code>, <code>Host</code>, <code>Origin</code>. All of the Headers methods throw a <code>TypeError</code> if a header name is used that is not a valid HTTP Header name.</p>
-<pre><code class="lang-javascript">const content = 'Hello World';
+<pre><code class="lang-javascript">const content = "Hello World";
 
 // add a new header using append()
 const myHeaders = new Headers();
-myHeaders.append('Content-Type', 'text/plain');
-myHeaders.append('Content-Length', content.length.toString());
-myHeaders.append('X-Custom-Header', 'ProcessThisImmediately');
+myHeaders.append("Content-Type", "text/plain");
+myHeaders.append("Content-Length", content.length.toString());
+myHeaders.append("X-Custom-Header", "ProcessThisImmediately");
 
 // passing an object literal to the constructor
 const myHeaders = new Headers({
-  'Content-Type': 'text/plain',
-  'Content-Length': content.length.toString(),
-  'X-Custom-Header': 'ProcessThisImmediately'
+  "Content-Type": "text/plain",
+  "Content-Length": content.length.toString(),
+  "X-Custom-Header": "ProcessThisImmediately",
 });
 
-console.log(myHeaders.has('Content-Type')); // true
-console.log(myHeaders.has('Set-Cookie'));   // false
+console.log(myHeaders.has("Content-Type")); // true
+console.log(myHeaders.has("Set-Cookie")); // false
 
-myHeaders.append('X-Custom-Header', 'AnotherValue');
-console.log(myHeaders.get('X-Custom-Header')); // ['ProcessThisImmediately', 'AnotherValue']
+myHeaders.append("X-Custom-Header", "AnotherValue");
+console.log(myHeaders.get("X-Custom-Header")); // ['ProcessThisImmediately', 'AnotherValue']
 
-myHeaders.delete('X-Custom-Header');
-console.log(myHeaders.get('X-Custom-Header')); // null
+myHeaders.delete("X-Custom-Header");
+console.log(myHeaders.get("X-Custom-Header")); // null
 </code></pre>
 <p>A fetch metadata request header like <code>Sec-Fetch-Dest</code>, <code>Sec-Fetch-Mode</code>, <code>Sec-Fetch-Site</code> provides additional information about the context from which the request originated. These headers are prefixed with <code>Sec-</code>, and hence have <a href="https://developer.mozilla.org/en-US/docs/Glossary/Forbidden_header_name">forbidden header names</a>. As such, they cannot be modified from JavaScript.</p>
 <ul>
@@ -282,7 +280,7 @@ console.log(myHeaders.get('X-Custom-Header')); // null
 </ul>
 <p>The body of Response allows you to declare what its content type is and how it should be handled (<code>.json()</code>, <code>.blob()</code>, <code>.arrayBuffer()</code>, <code>.formData()</code>, <code>.text()</code>). For example, The <code>json()</code> method of the Response interface takes a Response stream and reads it to completion. It returns a promise which resolves with the result of parsing the body text as JSON.</p>
 <p>An important concept is that Response bodies can only be consumed once.</p>
-<pre><code class="lang-js">const response = new Response('{"message": "hello"}');
+<pre><code class="lang-js">const response = new Response("{\"message\": \"hello\"}");
 
 // This works
 const data = await response.json();
@@ -310,7 +308,7 @@ while (true) {
   processChunk(value);
 }
 
-// You can create your own ReadableStream 
+// You can create your own ReadableStream
 const stream = new ReadableStream({
   start(controller) {
     controller.enqueue("First chunk");
@@ -343,7 +341,7 @@ fetch(url).then(async response =&gt; {
             controller.close();
             return;
           }
-          // Content-Length and byteLength are not directly comparable 
+          // Content-Length and byteLength are not directly comparable
           // if compression is involved
           loaded += value.byteLength;
           console.log(`Progress: ${Math.round(loaded / total * 100)}%`);
@@ -352,7 +350,7 @@ fetch(url).then(async response =&gt; {
         });
       }
       read();
-    }
+    },
   });
 
   return new Response(stream);
