--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -38,8 +38,8 @@
     for (let i = 0; i &lt; times; i++) {
       request();
     }
-  })
-}
+  });
+};
 
 // test
 const urls = [];
@@ -48,33 +48,33 @@ for (let i = 1; i &lt;= 20; i++) {
 }
 concurrencyRequest(urls, 3).then(res =&gt; {
   console.log(res);
-})
+});
 </code></pre>
 <ol>
-<li>Implement <code>Promise.all</code> and <code>Promise.resolve</code> by yourself.
-<code>``js
-Promise._all = function (promises) {
-return new Promise((resolve, reject) =&gt; {
- let counter = 0;
- const result = [];
- for (let i = 0; i &lt; promises.length; i++) {
-   // Use</code>Promise.resolve(promises[i])<code>instead of</code>promises[i].then()<code>, 
-   // if it is non-promise value, wrap it
-   // if already promise,</code>Promise.resolve(promises[i])` returns the same Promise
-   Promise.resolve(promises[i]).then(res =&gt; {<pre><code> result[i] = res;
- counter += 1;
- if (counter === promises.length) {
-   resolve(result);
- }
-</code></pre>
-   }, err =&gt; {<pre><code> reject(err);
-</code></pre>
-   });
- }
-});
-};</li>
+<li>Implement <code>Promise.all</code> and <code>Promise.resolve</code> by yourself.</li>
 </ol>
-<p>Promise._resolve = function (value) {
+<pre><code class="lang-js">Promise._all = function(promises) {
+  return new Promise((resolve, reject) =&gt; {
+    let counter = 0;
+    const result = [];
+    for (let i = 0; i &lt; promises.length; i++) {
+      // Use `Promise.resolve(promises[i])` instead of `promises[i].then()`,
+      // if it is non-promise value, wrap it
+      // if already promise, `Promise.resolve(promises[i])` returns the same Promise
+      Promise.resolve(promises[i]).then(res =&gt; {
+        result[i] = res;
+        counter += 1;
+        if (counter === promises.length) {
+          resolve(result);
+        }
+      }, err =&gt; {
+        reject(err);
+      });
+    }
+  });
+};
+
+Promise._resolve = function(value) {
   if (value instanceof Promise) {
     return value;
   } else {
@@ -82,33 +82,34 @@ return new Promise((resolve, reject) =&gt; {
       resolve(value);
     });
   }
-};</p>
-<pre><code>
-3. Implement `debounce` and `throttle`.
-```js
-function debounce(fn, delay) {
-  let timer = null
+};
+</code></pre>
+<ol>
+<li>Implement <code>debounce</code> and <code>throttle</code>.</li>
+</ol>
+<pre><code class="lang-js">function debounce(fn, delay) {
+  let timer = null;
 
   return (...args) =&gt; {
     if (timer) {
-      clearTimeout(timer)
-      timer = null
+      clearTimeout(timer);
+      timer = null;
     }
     timer = setTimeout(() =&gt; {
-      fn(...args)
-    }, delay)
-  }
+      fn(...args);
+    }, delay);
+  };
 }
 
 function throttle(fn, delay) {
-  let currentTime = Date.now()
+  let currentTime = Date.now();
 
   return (...args) =&gt; {
     if (Date.now() - currentTime &gt; delay) {
-      fn(...args)
-      currentTime = Date.now()
+      fn(...args);
+      currentTime = Date.now();
     }
-  }
+  };
 }
 </code></pre>
 <ol>
@@ -123,41 +124,45 @@ function throttle(fn, delay) {
 };
 </code></pre>
 <ol>
-<li>Convert a list of objects into a tree.
-```js
-let list = [
-{ id: 1, name: 'node1', pid: 0 },
-{ id: 2, name: 'node2', pid: 1 },
-{ id: 3, name: 'node3', pid: 1 },
-{ id: 4, name: 'node4', pid: 3 },
-{ id: 5, name: 'node5', pid: 4 },
-{ id: 6, name: 'node6', pid: 0 },
-]</li>
+<li>Convert a list of objects into a tree.</li>
 </ol>
-<p>function listToTree(list) {
-  const map = {}
-  const roots = []</p>
-<p>list.forEach(item =&gt; {
-    map[item.id] = { ...item, children: [] }
-  })</p>
-<p>list.forEach(item =&gt; {
+<pre><code class="lang-js">let list = [
+  { id: 1, name: "node1", pid: 0 },
+  { id: 2, name: "node2", pid: 1 },
+  { id: 3, name: "node3", pid: 1 },
+  { id: 4, name: "node4", pid: 3 },
+  { id: 5, name: "node5", pid: 4 },
+  { id: 6, name: "node6", pid: 0 },
+];
+
+function listToTree(list) {
+  const map = {};
+  const roots = [];
+
+  list.forEach(item =&gt; {
+    map[item.id] = { ...item, children: [] };
+  });
+
+  list.forEach(item =&gt; {
     if (item.pid === 0) {
-      roots.push(map[item.id])
+      roots.push(map[item.id]);
     } else {
       if (map[item.pid]) {
-        map[item.pid].children.push(map[item.id])
+        map[item.pid].children.push(map[item.id]);
       }
     }
-  })</p>
-<p>return roots
-}</p>
-<pre><code>
-6. Use `setTimeout` to invoke a function multiple times in the fixed interval.
-```js
-function repeat(func, times, ms, immediate) {
+  });
+
+  return roots;
+}
+</code></pre>
+<ol>
+<li>Use <code>setTimeout</code> to invoke a function multiple times in the fixed interval.</li>
+</ol>
+<pre><code class="lang-js">function repeat(func, times, ms, immediate) {
   let count = 0;
 
-  return function inner(...args) { 
+  return function inner(...args) {
     if (count === 0 &amp;&amp; immediate) {
       func(...args);
       count++;
@@ -170,7 +175,7 @@ function repeat(func, times, ms, immediate) {
       count++;
       inner(...args);
     }, ms);
-  }
+  };
 }
 
 // test
@@ -178,31 +183,33 @@ const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello");
 </code></pre>
 <ol>
-<li><p>Implement the functionality of <code>lodash.get</code>.
-```js
-function get(obj, path, defaultValue = undefined) {
-const keys = Array.isArray(path) ? path : path.split('.');
-let result = obj;</p>
-<p>for (const key of keys) {
- if (result == null || typeof result !== 'object') {
-   return defaultValue;
- }
- result = result[key];
-}</p>
-<p>return result === undefined ? defaultValue : result;
-}</p>
-</li>
+<li>Implement the functionality of <code>lodash.get</code>.</li>
 </ol>
-<p>// test
+<pre><code class="lang-js">function get(obj, path, defaultValue = undefined) {
+  const keys = Array.isArray(path) ? path : path.split(".");
+  let result = obj;
+
+  for (const key of keys) {
+    if (result == null || typeof result !== "object") {
+      return defaultValue;
+    }
+    result = result[key];
+  }
+
+  return result === undefined ? defaultValue : result;
+}
+
+// test
 const obj = { a: { b: { c: 42 } } };
-console.log(get(obj, 'a.b.c')); // 42
-console.log(get(obj, ['a', 'b', 'c'])); // 42
-console.log(get(obj, 'a.b.d', 'default')); // 'default'
-console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
-<pre><code>
-8. Implement the render function to convert the virtual dom JSON to real DOM.
-```js
-function render(vnode) {
+console.log(get(obj, "a.b.c")); // 42
+console.log(get(obj, ["a", "b", "c"])); // 42
+console.log(get(obj, "a.b.d", "default")); // 'default'
+console.log(get(obj, "x.y.z", "not found")); // 'not found'
+</code></pre>
+<ol>
+<li>Implement the render function to convert the virtual dom JSON to real DOM.</li>
+</ol>
+<pre><code class="lang-js">function render(vnode) {
   const { tag, props, children } = vnode;
   const el = document.createElement(tag);
 
@@ -260,7 +267,7 @@ async function renderJSXToHTML(jsx) {
     return "";
   } else if (Array.isArray(jsx)) {
     const childHtmls = await Promise.all(
-      jsx.map((child) =&gt; renderJSXToHTML(child))
+      jsx.map((child) =&gt; renderJSXToHTML(child)),
     );
     return childHtmls.join("");
   } else if (typeof jsx === "object") {
@@ -288,7 +295,7 @@ async function renderJSXToHTML(jsx) {
         return renderJSXToHTML(returnedJsx);
       }
     }
-  };
+  }
 }
 </code></pre>
 <ol>
@@ -298,14 +305,14 @@ async function renderJSXToHTML(jsx) {
   const seen = new Set();
 
   function helper(o) {
-    if (typeof o !== 'object' || o === null) return;
+    if (typeof o !== "object" || o === null) return;
 
     seen.add(o);
 
     for (let key in o) {
-      if (typeof o[key] === 'object' &amp;&amp; o[key] !== null) {
+      if (typeof o[key] === "object" &amp;&amp; o[key] !== null) {
         if (seen.has(o[key])) {
-          o[key] = 'cycle';
+          o[key] = "cycle";
           continue;
         } else {
           helper(o[key]);
@@ -321,7 +328,7 @@ async function renderJSXToHTML(jsx) {
 <pre><code class="lang-js">// 嵌套很深的对象遍历
 // dfs
 function traverseDFS(obj) {
-  if (typeof obj !== 'object' || obj === null) return;
+  if (typeof obj !== "object" || obj === null) return;
 
   for (const key in obj) {
     if (obj.hasOwnProperty(key)) {
@@ -343,7 +350,7 @@ function traverseBFS(obj) {
       if (current.hasOwnProperty(key)) {
         console.log(key, current[key]);
 
-        if (typeof current[key] === 'object' &amp;&amp; current[key] !== null) {
+        if (typeof current[key] === "object" &amp;&amp; current[key] !== null) {
           queue.push(current[key]);
         }
       }
