--- a/kexizeroing.github.io/Functional programming jargon.html
+++ b/kexizeroing.github.io/Functional programming jargon.html
@@ -5,16 +5,16 @@
 <li>Data is immutable: If you want to change data, such as an array, you return a new array with the changes, not the original.</li>
 <li>Functions are stateless: Functions act as if for the first time, every single time. In other words, the function always gives the same return value for the same arguments.</li>
 </ul>
-<blockquote><p>First Steps into Functional Programming: <a href="https://github.com/vakila/functional-workshop">https://github.com/vakila/functional-workshop</a></p>
+<blockquote><p>Intro to functional programming workshop: <a href="https://github.com/vakila/functional-workshop">https://github.com/vakila/functional-workshop</a></p>
 </blockquote>
 <h3>Arity</h3>
 <p>The number of arguments a function takes. From words like unary, binary, ternary, etc.</p>
 <h3>Higher-Order Functions</h3>
 <p>A function which takes a function as an argument and/or returns a function.</p>
-<pre><code class="lang-js">const filter = (predicate, xs) =&gt; xs.filter(predicate)
-const is = (type) =&gt; (x) =&gt; Object(x) instanceof type
+<pre><code class="lang-js">const filter = (predicate, xs) =&gt; xs.filter(predicate);
+const is = (type) =&gt; (x) =&gt; Object(x) instanceof type;
 
-filter(is(Number), [0, 'a', 2, null]) // [0, 2]
+filter(is(Number), [0, "a", 2, null]); // [0, 2]
 </code></pre>
 <h3>Predicate</h3>
 <p>A predicate is a function that returns true or false for a given value. A common use of a predicate is as the callback for array filter.</p>
@@ -22,50 +22,64 @@ filter(is(Number), [0, 'a', 2, null]) // [0, 2]
 <p>Partially applying a function means creating a new function by pre-filling some of the arguments to the original function.</p>
 <pre><code class="lang-js">// Takes a function and some arguments
 const partial = (f, ...args) =&gt;
-  // returns a function that takes the rest of the arguments
-  (...moreArgs) =&gt;
-    // and calls the original function with all of them
-    f(...args, ...moreArgs)
+// returns a function that takes the rest of the arguments
+(...moreArgs) =&gt;
+  // and calls the original function with all of them
+  f(...args, ...moreArgs);
 
 // Something to apply
-const add3 = (a, b, c) =&gt; a + b + c
+const add3 = (a, b, c) =&gt; a + b + c;
 
 // Partially applying `2` and `3` to `add3` gives you a one-argument function
-const fivePlus = partial(add3, 2, 3) // (c) =&gt; 2 + 3 + c
+const fivePlus = partial(add3, 2, 3); // (c) =&gt; 2 + 3 + c
 
-fivePlus(4) // 9
+fivePlus(4); // 9
 </code></pre>
 <h3>Currying</h3>
 <p>The process of converting a function that takes multiple arguments into a function that takes them one at a time. Each time the function is called it only accepts one argument and returns a function that takes one argument until all arguments are passed.</p>
-<pre><code class="lang-js">const sum = (a, b) =&gt; a + b
-const curriedSum = (a) =&gt; (b) =&gt; a + b
+<pre><code class="lang-js">const sum = (a, b) =&gt; a + b;
+const curriedSum = (a) =&gt; (b) =&gt; a + b;
 
-curriedSum(40)(2) // 42
+curriedSum(40)(2); // 42
 
-const add2 = curriedSum(2) // (b) =&gt; 2 + b
-add2(10) // 12
+const add2 = curriedSum(2); // (b) =&gt; 2 + b
+add2(10); // 12
+</code></pre>
+<pre><code class="lang-js">const curry = (fn, arr = []) =&gt; {
+  let len = fn.length;
+
+  return function(...args) {
+    let newArgs = [...arr, ...args];
+
+    if (newArgs.length === len) {
+      return fn(...newArgs);
+    } else {
+      return curry(fn, newArgs);
+    }
+  };
+};
 </code></pre>
 <h3>Function Composition</h3>
 <p>The act of putting two functions together to form a third function where the output of one function is the input of the other.</p>
-<pre><code class="lang-js">const compose = (f, g) =&gt; (a) =&gt; f(g(a))
-const floorAndToString = compose((val) =&gt; val.toString(), Math.floor)
+<pre><code class="lang-js">const compose = (f, g) =&gt; (a) =&gt; f(g(a));
+const floorAndToString = compose((val) =&gt; val.toString(), Math.floor);
 
-floorAndToString(121.212121) // '121'
+floorAndToString(121.212121); // '121'
 </code></pre>
 <h3>Pure Function</h3>
 <p>A function is pure if the return value is only determined by its input values, and does not produce side effects. The function must always return the same result when given the same input.</p>
-<pre><code class="lang-js">const greet = (name) =&gt; `Hi, ${name}`
-greet('Brianne') // 'Hi, Brianne'
+<pre><code class="lang-js">const greet = (name) =&gt; `Hi, ${name}`;
+greet("Brianne"); // 'Hi, Brianne'
 </code></pre>
 <h3>Side effects</h3>
 <p>A function or expression is said to have a side effect if apart from returning a value, it interacts with (reads from or writes to) external mutable state.</p>
-<pre><code class="lang-js">window.name = 'Brianne'
-const greet = () =&gt; `Hi, ${window.name}`
-greet() // "Hi, Brianne"
+<pre><code class="lang-js">window.name = "Brianne";
+const greet = () =&gt; `Hi, ${window.name}`;
+greet(); // "Hi, Brianne"
 
-const differentEveryTime = new Date()
+const differentEveryTime = new Date();
 
-console.log('IO is a side effect!')
+console.log("IO is a side effect!");
 </code></pre>
 <h3>Idempotent</h3>
 <p>A function is idempotent if reapplying it to its result does not produce a different result.</p>
@@ -73,7 +87,7 @@ console.log('IO is a side effect!')
 <p>A contract specifies the obligations and guarantees of the behavior from a function or expression at runtime. This acts as a set of rules that are expected from the input and output of a function or expression, and errors are generally reported whenever a contract is violated.</p>
 <h3>Referential Transparency</h3>
 <p>An expression that can be replaced with its value without changing the behavior of the program is said to be referentially transparent. Given the function greet:</p>
-<pre><code class="lang-js">const greet = () =&gt; 'Hello World!'
+<pre><code class="lang-js">const greet = () =&gt; "Hello World!";
 </code></pre>
 <p>Any invocation of <code>greet()</code> can be replaced with <code>Hello World!</code> hence greet is referentially transparent. This would be broken if greet depended on external state like configuration or a database call.</p>
 <h3>Lambda</h3>
@@ -90,39 +104,40 @@ const add1 = (a) =&gt; a + 1
 <p>Lazy evaluation is a call-by-need evaluation mechanism that delays the evaluation of an expression until its value is needed. In functional languages, this allows for structures like infinite lists, which would not normally be available in an imperative language where the sequencing of commands is significant.</p>
 <pre><code class="lang-js">const rand = function*() {
   while (1 &lt; 2) {
-    yield Math.random()
+    yield Math.random();
   }
-}
+};
 
-const randIter = rand()
-randIter.next()
+const randIter = rand();
+randIter.next();
 </code></pre>
 <h3>Option</h3>
 <p>Option is a sum type (the combination of two types together into another one) with two cases often called <code>Some</code> and <code>None</code>. Option is useful for composing functions that might not return a value. <code>Option</code> is also known as <code>Maybe</code>. <code>Some</code> is sometimes called <code>Just</code>. <code>None</code> is sometimes called <code>Nothing</code>.</p>
 <pre><code class="lang-js">const Some = (v) =&gt; ({
   val: v,
-  map (f) {
-    return Some(f(this.val))
+  map(f) {
+    return Some(f(this.val));
   },
-  chain (f) {
-    return f(this.val)
-  }
-})
+  chain(f) {
+    return f(this.val);
+  },
+});
 
 const None = () =&gt; ({
-  map (f) {
-    return this
+  map(f) {
+    return this;
   },
-  chain (f) {
-    return this
-  }
-})
+  chain(f) {
+    return this;
+  },
+});
 
-const maybeProp = (key, obj) =&gt; typeof obj[key] === 'undefined' ? None() : Some(obj[key])
+const maybeProp = (key, obj) =&gt;
+  typeof obj[key] === "undefined" ? None() : Some(obj[key]);
 </code></pre>
-<pre><code class="lang-ts">type Option&lt;T&gt; = null | { value: T }
-declare let maybeX: Option&lt;number&gt;
+<pre><code class="lang-ts">type Option&lt;T&gt; = null | { value: T };
+declare let maybeX: Option&lt;number&gt;;
 
-const x = maybeX?.value
-const x= maybeX?.value ?? 0
+const x = maybeX?.value;
+const x = maybeX?.value ?? 0;
 </code></pre>
