--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -84,16 +84,16 @@ export const run = async () =&gt; {
   console.log({ res });
   /**
    * {
-   *    res: 
+   *    res:
    *    "What is the capital city of the country below?"
-   *    
+   *
    *    "Country: United States"
    *    "Capital: Washington, D.C."
-   *    
+   *
    *    'Country: Canada'
         'Capital: Ottawa'
 
-        'Country: France' 
+        'Country: France'
         'Capital:'
    * }
    */
@@ -114,7 +114,7 @@ export const run = async () =&gt; {
   // Pass in a list of messages to `call` to start a conversation.
   const response = await chat.call([
     new HumanChatMessage(
-      "What is a good name for a company that makes colorful socks?"
+      "What is a good name for a company that makes colorful socks?",
     ),
   ]);
   console.log(response);
@@ -123,9 +123,9 @@ export const run = async () =&gt; {
 </code></pre>
 <p>OpenAI’s API is not stateful so each time you sent a request to generate a new chat message, you have to pass back any context that might be necessary to allow the model to answer the query at hand. Gives a chain the ability to remember information from previous interactions. This is useful for chatbots and conversation bots. <code>ConversationChain</code> is a simple type of memory that remembers all previous conversations and adds them as context that is passed to the LLM.</p>
 <pre><code class="lang-js">// memory.ts
+import { ConversationChain } from "langchain/chains";
 import { OpenAI } from "langchain/llms";
 import { BufferMemory } from "langchain/memory";
-import { ConversationChain } from "langchain/chains";
 
 export const run = async () =&gt; {
   const model = new OpenAI({});
@@ -147,7 +147,7 @@ export const run = async () =&gt; {
 <pre><code class="lang-js">// agent-basic.ts
 import { OpenAI } from "langchain";
 import { initializeAgentExecutor } from "langchain/agents";
-import { SerpAPI, Calculator } from "langchain/tools";
+import { Calculator, SerpAPI } from "langchain/tools";
 
 export const run = async () =&gt; {
   const model = new OpenAI({ temperature: 0 });
@@ -158,11 +158,12 @@ export const run = async () =&gt; {
   const executor = await initializeAgentExecutor(
     tools,
     model,
-    "zero-shot-react-description"
+    "zero-shot-react-description",
   );
   console.log("Loaded agent.");
 
-  const input = `What are the total number of countries in Africa raised to the power of 3?`;
+  const input =
+    `What are the total number of countries in Africa raised to the power of 3?`;
 
   console.log(`Executing with input "${input}"...`);
 
@@ -178,9 +179,9 @@ export const run = async () =&gt; {
 </code></pre>
 <p>Language models limit the amount of text that you can send to them per request. To overcome this challenge, we need to split the text into smaller chunks. The recommended TextSplitter is the <code>RecursiveCharacterTextSplitter</code>. This will split documents recursively by different characters - starting with <code>"\n\n"</code>, then <code>"\n"</code>, then <code>" "</code>. This is nice because it will try to keep all the semantically relevant content in the same place for as long as possible.</p>
 <pre><code class="lang-js">// recursive_text_splitter.ts
+import fs from "fs";
 import { Document } from "langchain/document";
 import { RecursiveCharacterTextSplitter } from "langchain/text_splitter";
-import fs from "fs";
 import path from "path";
 
 export const run = async () =&gt; {
@@ -206,7 +207,7 @@ import { TextLoader } from "langchain/document_loaders";
 
 export const run = async () =&gt; {
   const loader = new TextLoader(
-    "src/document_loaders/example_data/example.txt"
+    "src/document_loaders/example_data/example.txt",
   );
   const docs = await loader.load();
   console.log({ docs });
@@ -215,7 +216,7 @@ export const run = async () =&gt; {
     docs: [
       Document {
         pageContent: 'this is an example text to see how langchain loads raw text.',
-        metadata: 
+        metadata:
       }
     ]
   }
@@ -224,9 +225,9 @@ export const run = async () =&gt; {
 </code></pre>
 <p>Takes input docs and a question sent to LLM for answer based on relevant docs.</p>
 <pre><code class="lang-js">// question_answering.ts
-import { OpenAI } from "langchain/llms";
 import { loadQAChain } from "langchain/chains";
 import { Document } from "langchain/document";
+import { OpenAI } from "langchain/llms";
 
 export const run = async () =&gt; {
   const model = new OpenAI({});
