--- a/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
+++ b/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
@@ -2,7 +2,7 @@
 <h2>Connection management</h2>
 <p>HTTP mostly relies on TCP for its transport protocol, providing a connection between the client and the server. Opening each TCP connection is a resource-consuming operation. Several messages must be exchanged between the client and the server. Opening and maintaining connections largely impacts the performance of web applications.</p>
 <p>The original model of HTTP, and the default one in HTTP/1.0, is <strong>short-lived connections</strong>. Each HTTP request is completed on its own connection; this means a TCP handshake happens before each HTTP request, and these are serialized.</p>
-<p>A <strong>persistent connection</strong>, also called keep-alive connection, remains open for a period of time, and can be reused for several requests, saving the need for a new TCP handshake. To put it simply, the HTTP server doesn't close the TCP connection after each response but waits some time if some other HTTP request will come over it too. The connection will not stay open forever: idle connections are closed after some time. <em>For example, Nginx <code>keepalive_timeout</code> is the time where the server will keep an idle connection open. If you send a request and then do nothing on this connection, the server will shutdown the connection at 75s after your previous request.</em> In HTTP/1.1, persistence is the default and the connection header is no longer needed, unless the client explicitly asks the server to close the connection by including a <code>Connection: close</code> header in its request, or the server decides to includes a <code>Connection: close</code> header in its response.</p>
+<p>A <strong>persistent connection</strong>, also called keep-alive connection, remains open for a period of time, and can be reused for several requests, saving the need for a new TCP handshake. To put it simply, the HTTP server doesn't close the TCP connection after each response but waits some time if some other HTTP request will come over it too. The connection will not stay open forever: idle connections are closed after some time. _For example, Nginx <code>keepalive_timeout</code> is the time where the server will keep an idle connection open. If you send a request and then do nothing on this connection, the server will shutdown the connection at 75s after your previous request._ In HTTP/1.1, persistence is the default and the connection header is no longer needed, unless the client explicitly asks the server to close the connection by including a <code>Connection: close</code> header in its request, or the server decides to includes a <code>Connection: close</code> header in its response.</p>
 <p>Connection headers are prohibited in HTTP/2 and HTTP/3.</p>
 <h3>HTTP pipelining</h3>
 <p>By default, HTTP requests are issued sequentially. HTTP/1.1 introduced the concept of pipelining so you could send more requests while you were waiting. The server processes the requests and sends the responses in the order they were receive. It allows multiple HTTP requests to be sent over a single TCP, reducing the overhead associated with setting up and tearing down multiple TCP connections.</p>
@@ -55,34 +55,36 @@
 <li>The response ends with a zero-length chunk.</li>
 </ul>
 <p>Note that HTTP/2 specification explicitly forbids the use of the <code>Transfer-Encoding</code> header. HTTP/2 and later provide more efficient mechanisms for data streaming than chunked transfer. Usage of the header in HTTP/2 may likely result in a specific protocol error.</p>
-<pre><code class="lang-js">const http2 = require('http2');
-const fs = require('fs');
+<pre><code class="lang-js">const http2 = require("http2");
+const fs = require("fs");
 
 const server = http2.createSecureServer({
-  key: fs.readFileSync('server.key'),
-  cert: fs.readFileSync('server.crt'),
+  key: fs.readFileSync("server.key"),
+  cert: fs.readFileSync("server.crt"),
 });
 
-server.on('stream', (stream, headers) =&gt; {
+server.on("stream", (stream, headers) =&gt; {
   stream.respond({
-    ':status': 200,
-    'content-type': 'text/html',
+    ":status": 200,
+    "content-type": "text/html",
   });
 
-  stream.write('&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;title&gt;HTTP/2 Streaming&lt;/title&gt;&lt;/head&gt;&lt;body&gt;');
+  stream.write(
+    "&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;title&gt;HTTP/2 Streaming&lt;/title&gt;&lt;/head&gt;&lt;body&gt;",
+  );
 
   setTimeout(() =&gt; {
-    stream.write('&lt;p&gt;First chunk of content streamed.&lt;/p&gt;');
+    stream.write("&lt;p&gt;First chunk of content streamed.&lt;/p&gt;");
   }, 1000);
 
   setTimeout(() =&gt; {
-    stream.write('&lt;p&gt;Final chunk of content streamed.&lt;/p&gt;');
-    stream.end('&lt;/body&gt;&lt;/html&gt;');
+    stream.write("&lt;p&gt;Final chunk of content streamed.&lt;/p&gt;");
+    stream.end("&lt;/body&gt;&lt;/html&gt;");
   }, 2000);
 });
 
 server.listen(3000, () =&gt; {
-  console.log('HTTP/2 server running at https://localhost:3000/');
+  console.log("HTTP/2 server running at https://localhost:3000/");
 });
 </code></pre>
 <h2>HTTP caching</h2>
