--- a/kexizeroing.github.io/HTTP cookies explained and security policy.html
+++ b/kexizeroing.github.io/HTTP cookies explained and security policy.html
@@ -56,14 +56,16 @@ Set-Cookie: mykey=myvalue; SameSite=Strict
 <p>These attacks are possible because web browsers send authentication tokens automatically with every request to the server. It takes advantage of the user's previously authenticated session. An example of a CSRF attack:</p>
 <ol>
 <li>A user signs into <code>www.good-banking-site.com</code>. The server authenticates the user and issues a response that includes an authentication cookie. The site is vulnerable to attack because it trusts any request that it receives with a valid authentication cookie.</li>
-<li>The user visits a malicious site <code>www.bad-crook-site.com</code>. It contains an HTML form similar to the following:<pre><code class="lang-html">&lt;h1&gt;Congratulations! You're a Winner!&lt;/h1&gt;
+<li>The user visits a malicious site <code>www.bad-crook-site.com</code>. It contains an HTML form similar to the following:</li>
+</ol>
+<pre><code class="lang-html">&lt;h1&gt;Congratulations! You're a Winner!&lt;/h1&gt;
 &lt;form action="http://good-banking-site.com/api/account" method="post"&gt;
- &lt;input type="hidden" name="Transaction" value="withdraw"&gt;
- &lt;input type="hidden" name="Amount" value="1000000"&gt;
- &lt;input type="submit" value="Click to collect your prize!"&gt;
+  &lt;input type="hidden" name="Transaction" value="withdraw"&gt;
+  &lt;input type="hidden" name="Amount" value="1000000"&gt;
+  &lt;input type="submit" value="Click to collect your prize!"&gt;
 &lt;/form&gt;
 </code></pre>
-</li>
+<ol>
 <li>The user clicks the submit button. The browser makes the request and automatically includes the authentication cookie for the requested domain <code>www.good-banking-site.com</code>. The server has the user's authentication context and can perform any action that an authenticated user is allowed to perform.</li>
 </ol>
 <p><strong>How to prevent CSRF:</strong></p>
@@ -85,9 +87,9 @@ Set-Cookie: mykey=myvalue; SameSite=Strict
 <p>For example in Vue, whether using templates or render functions, content is automatically escaped. <a href="https://github.com/LeSuisse/vue-dompurify-html/tree/main/packages/vue-dompurify-html">vue-dompurify-html</a> is a "safe" replacement for the <code>v-html</code> directive. The HTML code is sanitized with DOMPurify before being interpreted.</p>
 </blockquote>
 <pre><code class="lang-js">// DOMPurify will strip out everything that contains dangerous HTML
-DOMPurify.sanitize('&lt;img src=x onerror=alert(1)//&gt;'); // becomes &lt;img src="x"&gt;
-DOMPurify.sanitize('&lt;svg&gt;&lt;g/onload=alert(2)//&lt;p&gt;'); // becomes &lt;svg&gt;&lt;g&gt;&lt;/g&gt;&lt;/svg&gt;
-DOMPurify.sanitize('&lt;p&gt;abc&lt;iframe//src=jAva&amp;Tab;script:alert(3)&gt;def&lt;/p&gt;'); // becomes &lt;p&gt;abc&lt;/p&gt;
+DOMPurify.sanitize("&lt;img src=x onerror=alert(1)//&gt;"); // becomes &lt;img src="x"&gt;
+DOMPurify.sanitize("&lt;svg&gt;&lt;g/onload=alert(2)//&lt;p&gt;"); // becomes &lt;svg&gt;&lt;g&gt;&lt;/g&gt;&lt;/svg&gt;
+DOMPurify.sanitize("&lt;p&gt;abc&lt;iframe//src=jAva&amp;Tab;script:alert(3)&gt;def&lt;/p&gt;"); // becomes &lt;p&gt;abc&lt;/p&gt;
 </code></pre>
 <p>It’s recommended to avoid storing any sensitive information in local storage where authentication would be assumed. You can trivially read data stored in local storage with <code>Object.entries(localStorage)</code>. This means if your website is vulnerable to XSS attacks, where a third party can run arbitrary scripts, your users’ tokens can be easily stolen. Cookies, on the other hand, can’t be read by client-side JS if you add the <code>HttpOnly</code> flag.</p>
 <p>Store data inside of your users browser: <a href="https://rxdb.info/articles/localstorage-indexeddb-cookies-opfs-sqlite-wasm.html">https://rxdb.info/articles/localstorage-indexeddb-cookies-opfs-sqlite-wasm.html</a></p>
@@ -103,12 +105,12 @@ DOMPurify.sanitize('&lt;p&gt;abc&lt;iframe//src=jAva&amp;Tab;script:alert(3)&gt;
   for (let key in localStorage) {
     if (localStorage.hasOwnProperty(key)) {
       const item = localStorage.getItem(key);
-      // The `size` read-only property of the Blob returns 
+      // The `size` read-only property of the Blob returns
       // the number of bytes of data contained within the Blob.
       totalSize += item ? new Blob([item]).size : 0;
     }
   }
-  return Math.round(totalSize / 1024) + ' KB';
+  return Math.round(totalSize / 1024) + " KB";
 }
 </code></pre>
 <h3>Content Security Policy</h3>
@@ -134,9 +136,9 @@ DOMPurify.sanitize('&lt;p&gt;abc&lt;iframe//src=jAva&amp;Tab;script:alert(3)&gt;
 <li>Security concerns — In some cases, files could be linked for malicious purposes.</li>
 </ul>
 <p>Hotlink protection typically checks the <code>Referer</code> HTTP header to see which page requested the file. Most CDNs have a “Hotlink Protection” toggle that works by automatically checking the referrer before serving assets.</p>
-<p>Signed URLs:<br/>
+<p>Signed URLs:\
 Instead of letting users access videos directly by a fixed URL, you generate a temporary, signed URL that includes an expiry timestamp, and signed with a secret key. (<code>https://cdn.yourdomain.com/video.mp4?expires=1723119800&amp;signature=4d2f0d1a...</code>)</p>
-<p>For adaptive streaming:<br/>
+<p>For adaptive streaming:\
 The <code>.m3u8</code> playlist URL is signed and expires quickly. Each media chunk request is also signed, and the chunk URLs will expire quickly.</p>
 <h3>Handling Cross-Domain Cookies in iframes</h3>
 <p>Modern browsers have increasingly strict rules around third-party cookies. To allow cookies in cross-origin iframes, the server must explicitly set the cookie with <code>SameSite=None; Secure</code>. However, starting with Chrome 118, there's a gradual rollout to block third-party cookies, regardless of this setting. This change is part of Chrome’s Privacy Sandbox initiative.</p>
