--- a/kexizeroing.github.io/Intro to Authorization and Authentication.html
+++ b/kexizeroing.github.io/Intro to Authorization and Authentication.html
@@ -60,7 +60,7 @@
 <li><a href="https://github.com/panva/jose">jose</a> is JavaScript module for JSON Object Signing and Encryption.</li>
 </ul>
 </blockquote>
-<pre><code class="lang-js">// This library doesn't validate the token, any well-formed JWT can be decoded. 
+<pre><code class="lang-js">// This library doesn't validate the token, any well-formed JWT can be decoded.
 import { jwtDecode } from "jwt-decode";
 
 const token = "eyJ0eXAiO...// jwt token";
@@ -69,10 +69,10 @@ const decoded = jwtDecode(token);
 console.log(decoded);
 
 /* prints:
- * { 
+ * {
  *   foo: "bar",
  *   exp: 1393286893,
- *   iat: 1393268893  
+ *   iat: 1393268893
  * }
  */
 </code></pre>
@@ -96,7 +96,7 @@ useLayoutEffect(() =&gt; {
         config.headers.Authorization = `Bearer ${token}`;
       }
       return config;
-    }
+    },
   );
 
   return () =&gt; {
@@ -115,7 +115,9 @@ useLayoutEffect(() =&gt; {
       if (error.response?.status === 401 &amp;&amp; !originalRequest._retry) {
         originalRequest._retry = true;
         try {
-          const res = await axios.get("/api/refresh", { withCredentials: true });
+          const res = await axios.get("/api/refresh", {
+            withCredentials: true,
+          });
           const newToken = res.data.accessToken;
 
           setAccessToken(newToken);
@@ -129,9 +131,9 @@ useLayoutEffect(() =&gt; {
       }
 
       return Promise.reject(error);
-    }
+    },
   );
-})
+});
 </code></pre>
 <blockquote><p>When the Access Token expires and you get a 401 error, you make a request to the "Token Endpoint", with a valid Refresh Token, and it will return a new Access Token and Refresh Token pair. If the Refresh Token expires due to the user not using the service for a long time, they will need to re-establish the connection by going through the Authorization Code Flow again.</p>
 </blockquote>
@@ -153,18 +155,18 @@ useLayoutEffect(() =&gt; {
 <p>A JWT needs to be stored in a safe place inside the user’s browser. If you store it inside local storage, it’s accessible by any script inside your page. This is as bad as it sounds; an XSS attack could give an external attacker access to the token.</p>
 <p>Storing the JWT token in a httponly, secure, same-site cookie is currently considered as the most secure option for SPAs, but in this scenario you will not be able to add its content to the Authorization header. You either need to store tokens directly in the JS code, or you need to add a proxy between the APIs and your SPA. The proxy will extract the token from the cookie and place it in the Authorization header.</p>
 <p>Take <a href="https://github.com/auth0/node-jsonwebtoken">jsonwebtoken</a> for node.js as an example.</p>
-<pre><code class="lang-js">import jwt from 'jsonwebtoken';
+<pre><code class="lang-js">import jwt from "jsonwebtoken";
 
 // generate token
 const generateToken = (res, userId) =&gt; {
   const token = jwt.sign({ userId }, process.env.JWT_SECRET, {
-    expiresIn: '30d',
+    expiresIn: "30d",
   });
 
-  res.cookie('jwt', token, {
+  res.cookie("jwt", token, {
     httpOnly: true,
-    secure: process.env.NODE_ENV !== 'development', // Use secure cookies in production
-    sameSite: 'strict', // Prevent CSRF attacks
+    secure: process.env.NODE_ENV !== "development", // Use secure cookies in production
+    sameSite: "strict", // Prevent CSRF attacks
     maxAge: 30 * 24 * 60 * 60 * 1000, // 30 days
   });
 };
@@ -182,11 +184,11 @@ const protect = async (req, res, next) =&gt; {
     } catch (error) {
       console.error(error);
       res.status(401);
-      throw new Error('Not authorized, token failed');
+      throw new Error("Not authorized, token failed");
     }
   } else {
     res.status(401);
-    throw new Error('Not authorized, no token');
+    throw new Error("Not authorized, no token");
   }
 };
 </code></pre>
