--- a/kexizeroing.github.io/Intro to Bun.html
+++ b/kexizeroing.github.io/Intro to Bun.html
@@ -81,7 +81,7 @@ Bun.serve({
         return new Response("404!");
     }
   },
-})
+});
 </code></pre>
 <p>Bun provides a set of optimized APIs for reading and writing files. A <code>BunFile</code> represents a lazily-loaded file; initializing it does not actually read the file from disk.</p>
 <pre><code class="lang-js">const foo = Bun.file("foo.txt");
@@ -95,12 +95,12 @@ const data = `It was the best of times, it was the worst of times.`;
 await Bun.write("output.txt", data);
 </code></pre>
 <p>The <code>import.meta</code> object is a way for a module to access information about itself. It's part of the JavaScript language, but its contents are not standardized. Each "host" (browser, runtime, etc) is free to implement any properties it wishes on the <code>import.meta</code> object.</p>
-<pre><code class="lang-js">import.meta.dir;   // =&gt; "/path/to/project"
-import.meta.file;  // =&gt; "file.ts"
-import.meta.path;  // =&gt; "/path/to/project/file.ts"
-import.meta.url;   // =&gt; "file:///path/to/project/file.ts"
+<pre><code class="lang-js">import.meta.dir; // =&gt; "/path/to/project"
+import.meta.file; // =&gt; "file.ts"
+import.meta.path; // =&gt; "/path/to/project/file.ts"
+import.meta.url; // =&gt; "file:///path/to/project/file.ts"
 
-import.meta.env;   // An alias to `process.env`
+import.meta.env; // An alias to `process.env`
 </code></pre>
 <h2>Package Manager</h2>
 <ol>
@@ -122,11 +122,11 @@ import.meta.env;   // An alias to `process.env`
 <p>Like the Bun runtime, the bundler supports an array of file types out of the box (<code>js</code>, <code>jsx</code>, <code>ts</code>, <code>tsx</code>, <code>.json</code>, <code>.txt</code>, <code>.node</code>). If the bundler encounters an import with an unrecognized extension, it treats the imported file as an external file.</p>
 <p>Bun's fast native bundler is now in beta. It can be used via the bun build CLI command or the <code>Bun.build()</code> JavaScript API. For each file specified in entrypoints, Bun will generate a new bundle. This bundle will be written to disk in the <code>./out</code> directory.</p>
 <pre><code class="lang-js">await Bun.build({
-  entrypoints: ['./index.tsx'],
-  outdir: './out',
+  entrypoints: ["./index.tsx"],
+  outdir: "./out",
   minify: true,
-  plugins: [ /* ... */ ]
-})
+  plugins: [/* ... */],
+});
 </code></pre>
 <blockquote><p>Bun's bundler API is inspired heavily by <code>esbuild</code>. Migrating to Bun's bundler from <code>esbuild</code> should be relatively painless. Bun's bundler does not include a built-in development server or file watcher. It's just a bundler.</p>
 </blockquote>
@@ -151,7 +151,7 @@ bun test ./test/specific-file.test.ts
 bun test --timeout 20
 bun test --watch
 </code></pre>
-<pre><code class="lang-js">import { expect, test, describe } from "bun:test";
+<pre><code class="lang-js">import { describe, expect, test } from "bun:test";
 
 describe("arithmetic", () =&gt; {
   test("2 + 2", () =&gt; {
