--- a/kexizeroing.github.io/Intro to Protocol Buffers (Protobuf).html
+++ b/kexizeroing.github.io/Intro to Protocol Buffers (Protobuf).html
@@ -195,7 +195,7 @@ const t = initTRPC.create();
 export const appRouter = t.router({
   getUser: t.procedure
     .input(
-      z.object({ name: z.string() })
+      z.object({ name: z.string() }),
     )
     .query(({ input }) =&gt; {
       return {
@@ -208,14 +208,14 @@ export type AppRouter = typeof appRouter;
 </code></pre>
 <p>A <code>procedure</code> in tRPC is basically one API endpoint. You can think of it as a single “operation” your frontend can call. Then on your frontend, you connect to it:</p>
 <pre><code class="lang-ts">// utils/trpc.ts
-import { createTRPCReact } from '@trpc/react-query';
-import type { AppRouter } from '@/server';
- 
+import type { AppRouter } from "@/server";
+import { createTRPCReact } from "@trpc/react-query";
+
 export const trpc = createTRPCReact&lt;AppRouter&gt;();
 
 // In components
 function UserProfile() {
-  const userQuery = trpc.getUser.useQuery({ name: 'Alice' });
+  const userQuery = trpc.getUser.useQuery({ name: "Alice" });
   return &lt;p&gt;{userQuery.data?.text}&lt;/p&gt;;
 }
 
