--- a/kexizeroing.github.io/JavaScript Observer APIs.html
+++ b/kexizeroing.github.io/JavaScript Observer APIs.html
@@ -10,23 +10,23 @@
 <li><code>characterData</code>: Set to true to monitor the specified target node for changes to the character data (text content of a text node) contained within the node. <em>(observe the changes of text content)</em></li>
 <li><code>subtree</code>: Set to true to extend monitoring to the entire subtree of nodes rooted at target. All of the other properties are then extended to all of the nodes in the subtree instead of applying solely to the target node. <em>(detect changes in all descendants of the node)</em></li>
 </ul>
-<pre><code class="lang-js">const config = { attributes: true, childList: true, subtree: true }
+<pre><code class="lang-js">const config = { attributes: true, childList: true, subtree: true };
 
 const callback = (mutationList, observer) =&gt; {
   for (const mutation of mutationList) {
     if (mutation.type === "childList") {
-      console.log("A child node has been added or removed.")
+      console.log("A child node has been added or removed.");
     } else if (mutation.type === "attributes") {
-      console.log(`The ${mutation.attributeName} attribute was modified.`)
+      console.log(`The ${mutation.attributeName} attribute was modified.`);
     }
   }
-}
+};
 
-const observer = new MutationObserver(callback)
-observer.observe(document.getElementById("test"), config)
+const observer = new MutationObserver(callback);
+observer.observe(document.getElementById("test"), config);
 
 // Later, you can stop observing
-observer.disconnect()
+observer.disconnect();
 </code></pre>
 <pre><code class="lang-js">// Message box: automatically scroll to the bottom of the container
 export default function AutomaticScroller({ children, className }) {
@@ -75,39 +75,37 @@ export default function AutomaticScroller({ children, className }) {
 <p>Then, we call the <code>observe()</code> method on the <code>IntersectionObserver</code> object, telling it to observe intersection changes for the target element (whose visibility within the root is to be monitored.)</p>
 <pre><code class="lang-js">const observer = new IntersectionObserver(entries =&gt; {
   entries.forEach(entry =&gt; {
-    const intersecting = entry.isIntersecting
-    entry.target.style.backgroundColor = intersecting ? "blue" : "orange"
-  })
-})
+    const intersecting = entry.isIntersecting;
+    entry.target.style.backgroundColor = intersecting ? "blue" : "orange";
+  });
+});
 
-observer.observe(document.getElementById("test"))
+observer.observe(document.getElementById("test"));
 </code></pre>
-<pre><code class="lang-js">const images = document.querySelectorAll('.lazyload')
+<pre><code class="lang-js">const images = document.querySelectorAll(".lazyload");
 
 function handleIntersection(entries) {
   entries.map((entry) =&gt; {
     if (entry.isIntersecting) {
-      entry.target.src = entry.target.dataset.src
-      entry.target.classList.add('loaded')
+      entry.target.src = entry.target.dataset.src;
+      entry.target.classList.add("loaded");
       // `unobserve()` instructs the IntersectionObserver to stop observing the specified target element.
       // `disconnect()` stops watching all of its target elements for visibility changes.
-      observer.unobserve(entry.target)
+      observer.unobserve(entry.target);
     }
-  })
+  });
 }
 
-const observer = new IntersectionObserver(handleIntersection)
+const observer = new IntersectionObserver(handleIntersection);
 
-images.forEach(image =&gt; observer.observe(image))
+images.forEach(image =&gt; observer.observe(image));
 </code></pre>
 <p>The <code>thresholds</code>, if specified, accepts a value between 0 and 1 and represents the percentage of the element that must be visible before <code>isIntersecting</code> becomes true. By default this is set to 0 which means as soon as any part of the element is visible it will be considered intersecting. You can also pass an array to threshold which means “Call the callback every time the visible ratio of the target passes any of these points.”</p>
 <pre><code class="lang-js">const observer = new IntersectionObserver(entries =&gt; {
-    entires.forEach(entry =&gt; {
-      entry.target.innerText = `${Math.round(entry.intersectionRatio * 100)}%`
-    })
-  },
-  { threshold: [0, 0.25, 0.5, 0.75, 1] }
-)
+  entires.forEach(entry =&gt; {
+    entry.target.innerText = `${Math.round(entry.intersectionRatio * 100)}%`;
+  });
+}, { threshold: [0, 0.25, 0.5, 0.75, 1] });
 </code></pre>
 <p>There is also a <code>rootMargin</code> option, which specifies a set of offsets to add to the root’s bounding box when calculating intersections, effectively shrinking or growing the root. The default is "0px 0px 0px 0px". For example, set it to "0px 0px 100px 0px" means that the observer will call the callback when element is still 100px below the viewport.</p>
 <h2>Resize Observer API</h2>
@@ -116,12 +114,12 @@ images.forEach(image =&gt; observer.observe(image))
 <pre><code class="lang-js">const observer = new ResizeObserver(entries =&gt; {
   for (let entry of entries) {
     // new size of the element
-    const { width, height } = entry.contentRect
+    const { width, height } = entry.contentRect;
 
-    console.log('Element:', entry.target)
-    console.log(`Element size: ${width}px x ${height}px`)
+    console.log("Element:", entry.target);
+    console.log(`Element size: ${width}px x ${height}px`);
   }
-})
+});
 
-observer.observe(document.getElementById("test"))
+observer.observe(document.getElementById("test"));
 </code></pre>
