--- a/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
+++ b/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
@@ -5,7 +5,7 @@
 <p>When trying to access a property of an object, the property will not only be sought on the object but on the prototype of the object, the prototype of the prototype, and so on until either a property with a matching name is found or the end of the prototype chain is reached.</p>
 <p>Following the ECMAScript standard, the notation <code>someObject.[[Prototype]]</code> is used to designate the prototype of <code>someObject</code>. <strong>Since ECMAScript 2015, the <code>[[Prototype]]</code> is accessed using the accessors <code>Object.getPrototypeOf()</code> and <code>Object.setPrototypeOf()</code>. This is equivalent to the JavaScript property <code>__proto__</code> which is non-standard but implemented by many browsers</strong>. It should not be confused with the <code>func.prototype</code> property of functions, which specifies the <code>[[Prototype]]</code> to be assigned to all instances of objects created by the given function when used as a constructor. The reference to the prototype object is copied to the internal <code>[[Prototype]]</code> property of the new instance.</p>
 <ul>
-<li>All functions have a special property named <code>prototype</code>, but there is one exception that arrow function doesn't have a default prototype property. </li>
+<li>All functions have a special property named <code>prototype</code>, but there is one exception that arrow function doesn't have a default prototype property.</li>
 <li>The native prototypes should never be extended unless it is for the sake of compatibility with newer JavaScript features.</li>
 <li>Changing the <code>[[Prototype]]</code> of an object is a very slow operation in JavaScript engines, so you should avoid setting the <code>[[Prototype]]</code> of an object by using <code>Object.setPrototypeOf()</code>. Instead, create a new object with the desired <code>[[Prototype]]</code> using <code>Object.create()</code>.</li>
 <li>To check whether an object has a property defined on itself and not somewhere on its prototype chain, it is necessary to use the <code>Object.prototype.hasOwnProperty()</code> method.</li>
@@ -103,33 +103,33 @@ let Rectangle = class {
 };
 
 // methods defined within the class body are added to the prototype
-var rect = new Rectangle(1,1);
-rect.constructor === Rectangle.prototype.constructor  // true
-Object.getPrototypeOf(rect)  // { constructor: class Rectangle }
+var rect = new Rectangle(1, 1);
+rect.constructor === Rectangle.prototype.constructor; // true
+Object.getPrototypeOf(rect); // { constructor: class Rectangle }
 
 // class methods
 class Animal {
   eat() {}
-  sleep = () =&gt; {}
+  sleep = () =&gt; {};
 }
 
 // Is equivalent to
-function Animal () {
-  this.sleep = function () {}
+function Animal() {
+  this.sleep = function() {};
 }
-Animal.prototype.eat = function () {}
+Animal.prototype.eat = function() {};
 </code></pre>
 <h3>Class field</h3>
 <p>It will allow you to add instance properties directly as a property on the class without having to use the constructor method. Class properties are public by default. Sometimes when you’re building a class, you want to have private values that aren’t exposed to the outside world. Historically because we’ve lacked the ability to have truly private values, we’ve marked them with an underscore (but it is only a convention). According to the new proposal, you can create a private field using a hash # prefix. It is a syntax error to refer to # names from outside of the class. JavaScript is able to perform this compile-time check because of the special hash identifier syntax, making it different from normal properties on the syntax level.</p>
 <blockquote><p>Note that code run in the Chrome console can access private properties outside the class. This is a DevTools-only relaxation of the JavaScript syntax restriction.</p>
 </blockquote>
 <pre><code class="lang-js">class A {
-  name = 'abc'
+  name = "abc";
 }
 // is equivalent to
 class A {
   constructor() {
-    this.name = 'abc'
+    this.name = "abc";
   }
 }
 // `name = 'abc'` is called public class field
@@ -137,20 +137,20 @@ class A {
 
 class Car {
   // private field, # as a part of the property name
-  #milesDriven = 0  
+  #milesDriven = 0;
 
   drive(distance) {
-    this.#milesDriven += distance
+    this.#milesDriven += distance;
   }
   getMilesDriven() {
-    return this.#milesDriven
+    return this.#milesDriven;
   }
 }
 
-const tesla = new Car()
-tesla.drive(10)
-tesla.getMilesDriven() // 10
-tesla.#milesDriven     // Invalid
+const tesla = new Car();
+tesla.drive(10);
+tesla.getMilesDriven(); // 10
+tesla.#milesDriven; // Invalid
 </code></pre>
 <h3>Class static fields</h3>
 <p>Public static fields are useful when you want a field to exist only once per class, not on every class instance you create. Static methods aren't called on instances of the class. Instead, they're called on the class itself.</p>
@@ -171,19 +171,19 @@ tesla.#milesDriven     // Invalid
 }
 </code></pre>
 <pre><code class="lang-js">class ClassWithStaticField {
-  static staticField = 'static field';
+  static staticField = "static field";
 
   constructor() {
-    console.log(ClassWithStaticField.staticMethod()); 
-    console.log(this.constructor.staticMethod()); 
+    console.log(ClassWithStaticField.staticMethod());
+    console.log(this.constructor.staticMethod());
   }
 
   static staticMethod() {
-    return 'Static method has been called';
+    return "Static method has been called";
   }
 
   static anotherStaticMethod() {
-    return this.staticMethod() + ' from another static method';
+    return this.staticMethod() + " from another static method";
   }
 }
 
@@ -198,8 +198,20 @@ ClassWithStaticField.staticMethod();
   static Critical = 4;
 
   static assert(log_level) {
-    if (![LogLevel.Debug, LogLevel.Info, LogLevel.Warn, LogLevel.Error, LogLevel.Critical].includes(log_level)) {
-      throw new Error(`log_level must be an instance of LogLevel. Unsupported param ${JSON.stringify(log_level)}`);
+    if (
+      ![
+        LogLevel.Debug,
+        LogLevel.Info,
+        LogLevel.Warn,
+        LogLevel.Error,
+        LogLevel.Critical,
+      ].includes(log_level)
+    ) {
+      throw new Error(
+        `log_level must be an instance of LogLevel. Unsupported param ${
+          JSON.stringify(log_level)
+        }`,
+      );
     }
   }
 }
@@ -207,7 +219,7 @@ ClassWithStaticField.staticMethod();
 <h3>Class getter and setter</h3>
 <p>Add methods prefixed with <code>get</code> or <code>set</code> to create a getter and setter, which are executed based on what you are doing: accessing the variable, or modifying its value. If you only have a getter, the property cannot be set; If you only have a setter, you can change the value but not access it.</p>
 <pre><code class="lang-js">class Circle {
-  constructor (radius) {
+  constructor(radius) {
     this.radius = radius;
   }
 
@@ -233,50 +245,54 @@ console.log(circle.area);
   constructor(length) {
     // calls parent class constructor
     super(length);
-    this.name = 'Square';
+    this.name = "Square";
   }
 
   hello() {
-    return super.hello() + ' I am a square.'
+    return super.hello() + " I am a square.";
   }
 }
 
-Object.getPrototypeOf(Square.prototype) === Polygon.prototype;  // true
+Object.getPrototypeOf(Square.prototype) === Polygon.prototype; // true
 
 // In derived classes, super() must be called before you can use 'this'
 class A {}
 class B extends A {
   constructor() {
     super();
-    console.log(this);  // B {}
+    console.log(this); // B {}
   }
 }
 class C extends A {
   constructor() {
-    console.log(this);  // ReferenceError
+    console.log(this); // ReferenceError
   }
 }
 </code></pre>
 <h3>new.target</h3>
 <p>It lets you detect whether a function or constructor was called using the <code>new</code> operator. Normally the left-hand side of the dot is the object on which property access is performed, but here <code>new</code> is not an object. <strong>If constructors and functions invoked using the <code>new</code> operator, <code>new.target</code> returns a reference to the constructor or function. In normal function calls, <code>new.target</code> is undefined.</strong> In arrow functions, <code>new.target</code> is inherited from the surrounding scope.</p>
 <pre><code class="lang-js">function Foo() {
-  if (!new.target) throw 'Foo() must be called with new';
-  console.log('Foo instantiated with new');
+  if (!new.target) throw "Foo() must be called with new";
+  console.log("Foo instantiated with new");
 }
 
-new Foo();  // "Foo instantiated with new"
-Foo();  // throws "Foo() must be called with new"
+new Foo(); // "Foo instantiated with new"
+Foo(); // throws "Foo() must be called with new"
 
 // new.target refers to the constructor that was directly invoked by new
 class A {
-  constructor() { console.log(new.target.name); }
+  constructor() {
+    console.log(new.target.name);
+  }
 }
-class B extends A { 
-  constructor() { super(); } 
+class B extends A {
+  constructor() {
+    super();
+  }
 }
 
-const a = new A();  // logs "A"
-const b = new B();  // logs "B"
+const a = new A(); // logs "A"
+const b = new B(); // logs "B"
 </code></pre>
 <h2>Proxy and Reflect</h2>
 <p>The <strong>Proxy</strong> object enables you to create a proxy for another object, which can intercept and redefine fundamental operations for that object. Proxy objects are commonly used to log property accesses, validate, format, or sanitize inputs, and so on.</p>
