--- a/kexizeroing.github.io/Learn the new frontend build tool Vite.html
+++ b/kexizeroing.github.io/Learn the new frontend build tool Vite.html
@@ -60,7 +60,7 @@ import react from "/node_modules/.vite/deps/react.js?v=&lt;hash&gt;";
 import reactDom_client from "/node_modules/.vite/deps/react-dom_client.js?v=&lt;hash&gt;";
 
 // import cjs file
-import { foo as fooCjs } from 'foo/foo-cjs.cjs'
+import { foo as fooCjs } from "foo/foo-cjs.cjs";
 
 // The above import has been resolved into this
 import foo_fooCjs from "/node_modules/.vite/deps/foo_foo-cjs__cjs.js?v=&lt;hash&gt;";
@@ -132,7 +132,7 @@ const mdxFiles = import.meta.glob("./content/**.mdx");
 <li>Add Vite as a dependency, as well as the Vue plugin for Vite.</li>
 <li>With the Vite plugins installed, remove the <code>vue-template-compiler</code> as that's handled by the Vite Vue plugins.</li>
 <li>Vite is a next generation build tool, let's proceed optimistically by only supporting the most modern browsers. Practically speaking, this means that we can remove Babel.</li>
-<li>Add a Vite config file <code>vite.config.js</code> in the root of the project. Import the Vue plugin and set  <code>@import</code> alias there.</li>
+<li>Add a Vite config file <code>vite.config.js</code> in the root of the project. Import the Vue plugin and set <code>@import</code> alias there.</li>
 <li>Contrary to the Vue CLI, Vite actually puts the <code>index.html</code> file in the root of the project instead of the public directory, so you'll need to move it. And the JavaScript application is no longer auto injected so we need to include it like <code>&lt;script type="module" src="/src/main.js"&gt;&lt;/script&gt;</code>.</li>
 <li>Change the old <code>vue-cli-service</code> commands to Vite specific commands in <code>package.json</code>.</li>
 <li>You can no longer access environment variables on a <code>process.env</code> variable. Instead they can be found on <code>import.meta.env</code>.</li>
