--- a/kexizeroing.github.io/Learning notes about TanStack Router.html
+++ b/kexizeroing.github.io/Learning notes about TanStack Router.html
@@ -4,7 +4,7 @@
 <p>File-based routing is the preferred and recommended way to configure TanStack Router. You can define your routes using a series of files and directories that represent the route hierarchy of your application.</p>
 <ul>
 <li>While directories have long been used to represent route hierarchy, file-based routing introduces an additional concept of using the <code>.</code> character in the file-name to denote a route nesting. (e.g. <code>posts.index.tsx</code> and <code>posts.$postId.tsx</code>)</li>
-<li>Dynamic path params are denoted by the <code>$</code> character in the filename. </li>
+<li>Dynamic path params are denoted by the <code>$</code> character in the filename.</li>
 <li>Non-path routes (without requiring a matching path in the URL) are denoted by the <code>_</code> prefix in the filename. (e.g. <code>_app.a.tsx</code>)</li>
 <li>Non-nested routes can be created by suffixing a parent file route segment with a <code>_</code> and are used to un-nest a route from it's parents and render its own component tree. (e.g. <code>posts_.$postId.edit.tsx</code>)</li>
 </ul>
@@ -22,9 +22,9 @@ Render a component tree that looks like this:
 </code></pre>
 <h3>Use file-based routing with Vite</h3>
 <pre><code class="lang-js">// vite.config.ts
-import { defineConfig } from 'vite'
-import viteReact from '@vitejs/plugin-react'
-import { TanStackRouterVite } from '@tanstack/router-plugin/vite'
+import { TanStackRouterVite } from "@tanstack/router-plugin/vite";
+import viteReact from "@vitejs/plugin-react";
+import { defineConfig } from "vite";
 
 export default defineConfig({
   plugins: [
@@ -32,7 +32,7 @@ export default defineConfig({
     viteReact(),
     // ...
   ],
-})
+});
 </code></pre>
 <h3>Create a router</h3>
 <p>The <code>router</code> instance is the core brains of TanStack Router and is responsible for managing the route tree, matching routes, and coordinating navigations and route transitions. The Router constructor requires a <code>routeTree</code> option. If you used file-based routing, then it's likely your generated route tree file was created at the default <code>src/routeTree.gen.ts</code> location.</p>
@@ -58,14 +58,14 @@ export const Route = createRootRoute({
 </code></pre>
 <p>All other routes other than the root route are configured using the <code>createFileRoute</code> function. The path is automatically written and managed by the router for you via the TanStack Router plugin or Router CLI. So, as you create new routes, move routes around or rename routes, the path will be updated for you automatically.</p>
 <pre><code class="lang-js">// about.tsx
-import { createFileRoute } from '@tanstack/react-router'
+import { createFileRoute } from "@tanstack/react-router";
 
-export const Route = createFileRoute('/about')({
+export const Route = createFileRoute("/about")({
   component: AboutComponent,
-})
+});
 
 function AboutComponent() {
-  return &lt;div&gt;About&lt;/div&gt;
+  return &lt;div&gt;About&lt;/div&gt;;
 }
 </code></pre>
 <h2>Data loading</h2>
@@ -83,12 +83,12 @@ function AboutComponent() {
 <li><code>router.invalidate()</code> will force all active routes to reload their loaders immediately and mark every cached route's data as stale.</li>
 </ol>
 <pre><code class="lang-js">// routes/posts.$postId.tsx
-export const Route = createFileRoute('/posts/$postId')({
+export const Route = createFileRoute("/posts/$postId")({
   loader: ({ params: { postId } }) =&gt; fetchPostById(postId),
-})
+});
 </code></pre>
 <pre><code class="lang-js">// /routes/posts.tsx
-export const Route = createFileRoute('/posts')({
+export const Route = createFileRoute("/posts")({
   loaderDeps: ({ search: { offset, limit } }) =&gt; ({ offset, limit }),
   loader: ({ deps: { offset, limit } }) =&gt;
     fetchPosts({
@@ -96,7 +96,7 @@ export const Route = createFileRoute('/posts')({
       limit,
     }),
   component: PostsComponent,
-})
+});
 </code></pre>
 <p>By default, TanStack Router will show a pending component for loaders that take longer than 1 second to resolve. When the pending time threshold is exceeded, the router will render the <code>pendingComponent</code> option of the route, if configured.</p>
 <h2>Preloading</h2>
@@ -107,40 +107,40 @@ export const Route = createFileRoute('/posts')({
 <li>Preloading by <strong>"viewport"</strong> works by using the Intersection Observer API to preload the dependencies for the destination route when the <code>&lt;Link&gt;</code> component is in the viewport.</li>
 <li>Preloading by <strong>"render"</strong> works by preloading the dependencies for the destination route as soon as the <code>&lt;Link&gt;</code> component is rendered in the DOM.</li>
 </ul>
-<pre><code class="lang-js">import { createRouter } from '@tanstack/react-router'
+<pre><code class="lang-js">import { createRouter } from "@tanstack/react-router";
 
 const router = createRouter({
   routeTree,
-  defaultPreload: 'intent',
-})
+  defaultPreload: "intent",
+});
 </code></pre>
 <p>TanStack Router is designed to run loaders in parallel and wait for all of them to resolve before rendering the next route. This is great most of the time, but occasionally, you may want to show the user something sooner while the rest of the data loads in the background.</p>
 <p>As soon as any awaited promises are resolved, the next route will begin rendering while the deferred promises continue to resolve. In the component, deferred promises can be resolved and utilized using the <code>Await</code> component. In React 19, you can use the <code>use()</code> hook instead of <code>Await</code>.</p>
-<pre><code class="lang-js">export const Route = createFileRoute('/posts/$postId')({
+<pre><code class="lang-js">export const Route = createFileRoute("/posts/$postId")({
   loader: async () =&gt; {
     // Fetch some slower data, but do not await it
-    const slowDataPromise = fetchSlowData()
+    const slowDataPromise = fetchSlowData();
     // Fetch and await some data that resolves quickly
-    const fastData = await fetchFastData()
+    const fastData = await fetchFastData();
 
     return {
       fastData,
       deferredSlowData: slowDataPromise,
-    }
+    };
   },
   component: PostIdComponent,
-})
+});
 
 function PostIdComponent() {
-  const { deferredSlowData, fastData } = Route.useLoaderData()
+  const { deferredSlowData, fastData } = Route.useLoaderData();
 
   return (
     &lt;Await promise={deferredSlowData} fallback={&lt;div&gt;Loading...&lt;/div&gt;}&gt;
       {(data) =&gt; {
-        return &lt;div&gt;{data}&lt;/div&gt;
+        return &lt;div&gt;{data}&lt;/div&gt;;
       }}
     &lt;/Await&gt;
-  )
+  );
 }
 </code></pre>
 <blockquote><p>The only thing that you need to unlearn and learn with TanStack Start is that everything is isomorphic by default. Isomorphic is a fancy word. It means all the code that you write by default will run during SSR on the server and on the client during future navigations. So the <code>loader</code> if you've ever used Remix you might be thinking this might run on the server. It doesn't. This runs on the client and the server. How do I make it run only on the server? Well, we can create a server function (<code>createServerFn</code>) and any of the logic that we put inside of there is only going to run on the server. And we can also run this function from the client, but it's an RPC. It goes back to the server to ensure that we only run it there.</p>
