--- a/kexizeroing.github.io/Mac terminal.html
+++ b/kexizeroing.github.io/Mac terminal.html
@@ -25,7 +25,7 @@
 <h2>The Clipboard</h2>
 <p>There are two commands specific to macOS that connect the clipboard closer to the shell commands. <code>pbcopy</code> will take the contents of <code>stdin</code> and put them in the clipboard. So anything you pipe into <code>pbcopy</code> will end up in the clipboard, so you can paste it into a different place. For example, <code>cat test.txt | pbcopy</code> is easier than open, select all, and copy. <code>pbpaste</code> is the counterpart to <code>pbcopy</code>. You can easily make the clipboard contents visible by typing <code>pbpaste</code> as the next command.</p>
 <blockquote><p><code>&gt;</code> sends stream to a file (overwrite) and <code>&gt;&gt;</code> appends stream to a file, e.g., ls &gt; a.txt</p>
-<p><code>echo "" &gt; a.txt</code> will still give you a file with one character (a newline).<br/>
+<p><code>echo "" &gt; a.txt</code> will still give you a file with one character (a newline).\
 <code>cat /dev/null &gt; a.txt</code> should clean all contents of a file.
 <code>&gt; /dev/null</code> means redirect the output to <code>/dev/null</code>, which is a special file that discards all data written to it (essentially throwing away the output).</p>
 </blockquote>
@@ -225,7 +225,7 @@ ln -s myfile.txt my-soft-link
 <p>Some specific escape codes: “move the cursor to the left” is <code>ESC[D</code>, “move the cursor down” is <code>ESC[B</code>, “turn text red” is <code>ESC[31m</code>, “make text bold” is <code>ESC[1m</code>.</p>
 </blockquote>
 <p>&lt;img alt="ascii table" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/asciifull.gif" width="710"&gt;</p>
-<blockquote><p>Base64:<br/>
+<blockquote><p>Base64:\
 It's a way of encoding arbitrary binary data in ASCII text. Essentially each 6 bits of the input is encoded in a 64-character alphabet. The "standard" alphabet uses A-Z, a-z, 0-9 and + and /, with = as a padding character. There are URL-safe variants.</p>
 <p>&lt;img alt="ascii table" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/base64_with_padding.png" width="400"&gt;</p>
 <p>Base62 are <code>[0–9][a-z][A-Z]</code>, which can be used to generate short URLs. Think of the 7-bit short url (e.g. aKc3K4b), and it can be mapped to a decimal integer by using base conversion and vice versa. Practically, we can start with a counter (A large number 100000000000 in base 10 which is <code>1L9zO9O</code> in Base62) and increment counter every-time we get request for new short url. This way we will always get a unique short url.</p>
@@ -253,7 +253,7 @@ scutil --dns | grep nameserver  # list of DNS servers configured on your system 
 </ul>
 <p><strong>How can you check if a Mac app runs on Rosetta or M1?</strong>
 Open Activity Monitor, you’ll see a column named “Kind”. If the app says “Intel” under that, you should download the native version if available.</p>
-<blockquote><p>Macs with M1 chip:<br/>
+<blockquote><p>Macs with M1 chip:\
 Experimental support for the M1 architecture was added in node.js v15.3 and full support was added in v16.0.</p>
 <ul>
 <li>If you have a M1 Mac, be sure you’re running node 16 or higher, otherwise you’re running via Rosetta (run <code>process.arch</code>).</li>
@@ -372,11 +372,9 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <td>nohup ping baidu.com &amp;</td>
 <td>使命令永久的在后台执行（不挂断且前台可交互）</td>
 </tr>
-<tr>
-<td></td>
-</tr>
 </tbody>
 </table>
+<p>|</p>
 <blockquote><p><code>nohup</code> command allows a process to continue running in the background even after the terminal session is closed. Normally, when you close a terminal, all processes started in that terminal are terminated. <code>nohup</code> prevents this.</p>
 <p><code>&amp;</code> at the end means run the entire command in the background as a background process.</p>
 </blockquote>
@@ -384,7 +382,7 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 <pre><code class="lang-js">import { cpu, osInfo } from "systeminformation";
 
 const { manufacturer, brand, speed, cores } = await cpu();
-const { distro, release, codename} = await osInfo();
+const { distro, release, codename } = await osInfo();
 console.log(`
   Node ${process.version}
   ${manufacturer} ${brand} ${speed}ghz ${cores} cores
