--- a/kexizeroing.github.io/My early career notes (in Chinese).html
+++ b/kexizeroing.github.io/My early career notes (in Chinese).html
@@ -6,12 +6,9 @@
 <p>在模板文件中查看 php assign 给 tpl 的变量，比如 <code>&lt;script type="text/javascript"&gt;window.aaa = {json_encode($commentlist)}&lt;/script&gt;</code></p>
 <p>一定要分清哪些是在服务器端做的事情，哪些是在浏览器端做的事情。在服务端的又分为 nginx 和 fastCGI 两部分，fastCGI 是由 CGI（common gateway interface，通用网关接口）发展而来，用来提高 CGI 程序的性能，是 http 服务器（nginx、apache）和动态脚本语言（php）之间的通信接口。</p>
 <blockquote><ol>
-<li><p>Both CGI and FastCGI just describe how to pass a bunch of values — such as HTTP headers, the request body and client input — to the server-side part of your website.</p>
-</li>
-<li><p>CGI works by starting, executing and terminating a process for every incoming request. The nascent web community quickly learned that this was a bad idea, and invented technologies like PHP and FastCGI to help avoid that extra overhead and keep code resident in-memory instead.</p>
-</li>
-<li><p>FastCGI is a protocol that defines how your web server (Apache, nginx, lighttpd, etc.) communicates to your CGI program (your server side application in PHP, Ruby, Python, etc.) about the requests it receives. It's an extension of CGI. To make use of FastCGI, most web servers have a module installed by default to handle all of this.</p>
-</li>
+<li>Both CGI and FastCGI just describe how to pass a bunch of values — such as HTTP headers, the request body and client input — to the server-side part of your website.</li>
+<li>CGI works by starting, executing and terminating a process for every incoming request. The nascent web community quickly learned that this was a bad idea, and invented technologies like PHP and FastCGI to help avoid that extra overhead and keep code resident in-memory instead.</li>
+<li>FastCGI is a protocol that defines how your web server (Apache, nginx, lighttpd, etc.) communicates to your CGI program (your server side application in PHP, Ruby, Python, etc.) about the requests it receives. It's an extension of CGI. To make use of FastCGI, most web servers have a module installed by default to handle all of this.</li>
 </ol>
 </blockquote>
 <p>Web server（如 nginx）只是内容的分发者。比如，请求 <code>/index.html</code>，那么 server 会去文件系统中找到这个文件，发送给浏览器，这里分发的是静态数据。如果现在请求的是 <code>/index.php</code>，nginx 知道这个不是静态文件，需要去找 PHP 解析器来处理，那么它会把这个请求简单处理后交给 PHP 解析器。Nginx 会传哪些数据给 PHP 解析器呢？要有 url、查询字符串、POST 数据、HTTP header，CGI 就是规定要传哪些数据、以什么样的格式传递给后方处理这个请求的协议（是 php 文件的执行环境）。接下来 PHP 解析器会解析 <code>php.ini</code> 文件，初始化执行环境，然后处理请求，再以 CGI 规定的格式返回处理后的结果，退出进程。最后 server 再把结果返回给浏览器。</p>
