--- a/kexizeroing.github.io/New to MobX in React.html
+++ b/kexizeroing.github.io/New to MobX in React.html
@@ -60,7 +60,7 @@
   todos: [],
   get unfinishedCount() {
     return this.todos.filter(t =&gt; !t.done).length;
-  }
+  },
 });
 
 autorun(() =&gt; {
@@ -68,20 +68,20 @@ autorun(() =&gt; {
 });
 
 todoStore.todos.push({ task: "read docs", done: false }); // logs → Unfinished todos: 1
-todoStore.todos[0].done = true;                           // logs → Unfinished todos: 0
-todoStore.todos[0].task = "rename task";                  // no log — count didn’t change
+todoStore.todos[0].done = true; // logs → Unfinished todos: 0
+todoStore.todos[0].task = "rename task"; // no log — count didn’t change
 
 // Another example with observable nested objects
 const user = observable({
-  profile: { name: "Alice", age: 20 }
+  profile: { name: "Alice", age: 20 },
 });
 
 autorun(() =&gt; {
   console.log("User name:", user.profile.name);
 });
 
-user.profile.name = "Bob";  // logs → User name: Bob
-user.profile.age = 21;      // no log — name didn’t change
+user.profile.name = "Bob"; // logs → User name: Bob
+user.profile.age = 21; // no log — name didn’t change
 </code></pre>
 <p>This behavior is the foundation of MobX’s reactivity system. It’s dependency-aware, meaning it only re-executes if the specific values used inside the function actually change. The <code>observer()</code> function in React is built on this exact idea, you can think of each reactive component as its own <code>autorun</code>, which re-renders only when the data it reads during rendering changes.</p>
 <h2>Use MobX in React</h2>
