--- a/kexizeroing.github.io/Node-Sass troubleshooting.html
+++ b/kexizeroing.github.io/Node-Sass troubleshooting.html
@@ -1,9 +1,7 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/node-sass-troubleshooting.md">仓库源文</a>，<a href="https://kexizeroing.github.io/node-sass-troubleshooting">站点原文</a></h2>
 <h2>Node-Sass installation</h2>
-<p>Node-sass is a library that allows binding for Node.js to LibSass, the C version of Sass's stylesheet preprocessor. It compiles <code>.scss</code> files to CSS with speed and automatically through connected middleware.</p>
-<blockquote><p>LibSass is written in C++, it’s easy to embed LibSass within other programming languages and provide a native-feeling API. Calling out to LibSass via the C++ API is very fast, which means LibSass is substantially faster in JavaScript than Dart Sass-compiled-to-JS.</p>
-</blockquote>
-<p>node-sass 的安装过程大致是先下载 node-sass 包，安装时根据 node 版本和 node-sass 版本拉取对应的 <code>binding.node</code> 编译器（sass 的编译比较特殊，需要下载对应版本的编译器才能编译）。如果能拉下 <code>binding.node</code> 就算安装成功，如果找不到对应的 <code>binding.node</code> 就算失败了，然后就会尝试本地 build，需要 python 环境。</p>
+<p>Node-sass is a Node.js tool that uses LibSass to compile SASS into CSS. LibSass is written in C++, it’s easy to embed LibSass within other programming languages and provide a native-feeling API. Calling out to LibSass via the C++ API is very fast, which means LibSass is substantially faster in JavaScript than Dart Sass-compiled-to-JS.</p>
+<p>node-sass 是一个让 Node.js 可以使用 LibSass（Sass 的 C 语言实现）来编译 scss 文件的工具。node-sass 的安装过程大致是先下载 node-sass 包，安装时根据 node 版本和 node-sass 版本拉取对应的 <code>binding.node</code> 编译器（sass 的编译比较特殊，需要下载对应版本的编译器才能编译）。如果能拉下 <code>binding.node</code> 就算安装成功，如果找不到对应的 <code>binding.node</code> 就算失败了，然后就会尝试本地 build，需要 python 环境。</p>
 <p>node-sass 的 install 和 postinstall 会分别执行 <code>scripts/install.js</code> 和 <code>scripts/build.js</code>，在脚本里面可以找到安装过程会失败的原因：</p>
 <ul>
 <li>如果没有设置 <code>SASS_BINARY_SITE</code>，默认会从 Github 下载 <code>binding.node</code>，这里涉及国内的网络问题。解决办法就是使用国内镜像或者给 npm 设置代理，可以参考<a href="https://juejin.cn/post/6946530710324772878">这篇文章</a>。脚本的具体执行可以看 <code>lib/extensions.js</code> 中的 <code>getBinaryUrl()</code> 和 <code>getBinaryName()</code> 函数。</li>
