--- a/kexizeroing.github.io/Node.js learning notes.html
+++ b/kexizeroing.github.io/Node.js learning notes.html
@@ -19,7 +19,7 @@
 <p>In v22.7.0 this experimental support was extended to transform TypeScript-only syntax, like <code>enums</code> and <code>namespace</code>, with the addition of the <code>--experimental-transform-types</code> flag.</p>
 <p>From v23.6.0 onwards, type stripping is enabled by default (you can disable it via <code>--no-experimental-strip-types</code>), enabling you to run any supported syntax, so running files like the one below with <code>node file.ts</code> is supported:</p>
 <pre><code class="lang-ts">function foo(bar: number): string {
-  return 'hello';
+  return "hello";
 }
 </code></pre>
 <blockquote><p>Update on 2025/07/04: Type Stripping support in upstream Node v22. This backport means the Node LTS will be able to run <code>*.ts</code> directly. No need to opt-in with a flag. No noisy console warning. It just works.</p>
@@ -53,35 +53,35 @@ async function open_file() {
 }
 </code></pre>
 <p>Given a path, you can extract information out of it using <code>dirname</code> to get the parent folder of a file, <code>basename</code> to get the filename part, <code>extname</code> to get the file extension.</p>
-<pre><code class="lang-js">import path from 'node:path';
+<pre><code class="lang-js">import path from "node:path";
 
-const notes = '/users/joe/notes.txt';
+const notes = "/users/joe/notes.txt";
 
 path.dirname(notes); // /users/joe
 path.basename(notes); // notes.txt
 path.extname(notes); // .txt
 </code></pre>
 <p>Using <code>__dirname</code> and the <code>path</code> module ensures that you are referencing the correct path regardless of the current working directory you’re in. <code>__dirname</code> represents the absolute path of the directory containing the current JavaScript file. <code>path.join()</code> method joins all given path segments together using the platform-specific separator as a delimiter, then normalizes the resulting path.</p>
-<pre><code class="lang-js">import { fileURLToPath } from "node:url";
-import path from 'node:path';
+<pre><code class="lang-js">import path from "node:path";
+import { fileURLToPath } from "node:url";
 
 const __filename = fileURLToPath(import.meta.url);
 const __dirname = path.dirname(__filename);
 
-console.log('import.meta.url:', import.meta.url);
+console.log("import.meta.url:", import.meta.url);
 // --&gt; file:///home/users/projects/example.js
-console.log('__filename:', __filename);
+console.log("__filename:", __filename);
 // --&gt; /home/users/projects/example.js
-console.log('__dirname:', __dirname);
+console.log("__dirname:", __dirname);
 // --&gt; /home/users/projects
-console.log('directory path:', fileURLToPath(new URL('.', import.meta.url)));
+console.log("directory path:", fileURLToPath(new URL(".", import.meta.url)));
 // --&gt; /home/users/projects
 </code></pre>
-<pre><code class="lang-js">import fs from 'node:fs/promises';
-import path from 'node:path';
+<pre><code class="lang-js">import fs from "node:fs/promises";
+import path from "node:path";
 
 try {
-  const filePath = path.join(__dirname, 'test.txt');
+  const filePath = path.join(__dirname, "test.txt");
   const stats = await fs.stat(filePath);
   stats.isFile(); // true
   stats.isDirectory(); // false
@@ -91,8 +91,8 @@ try {
   console.log(err);
 }
 </code></pre>
-<pre><code class="lang-js">import fs from 'node:fs';
-fs.readFile('/Users/joe/test.txt', 'utf8', (err, data) =&gt; {
+<pre><code class="lang-js">import fs from "node:fs";
+fs.readFile("/Users/joe/test.txt", "utf8", (err, data) =&gt; {
   if (err) {
     console.error(err);
     return;
@@ -100,26 +100,26 @@ fs.readFile('/Users/joe/test.txt', 'utf8', (err, data) =&gt; {
   console.log(data);
 });
 
-import fs from 'node:fs/promises';
+import fs from "node:fs/promises";
 try {
-  const data = await fs.readFile('/Users/joe/test.txt', { encoding: 'utf8' });
+  const data = await fs.readFile("/Users/joe/test.txt", { encoding: "utf8" });
   console.log(data);
 } catch (err) {
   console.log(err);
 }
 </code></pre>
-<pre><code class="lang-js">const fs = require('node:fs/promises');
+<pre><code class="lang-js">const fs = require("node:fs/promises");
 try {
-  const content = 'Some content!';
-  await fs.writeFile('/Users/joe/test.txt', content);
+  const content = "Some content!";
+  await fs.writeFile("/Users/joe/test.txt", content);
 } catch (err) {
   console.log(err);
 }
 
-const fs = require('node:fs/promises');
+const fs = require("node:fs/promises");
 try {
-  const content = 'Some content!';
-  await fs.appendFile('/Users/joe/test.txt', content);
+  const content = "Some content!";
+  await fs.appendFile("/Users/joe/test.txt", content);
 } catch (err) {
   console.log(err);
 }
@@ -134,11 +134,11 @@ console.log(process.env.USER_ID); // "239482"
 console.log(process.env.USER_KEY); // "foobar"
 </code></pre>
 <p>Node.js v20 introduced experimental support for <code>.env</code> files. You can use the <code>--env-file</code> flag to specify an environment file when running your Node.js application. <em>(The <code>--watch</code> flag eliminates the need for nodemon, while <code>--env-file</code> removes the dependency on dotenv.)</em></p>
-<pre><code class="lang-json"> "scripts": {
-    "dev": "node --watch --env-file=.env app.js",
-    "test": "node --test --watch",
-    "start": "node app.js"
-  }
+<pre><code class="lang-json">"scripts": {
+   "dev": "node --watch --env-file=.env app.js",
+   "test": "node --test --watch",
+   "start": "node app.js"
+ }
 </code></pre>
 <h2>Modules</h2>
 <ol>
@@ -149,17 +149,17 @@ console.log(process.env.USER_KEY); // "foobar"
 <h3>CJS <code>module</code> and <code>require</code></h3>
 <p>CommonJS treats each JavaScript file as a separate module and encloses the entire code within a function wrapper: <code>(function(exports, require, module, __filename, __dirname) {})</code>. The five parameters <code>exports</code>, <code>require</code>, <code>module</code>, <code>__filename</code>, <code>__dirname</code> are available inside each module. Even if you define a global variable in a module using <code>let</code> or <code>const</code> keywords, the variables are scoped locally to the module rather than being scoped globally.</p>
 <p>The <code>module</code> parameter refers to the object representing the current module and <code>exports</code> is a key of the <code>module</code> object which is also an object. <code>module.exports</code> is used for defining stuff that can be exported by a module. <code>exports</code> parameter and <code>module.exports</code> are the same unless you reassign <code>exports</code> within your module.</p>
-<pre><code class="lang-js">exports.name = 'Alan';
-exports.test = function () {};
-console.log(module)  // { exports: { name: 'Alan', test: [Function] } }
+<pre><code class="lang-js">exports.name = "Alan";
+exports.test = function() {};
+console.log(module); // { exports: { name: 'Alan', test: [Function] } }
 
 // exports is a reference and it's no longer same as module.exports if you change the reference
 exports = {
-  name: 'Bob',
-  add: function () {}
-}
-console.log(exports) // { name: 'Bob', add: [Function] }
-console.log(module)  // { exports: { name: 'Alan', test: [Function] } }
+  name: "Bob",
+  add: function() {},
+};
+console.log(exports); // { name: 'Bob', add: [Function] }
+console.log(module); // { exports: { name: 'Alan', test: [Function] } }
 </code></pre>
 <p><code>require</code> keyword refers to a function which is used to import all the constructs exported using the <code>module.exports</code> from another module. The value returned by the <code>require</code> function in module y is equal to the <code>module.exports</code> object in the module x. The require function takes in an argument which can be a name or a path. You should provide the name as an argument when you are using the third-party modules or core modules provided by NPM. On the other hand, when you have custom modules defined by you, you should provide the path of the module as the argument.</p>
 <p>CommonJS has limitations—no static analysis, no tree-shaking, and it doesn't align with browser standards.</p>
@@ -184,18 +184,18 @@ console.log(mathUtils.square(2));
 <p><code>Writable</code> streams are useful for creating files, uploading data, or any task that involves sequentially outputting data. <strong>While readable streams provide the source of data, writable streams act as the destination for your data.</strong> <code>http.ServerResponse</code> (i.e. <code>res</code>) is a writable stream. Typical examples of writable streams in the Node.js API are <code>fs.WriteStream</code>, <code>process.stdout</code>, and <code>process.stderr</code>.</p>
 <p>When working with streams, we usually want to read from a source and write to a destination, possibly needing some transformation of the data in between. The <code>.pipe()</code> method concatenates one readable stream to a writable (or transform) stream. In most cases, it is recommended to use the <code>pipeline()</code> method. This is a safer and more robust way to pipe streams together, handling errors and cleanup automatically.</p>
 <p>Async iterators are recommended as the standard way of interfacing with the Streams API. In Node.js, all readable streams are asynchronous iterables. This means you can use the <code>for await...of</code> syntax to loop through the stream's data as it becomes available, handling each piece of data with the efficiency and simplicity of asynchronous code.</p>
-<pre><code class="lang-js">import fs from 'fs';
-import { pipeline } from 'stream/promises';
+<pre><code class="lang-js">import fs from "fs";
+import { pipeline } from "stream/promises";
 
 // Read the current file and output its contents in uppercase letters
 await pipeline(
   fs.createReadStream(import.meta.filename),
-  async function* (source) {
+  async function*(source) {
     for await (const chunk of source) {
       yield chunk.toString().toUpperCase();
     }
   },
-  process.stdout
+  process.stdout,
 );
 
 // try {
@@ -233,7 +233,7 @@ await pipeline(
 <li>External: Memory used by C++ objects that are linked to JavaScript objects. This memory is managed outside the V8 heap.</li>
 <li>Array Buffers: Memory allocated for ArrayBuffer objects, which are used to store fixed-length binary data.</li>
 </ul>
-<pre><code class="lang-js">console.log('Initial Memory Usage:', process.memoryUsage());
+<pre><code class="lang-js">console.log("Initial Memory Usage:", process.memoryUsage());
 
 setInterval(() =&gt; {
   const memoryUsage = process.memoryUsage();
