--- a/kexizeroing.github.io/Notes on AI SDK (building agents).html
+++ b/kexizeroing.github.io/Notes on AI SDK (building agents).html
@@ -2,52 +2,52 @@
 <p>AI SDK is like an ORM for LLMs. It provides a simple interface to interact with different LLM providers, making it easy to switch between them without changing your code. The first part of this post is my learning notes from the <a href="https://www.youtube.com/watch?v=kDlqpN1JyIw">AI Engineer workshop</a> tutorial by Nico Albanese.</p>
 <h2>Generate Text</h2>
 <p>Make your first LLM call.</p>
-<pre><code class="lang-js">import { openai } from '@ai-sdk/openai'
-import { generateText } from 'ai'
-import 'dotenv/config'
+<pre><code class="lang-js">import { openai } from "@ai-sdk/openai";
+import { generateText } from "ai";
+import "dotenv/config";
 
 const main = async () =&gt; {
   const result = await generateText({
-    model: openai('gpt-4o-mini'),
-    prompt: 'Hello, world!',
-  })
-  console.log(result.text)
-}
+    model: openai("gpt-4o-mini"),
+    prompt: "Hello, world!",
+  });
+  console.log(result.text);
+};
 
-main()
+main();
 </code></pre>
 <p><code>generateText</code> can take either <code>prompt</code> or <code>messages</code> as input.</p>
 <pre><code class="lang-js">const result = await generateText({
-  model: openai('gpt-4o-mini'),
+  model: openai("gpt-4o-mini"),
   messages: [
-    { role: 'user', content: 'Hello, world!' },
+    { role: "user", content: "Hello, world!" },
   ],
-})
+});
 </code></pre>
 <p>Changing providers with the AI SDK is as simple as changing two lines of code. We can pick a model that has web search built in, like <code>perplexity</code> or <code>gemini</code>, and we can even see what sources were used to generate the text.</p>
-<pre><code class="lang-js">import { google } from '@ai-sdk/google'
-import { generateText } from 'ai'
-import 'dotenv/config'
+<pre><code class="lang-js">import { google } from "@ai-sdk/google";
+import { generateText } from "ai";
+import "dotenv/config";
 
 const main = async () =&gt; {
   const result = await generateText({
-    model: google('gemini-1.5-flash', { useSearchGrounding: true }),
-    prompt: 'When is the AI Engineer summit in 2025?',
-  })
+    model: google("gemini-1.5-flash", { useSearchGrounding: true }),
+    prompt: "When is the AI Engineer summit in 2025?",
+  });
 
-  console.log(result.text)
-  console.log(result.sources)
-}
+  console.log(result.text);
+  console.log(result.sources);
+};
 
-main()
+main();
 </code></pre>
 <h2>Stream Text</h2>
-<pre><code class="lang-js">import { openai } from '@ai-sdk/openai';
-import { streamText } from 'ai';
+<pre><code class="lang-js">import { openai } from "@ai-sdk/openai";
+import { streamText } from "ai";
 
 const result = streamText({
-  model: openai('gpt-4o'),
-  prompt: 'Invent a new holiday and describe its traditions.',
+  model: openai("gpt-4o"),
+  prompt: "Invent a new holiday and describe its traditions.",
 });
 
 for await (const textPart of result.textStream) {
@@ -115,11 +115,11 @@ main();
     },
   });
 
-  console.log(result.text);  // 10 + 5 equals 15.
+  console.log(result.text); // 10 + 5 equals 15.
   console.log(JSON.stringify(result.steps, null, 2));
   // step 1: The model generates a tool call, and the tool is executed.
   // step 2: The tool result is sent to the model, and the model generates a response.
-}
+};
 </code></pre>
 <p>We can have multiple tools over multiple steps.</p>
 <pre><code class="lang-js">const main = async () =&gt; {
@@ -190,12 +190,12 @@ main();
 </code></pre>
 <pre><code class="lang-js">const main = async () =&gt; {
   const result = await generateObject({
-    model: openai('gpt-4o-mini'),
-    prompt: 'Please come up with 3 definitions for AI agents.',
+    model: openai("gpt-4o-mini"),
+    prompt: "Please come up with 3 definitions for AI agents.",
     schema: z.object({
       definitions: z.array(z.string()),
     }),
-  })
+  });
   console.log(JSON.stringify(result.object, null, 2));
   // {
   //   "definitions": [
@@ -204,31 +204,30 @@ main();
   //     "An AI agent is ..."
   //   ]
   // }
-}
+};
 
 // Generate an array
 const { object } = await generateObject({
-  model: openai('gpt-4.1'),
-  output: 'array',
+  model: openai("gpt-4.1"),
+  output: "array",
   schema: z.object({
     name: z.string(),
     class: z
       .string()
-      .describe('Character class, e.g. warrior, mage, or thief.'),
+      .describe("Character class, e.g. warrior, mage, or thief."),
     description: z.string(),
   }),
-  prompt: 'Generate 3 hero descriptions for a fantasy role playing game.',
+  prompt: "Generate 3 hero descriptions for a fantasy role playing game.",
 });
 
 // Generate an enum
 const { object } = await generateObject({
-  model: openai('gpt-4.1'),
-  output: 'enum',
-  enum: ['action', 'comedy', 'drama', 'horror', 'sci-fi'],
-  prompt:
-    'Classify the genre of this movie plot: ' +
-    '"A group of astronauts travel through a wormhole in search of a ' +
-    'new habitable planet for humanity."',
+  model: openai("gpt-4.1"),
+  output: "enum",
+  enum: ["action", "comedy", "drama", "horror", "sci-fi"],
+  prompt: "Classify the genre of this movie plot: "
+    + "\"A group of astronauts travel through a wormhole in search of a "
+    + "new habitable planet for humanity.\"",
 });
 </code></pre>
 <h2>Deep Research</h2>
@@ -598,53 +597,55 @@ export default function ChatPage() {
 </code></pre>
 <p>For tool call UI, The <code>parts</code> array of assistant messages contains tool parts with typed names like <code>tool-getWeather</code>.</p>
 <pre><code class="lang-js">// Check `type ToolUIPart` in ai/dist/index.d.ts
-{ message.parts.map((part, index) =&gt; {
-  switch (part.type) {
-    case "text":
-      return (
-        &lt;div key={`${message.id}-${index}`}&gt;
-          {part.text}
-        &lt;/div&gt;
-      );
-    // type: `tool-${NAME}`
-    case "tool-getWeather":
-      switch (part.state) {
-        // [STATE: input-streaming] Receiving weather request...
-        // {
-        //   "city": "Beijing"
-        // }
-        case "input-streaming":
-          return (
-            &lt;div key={`${message.id}-getWeather-${index}`}&gt;
-              Receiving weather request...
-              &lt;pre&gt;{JSON.stringify(part.input, null, 2)}&lt;/pre&gt;
-            &lt;/div&gt;
-          );
-        // [STATE: input-available] Getting weather for Beijing...
-        case "input-available":
-          return (
-            &lt;div key={`${message.id}-getWeather-${index}`}&gt;
-              Getting weather for {part.input.city}...
-            &lt;/div&gt;
-          );
-        // [STATE: output-available] Weather: 80F and sunny
-        case "output-available":
-          return (
-            &lt;div key={`${message.id}-getWeather-${index}`}&gt;
-              &lt;div&gt;Weather: {part.output}&lt;/div&gt;
-            &lt;/div&gt;
-          );
-        case "output-error":
-          return (
-            &lt;div key={`${message.id}-getWeather-${index}`}&gt;
-              Error: {part.errorText}
-            &lt;/div&gt;
-          );
-        default:
-          return null;
-      }
-    default:
-      return null;
-  }
-})}
+{
+  message.parts.map((part, index) =&gt; {
+    switch (part.type) {
+      case "text":
+        return (
+          &lt;div key={`${message.id}-${index}`}&gt;
+            {part.text}
+          &lt;/div&gt;
+        );
+      // type: `tool-${NAME}`
+      case "tool-getWeather":
+        switch (part.state) {
+          // [STATE: input-streaming] Receiving weather request...
+          // {
+          //   "city": "Beijing"
+          // }
+          case "input-streaming":
+            return (
+              &lt;div key={`${message.id}-getWeather-${index}`}&gt;
+                Receiving weather request...
+                &lt;pre&gt;{JSON.stringify(part.input, null, 2)}&lt;/pre&gt;
+              &lt;/div&gt;
+            );
+          // [STATE: input-available] Getting weather for Beijing...
+          case "input-available":
+            return (
+              &lt;div key={`${message.id}-getWeather-${index}`}&gt;
+                Getting weather for {part.input.city}...
+              &lt;/div&gt;
+            );
+          // [STATE: output-available] Weather: 80F and sunny
+          case "output-available":
+            return (
+              &lt;div key={`${message.id}-getWeather-${index}`}&gt;
+                &lt;div&gt;Weather: {part.output}&lt;/div&gt;
+              &lt;/div&gt;
+            );
+          case "output-error":
+            return (
+              &lt;div key={`${message.id}-getWeather-${index}`}&gt;
+                Error: {part.errorText}
+              &lt;/div&gt;
+            );
+          default:
+            return null;
+        }
+      default:
+        return null;
+    }
+  });
+}
 </code></pre>
