--- a/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
+++ b/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
@@ -86,37 +86,37 @@ print(embedded_query) # [-0.0013594045786472937, -0.03437049808954925, ...]
 
 // Generate a one-time embedding for the query itself
 const embeddingResponse = await openai.createEmbedding({
-  model: 'text-embedding-ada-002',
+  model: "text-embedding-ada-002",
   input,
-})
+});
 
-const [{ embedding }] = embeddingResponse.data.data
+const [{ embedding }] = embeddingResponse.data.data;
 
 // Fetching whole documents for this simple example.
 // `match_documents` is a function to perform similarity search over embeddings
-const { data: documents } = await supabaseClient.rpc('match_documents', {
+const { data: documents } = await supabaseClient.rpc("match_documents", {
   query_embedding: embedding,
   match_threshold: 0.78, // Choose an appropriate threshold for your data
   match_count: 10, // Choose the number of matches
-})
+});
 
-const tokenizer = new GPT3Tokenizer({ type: 'gpt3' })
-let tokenCount = 0
-let contextText = ''
+const tokenizer = new GPT3Tokenizer({ type: "gpt3" });
+let tokenCount = 0;
+let contextText = "";
 
 // Concat matched documents
 for (let i = 0; i &lt; documents.length; i++) {
-  const document = documents[i]
-  const content = document.content
-  const encoded = tokenizer.encode(content)
-  tokenCount += encoded.text.length
+  const document = documents[i];
+  const content = document.content;
+  const encoded = tokenizer.encode(content);
+  tokenCount += encoded.text.length;
 
   // Limit context to max 1500 tokens (configurable)
   if (tokenCount &gt; 1500) {
-    break
+    break;
   }
 
-  contextText += `${content.trim()}\n---\n`
+  contextText += `${content.trim()}\n---\n`;
 }
 
 const prompt = stripIndent`${oneLine`
@@ -135,14 +135,14 @@ const prompt = stripIndent`${oneLine`
   """
 
   Answer as markdown (including related code snippets if available):
-`
+`;
 
 const completionResponse = await openai.createCompletion({
-  model: 'text-davinci-003',
+  model: "text-davinci-003",
   prompt,
   max_tokens: 512, // Choose the max allowed tokens in completion
   temperature: 0, // Set to 0 for deterministic results
-})
+});
 </code></pre>
 <h3>Domain-specific ChatGTP Starter App</h3>
 <p><a href="https://github.com/gannonh/gpt3.5-turbo-pgvector">This starter app</a> uses embeddings to generate a vector representation of a document, and then uses vector search to find the most similar documents to the query. The results of the vector search are then used to construct a prompt for GPT-3, which is then used to generate a response. The response is then streamed to the user.</p>
@@ -230,8 +230,8 @@ await pinecone.init({
   environment: process.env.PINECONE_ENVIRONMENT,
   apiKey: process.env.PINECONE_API_KEY,
 });
-// An index is the highest-level organizational unit of vector data in Pinecone. 
-// It accepts and stores vectors, serves queries over the vectors it contains, 
+// An index is the highest-level organizational unit of vector data in Pinecone.
+// It accepts and stores vectors, serves queries over the vectors it contains,
 // and does other vector operations over its contents.
 const index = pinecone.Index(PINECONE_INDEX_NAME); // change to your own index name
 
