--- a/kexizeroing.github.io/React 18 Suspense and startTransition.html
+++ b/kexizeroing.github.io/React 18 Suspense and startTransition.html
@@ -5,26 +5,26 @@
 <h2>New Root API</h2>
 <p>Concurrent React is opt-in — it’s only enabled when you use a concurrent feature. The new root API in React 18 enables the new concurrent renderer, which allows you to opt-into concurrent features.</p>
 <pre><code class="lang-js">// Before
-import { render } from 'react-dom';
-const container = document.getElementById('app');
+import { render } from "react-dom";
+const container = document.getElementById("app");
 render(&lt;App /&gt;, container);
 
 // After
-import { createRoot } from 'react-dom/client';
-const container = document.getElementById('app');
+import { createRoot } from "react-dom/client";
+const container = document.getElementById("app");
 const root = createRoot(container);
 root.render(&lt;App /&gt;);
 </code></pre>
-<pre><code class="lang-js">import { hydrateRoot } from 'react-dom/client';
+<pre><code class="lang-js">import { hydrateRoot } from "react-dom/client";
 
-hydrateRoot(document.getElementById('root'), &lt;App /&gt;);
+hydrateRoot(document.getElementById("root"), &lt;App /&gt;);
 </code></pre>
 <h2>Automatic Batching</h2>
 <p>Before React 18, updates outside events were not batched. This meant that React updated the DOM immediately after each state change. Multiple state updates within a single event cycle would cause multiple, unnecessary re-renders, affecting the application's responsiveness.</p>
 <pre><code class="lang-js">// React 17
 const handleUpdate = () =&gt; {
   setCount(count + 1); // First update
-  setFlag(!flag);      // Second update
+  setFlag(!flag); // Second update
   // In pre-batching React, this would cause two separate re-renders
 };
 </code></pre>
@@ -46,7 +46,7 @@ const handleClick = () =&gt; {
 <li>Urgent updates reflect direct interaction, like typing, clicking, pressing, and so on.</li>
 <li>Transition is a "potential future UI state". It's not committed immediately, it's enqueued.</li>
 </ul>
-<pre><code class="lang-jsx">import { startTransition } from 'react';
+<pre><code class="lang-jsx">import { startTransition } from "react";
 
 // Urgent: Show what was typed
 setInputValue(input);
@@ -59,7 +59,7 @@ startTransition(() =&gt; {
 <p><code>startTransition</code> allows you to mark certain updates in the app as non-urgent, so they are paused while the more urgent updates like clicks or key presses come in. If a transition gets interrupted by the user, React will throw out the stale rendering work that wasn’t finished and render only the latest update. <em>The function passed to <code>startTransition</code> is called an “Action”.</em></p>
 <blockquote><p>How is it different from <code>setTimeout</code>?</p>
 <ol>
-<li><code>startTransition</code> is not scheduled for later like <code>setTimeout</code> is. The function passed to <code>startTransition</code> runs synchronously, but any updates inside of it are marked as “transitions”. React will use this information later when processing the updates to decide how to render the update. This means that we start rendering the update earlier than if it were wrapped in a timeout. </li>
+<li><code>startTransition</code> is not scheduled for later like <code>setTimeout</code> is. The function passed to <code>startTransition</code> runs synchronously, but any updates inside of it are marked as “transitions”. React will use this information later when processing the updates to decide how to render the update. This means that we start rendering the update earlier than if it were wrapped in a timeout.</li>
 <li>If the user is still typing or interacting with the page when the timeout fires, they will still be blocked from interacting with the page. But state updates marked with <code>startTransition</code> are interruptible, so they won’t lock up the page.</li>
 </ol>
 </blockquote>
@@ -84,13 +84,13 @@ function setState() {
 <pre><code class="lang-js">startTransition(async () =&gt; {
   await someAsyncFunction();
   startTransition(() =&gt; {
-    setPage('/about');
+    setPage("/about");
   });
 });
 </code></pre>
 <p>What if you want to display something on the search results while waiting for the expensive UI render to finish? For this, we can use the <code>isPending</code> flag that comes from the <code>useTransition</code> hook.</p>
 <pre><code class="lang-jsx">function App() {
-  const [query, setQuery] = useState('');
+  const [query, setQuery] = useState("");
   const [isPending, startTransition] = useTransition();
   const [deferredQuery, setDeferredQuery] = useState(query);
 
@@ -107,15 +107,15 @@ function setState() {
     &lt;div&gt;
       &lt;input type="text" value={query} onChange={handleChange} /&gt;
       {/* isPending remains true until the component re-renders with the new deferred value */}
-      { isPending ? &lt;Spinner /&gt; : &lt;List q={deferredQuery} /&gt; }
-    &lt;/div&gt; 
-  )
+      {isPending ? &lt;Spinner /&gt; : &lt;List q={deferredQuery} /&gt;}
+    &lt;/div&gt;
+  );
 }
 </code></pre>
 <p>We can also use <code>useDeferredValue</code> for the query used in rendering the list, allowing React to prioritize more urgent input changes over re-rendering the list. During updates, React will first attempt a re-render with the old value, and then try another re-render in the background with the new value.</p>
 <p><code>useTransition</code> returns <em>isPending</em> and <code>useDeferredValue</code> you can check if <em>value !== deferredValue</em>.</p>
 <pre><code class="lang-jsx">function App() {
-  const [query, setQuery] = useState('');
+  const [query, setQuery] = useState("");
   // It lets you defer updating a part of the UI
   // Users don't notice the deferral because urgent UI stays responsive
   const deferredQuery = useDeferredValue(query);
@@ -127,22 +127,22 @@ function setState() {
         value={query}
         onChange={e =&gt; setQuery(e.target.value)}
       /&gt;
-      { query !== deferredQuery ? &lt;Spinner /&gt; : &lt;List q={deferredQuery} /&gt; }
-    &lt;/div&gt; 
-  )
+      {query !== deferredQuery ? &lt;Spinner /&gt; : &lt;List q={deferredQuery} /&gt;}
+    &lt;/div&gt;
+  );
 }
 
 // never rerender the list unless the query changes
 const List = React.memo(({ q }) =&gt; {
   /* filter the list based on the query */
-})
+});
 </code></pre>
 <h2>Suspense on the server</h2>
 <p>Suspense allows you to render a fallback component while a component is waiting for some asynchronous operations. With React 18, Suspense can be used on the server.</p>
 <p>Suspense is used on the client in React 16, but it would throw an error when used in SSR. Suspense and code-splitting using <code>React.lazy</code> were not compatible with SSR, until React 18.</p>
-<pre><code class="lang-jsx">import React, { lazy, Suspense } from 'react';
+<pre><code class="lang-jsx">import React, { lazy, Suspense } from "react";
 
-const LazyComments = lazy(() =&gt; import('./Comments'));
+const LazyComments = lazy(() =&gt; import("./Comments"));
 
 const Component = () =&gt; (
   &lt;Suspense fallback={&lt;div&gt;Loading...&lt;/div&gt;}&gt;
@@ -170,7 +170,7 @@ const Component = () =&gt; (
 <li>The Suspense boundary does not fall back because React hasn’t committed the render that suspends.</li>
 </ul>
 <pre><code class="lang-jsx">function App() {
-  const [tab, setTab] = useState('profile');
+  const [tab, setTab] = useState("profile");
   const [isPending, startTransition] = useTransition();
 
   function handleTabChange(newTab) {
@@ -180,12 +180,12 @@ const Component = () =&gt; (
   return (
     &lt;div&gt;
       &lt;nav&gt;
-        &lt;button onClick={() =&gt; handleTabChange('profile')}&gt;Profile&lt;/button&gt;
-        &lt;button onClick={() =&gt; handleTabChange('posts')}&gt;Posts&lt;/button&gt;
+        &lt;button onClick={() =&gt; handleTabChange("profile")}&gt;Profile&lt;/button&gt;
+        &lt;button onClick={() =&gt; handleTabChange("posts")}&gt;Posts&lt;/button&gt;
       &lt;/nav&gt;
       &lt;Suspense fallback={&lt;LoadingSkeleton /&gt;}&gt;
         &lt;div style={{ opacity: isPending ? 0.7 : 1 }}&gt;
-          {tab === 'profile' ? &lt;UserProfile /&gt; : &lt;UserPosts /&gt;}
+          {tab === "profile" ? &lt;UserProfile /&gt; : &lt;UserPosts /&gt;}
         &lt;/div&gt;
       &lt;/Suspense&gt;
     &lt;/div&gt;
@@ -212,16 +212,15 @@ const Component = () =&gt; (
 <li>When external data changes, your event listener calls the callback</li>
 <li>React receives the callback call and knows to re-render the component</li>
 </ol>
-<pre><code class="lang-js">import { useSyncExternalStore } from 'react';
+<pre><code class="lang-js">import { useSyncExternalStore } from "react";
 
 function useWindowWidth() {
   return useSyncExternalStore(
     // subscribe: "Tell me when window resizes"
     (callback) =&gt; {
-      window.addEventListener('resize', callback);
-      return () =&gt; window.removeEventListener('resize', callback);
+      window.addEventListener("resize", callback);
+      return () =&gt; window.removeEventListener("resize", callback);
     },
-
     // getSnapshot: "What's the current width?"
     () =&gt; window.innerWidth,
   );
@@ -238,115 +237,109 @@ function MyComponent() {
 </blockquote>
 <ol>
 <li><p>React Server Components (server-side data fetching)</p>
-<pre><code class="lang-jsx"> const PostsPage = async () =&gt; {
-   const posts = await getPosts();
+<pre><code class="lang-jsx">const PostsPage = async () =&gt; {
+  const posts = await getPosts();
 
-   return (
-     &lt;ul&gt;
-       {posts?.map((post) =&gt; (
-         &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
-       ))}
-     &lt;/ul&gt;
-   );
- };
+  return (
+    &lt;ul&gt;
+      {posts?.map((post) =&gt; &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;)}
+    &lt;/ul&gt;
+  );
+};
 </code></pre>
 </li>
 <li><p>React Suspense is a feature that allows you to suspend the rendering of a component until some asynchronous operation is done.</p>
-<pre><code class="lang-jsx"> const PostsPage = () =&gt; {
-   return (
-     &lt;Suspense fallback={&lt;div&gt;Loading...&lt;/div&gt;}&gt;
-       &lt;PostList /&gt;
-     &lt;/Suspense&gt;
-   );
- };
+<pre><code class="lang-jsx">const PostsPage = () =&gt; {
+  return (
+    &lt;Suspense fallback={&lt;div&gt;Loading...&lt;/div&gt;}&gt;
+      &lt;PostList /&gt;
+    &lt;/Suspense&gt;
+  );
+};
 
- const PostList = async () =&gt; {
-   const posts = await getPosts();
+const PostList = async () =&gt; {
+  const posts = await getPosts();
 
-   return (
-     &lt;ul&gt;
-       {posts?.map((post) =&gt; (
-         &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
-       ))}
-     &lt;/ul&gt;
-   );
- }
+  return (
+    &lt;ul&gt;
+      {posts?.map((post) =&gt; &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;)}
+    &lt;/ul&gt;
+  );
+};
 </code></pre>
 </li>
 <li><p>When it comes to CSR React applications (i.e. SPAs), the most recommended way to fetch data is by using a library like React Query.</p>
-<pre><code class="lang-jsx"> "use client";
+<pre><code class="lang-jsx">"use client";
 
- const PostsPage = () =&gt; {
-   const { data: posts } = useQuery({
-     queryKey: ["posts"],
-     queryFn: getPosts,
-   });
+const PostsPage = () =&gt; {
+  const { data: posts } = useQuery({
+    queryKey: ["posts"],
+    queryFn: getPosts,
+  });
 
-   return (
-     &lt;ul&gt;
-       {posts?.map((post) =&gt; (
-         &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
-       ))}
-     &lt;/ul&gt;
-   );
- };
+  return (
+    &lt;ul&gt;
+      {posts?.map((post) =&gt; &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;)}
+    &lt;/ul&gt;
+  );
+};
 </code></pre>
 </li>
 <li><p>Combine React Server Components and client-side data fetching with React Query. You want to fetch initial data on the server-side and then use React Query for continued client-side data fetching.</p>
-<pre><code class="lang-jsx"> const PostsPage = async () =&gt; {
-   const posts = await getPosts();
+<pre><code class="lang-jsx">const PostsPage = async () =&gt; {
+  const posts = await getPosts();
 
-   return (
-     &lt;div&gt;
-       &lt;PostList initialPosts={posts} /&gt;
-     &lt;/div&gt;
-   );
- };
+  return (
+    &lt;div&gt;
+      &lt;PostList initialPosts={posts} /&gt;
+    &lt;/div&gt;
+  );
+};
 </code></pre>
-<pre><code class="lang-jsx"> "use client";
+<pre><code class="lang-jsx">"use client";
 
- const PostList = ({ initialPosts }: PostListProps) =&gt; {
-   const { data: posts } = useQuery({
-     queryKey: ["posts"],
-     queryFn: getPosts,
-     initialData: initialPosts,
-   });
+const PostList = ({ initialPosts }: PostListProps) =&gt; {
+  const { data: posts } = useQuery({
+    queryKey: ["posts"],
+    queryFn: getPosts,
+    initialData: initialPosts,
+  });
 
-   return (
-     &lt;ul&gt;
-       {posts?.map((post) =&gt; (
-         &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
-       ))}
-     &lt;/ul&gt;
-   );
- };
+  return (
+    &lt;ul&gt;
+      {posts?.map((post) =&gt; (
+        &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
+      ))}
+    &lt;/ul&gt;
+  );
+};
 </code></pre>
 </li>
 <li><p>React's <code>use()</code> API. It allows you to pass a Promise from a Server Component to a Client Component and resolve it in the Client Component.</p>
-<pre><code class="lang-jsx"> const PostsPage = () =&gt; {
-   const postsPromise = getPosts();
+<pre><code class="lang-jsx">const PostsPage = () =&gt; {
+  const postsPromise = getPosts();
 
-   return (
-     &lt;Suspense&gt;
-       &lt;PostList promisedPosts={postsPromise} /&gt;
-     &lt;/Suspense&gt;
-   );
- };
+  return (
+    &lt;Suspense&gt;
+      &lt;PostList promisedPosts={postsPromise} /&gt;
+    &lt;/Suspense&gt;
+  );
+};
 </code></pre>
-<pre><code class="lang-jsx"> "use client";
+<pre><code class="lang-jsx">"use client";
 
- const PostList = ({ promisedPosts }: PostListProps) =&gt; {
-   // this will suspend the component and stream data as well
-   const posts = use(promisedPosts);
+const PostList = ({ promisedPosts }: PostListProps) =&gt; {
+  // this will suspend the component and stream data as well
+  const posts = use(promisedPosts);
 
-   return (
-     &lt;ul&gt;
-       {posts?.map((post) =&gt; (
-         &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
-       ))}
-     &lt;/ul&gt;
-   );
- };
+  return (
+    &lt;ul&gt;
+      {posts?.map((post) =&gt; (
+        &lt;li key={post.id}&gt;{post.title}&lt;/li&gt;
+      ))}
+    &lt;/ul&gt;
+  );
+};
 </code></pre>
 </li>
 </ol>
