--- a/kexizeroing.github.io/React 19’s enhanced form handling.html
+++ b/kexizeroing.github.io/React 19’s enhanced form handling.html
@@ -33,7 +33,7 @@ function App() {
   return (
     &lt;form&gt;
       &lt;input type="text" name="name" onChange={handleChange} /&gt;
-      { isPending ? &lt;p&gt;{"Loading"}&lt;/p&gt; : &lt;p&gt; Hello in React 18 {name}&lt;/p&gt; }
+      {isPending ? &lt;p&gt;{"Loading"}&lt;/p&gt; : &lt;p&gt;Hello in React 18 {name}&lt;/p&gt;}
       &lt;button onClick={handleSubmit} disabled={isPending}&gt;
         Update
       &lt;/button&gt;
@@ -46,7 +46,7 @@ function RenderName({ name }) {
   // 1. `useFormStatus` must be called from a component that is rendered inside a &lt;form&gt;
   // 2. `useFormStatus` will only return status information for a parent &lt;form&gt;
   const { pending } = useFormStatus();
-  return &lt;div&gt;{pending ? "Loading" : `Hello in React 19 ${name}` }&lt;/div&gt;;
+  return &lt;div&gt;{pending ? "Loading" : `Hello in React 19 ${name}`}&lt;/div&gt;;
 }
 
 function SubmitButton() {
@@ -69,13 +69,13 @@ function App() {
     &lt;form action={formAction}&gt;
       &lt;input type="text" name="inputName" /&gt;
       &lt;RenderName name={state?.name} /&gt;
-      &lt;SubmitButton /&gt; 
+      &lt;SubmitButton /&gt;
     &lt;/form&gt;
   );
 }
 
 // actions.js
-'use server';
+"use server";
 
 export const submitFormAction = async (previousState, formData) =&gt; {
   const name = formData.get("inputName");
@@ -124,13 +124,13 @@ export async function submitMessage(_prevState, formData) {
   //   }),
   // });
   const result = messageSchema.safeParse({
-    content: formData.get('content'),
-    createdById: formData.get('userId'),
+    content: formData.get("content"),
+    createdById: formData.get("userId"),
   });
 
   if (!result.success) {
     return {
-      error: 'Invalid message!',
+      error: "Invalid message!",
       success: false,
       timestamp: new Date(),
     };
@@ -140,7 +140,7 @@ export async function submitMessage(_prevState, formData) {
     data: result.data,
   });
 
-  revalidatePath('/');
+  revalidatePath("/");
 
   return {
     success: true,
@@ -207,11 +207,13 @@ export default function Todos() {
 <blockquote><p>For native HTML forms, <code>action</code> is the URL that processes the form submission. <code>&lt;form action={formAction}&gt;</code> where <code>formAction</code> is a JavaScript function is a React feature. It is a client-side form action, stays on the same page and doesn't navigate anywhere. <code>useActionState</code> is optional and primarily designed for handling pending states and return values from your form actions.</p>
 </blockquote>
 <p>The optimistic updater function is just for calculating what the UI should look like immediately. The server action does the actual work of making that change permanent. If the server action fails, the optimistic update gets thrown away and the UI reverts to the real state. If it succeeds, the optimistic state should match the new real state, so there's no visual change when they swap.</p>
-<pre><code class="lang-js">const [optimisticCategories, setOptimisticCategories] = useOptimistic(searchParams.getAll('category'))
+<pre><code class="lang-js">const [optimisticCategories, setOptimisticCategories] = useOptimistic(
+  searchParams.getAll("category"),
+);
 
 startTransition(() =&gt; {
-  setOptimisticCategories(newCategories) // Optimistic (temporary)
-  router.push(`?${params.toString()}`)   // Real update (URL change)
+  setOptimisticCategories(newCategories); // Optimistic (temporary)
+  router.push(`?${params.toString()}`); // Real update (URL change)
 });
 </code></pre>
 <ol>
@@ -267,7 +269,7 @@ function ComponentOne() {
       &lt;link rel="stylesheet" href="bar" precedence="high" /&gt;
       &lt;article class="foo-class bar-class"&gt;...&lt;/article&gt;
     &lt;/Suspense&gt;
-  )
+  );
 }
 </code></pre>
 <p>React 19 added special support for the <code>&lt;link&gt;</code> element. When rendered with the <code>precedence</code> prop, stylesheets will be automatically hoisted into the <code>&lt;head&gt;</code> and deduplicated. In addition, when rendered inside a <code>&lt;Suspense&gt;</code> boundary, React will wait for the stylesheet to load before revealing content that depends on it.</p>
@@ -292,10 +294,13 @@ return (
     {isLoading ? "Loading..." : null}
     &lt;button type="submit"&gt;Submit&lt;/button&gt;
   &lt;/form&gt;
-)
+);
 
 // action.ts
-export async function submitFormAction(previousState: string, formData: FormData) {
+export async function submitFormAction(
+  previousState: string,
+  formData: FormData,
+) {
   await new Promise((res) =&gt; setTimeout(res, 1000));
   const email = formData.get("email");
   return { email };
@@ -306,7 +311,7 @@ export async function submitFormAction(previousState: string, formData: FormData
 <li>When action is a function (Server Action), <code>&lt;Form&gt;</code> behaves like a React form, executing the action when the form is submitted.</li>
 <li>When action is a string, the <code>&lt;Form&gt;</code> behaves like a native HTML form that uses a GET method. The form data is encoded into the URL as search params, and when the form is submitted, it navigates to the specified URL. In addition, Next.js performs a client-side navigation instead of a full page reload when the form is submitted.</li>
 </ul>
-<pre><code class="lang-ts">import Form from 'next/form'
+<pre><code class="lang-ts">import Form from "next/form";
 
 export default function Page() {
   return (
@@ -315,7 +320,7 @@ export default function Page() {
       &lt;input name="query" /&gt;
       &lt;button type="submit"&gt;Submit&lt;/button&gt;
     &lt;/Form&gt;
-  )
+  );
 }
 
 // Perform mutations by passing a function to the action prop
@@ -325,17 +330,17 @@ export default function Page() {
       &lt;input name="title" /&gt;
       &lt;button type="submit"&gt;Create Post&lt;/button&gt;
     &lt;/Form&gt;
-  )
+  );
 }
 
 // app/posts/actions.ts
-'use server'
-import { redirect } from 'next/navigation'
+"use server";
+import { redirect } from "next/navigation";
 
 export async function createPost(formData: FormData) {
   // Create a new post
   // ...
 
-  redirect(`/posts/${data.id}`)
+  redirect(`/posts/${data.id}`);
 }
 </code></pre>
