--- a/kexizeroing.github.io/React hooks clone and related concepts.html
+++ b/kexizeroing.github.io/React hooks clone and related concepts.html
@@ -9,7 +9,7 @@ const React = (function() {
     const state = hooks[idx] ?? initVal;
     const _idx = idx;
     const setState = newVal =&gt; {
-      if (typeof newVal === 'function') {
+      if (typeof newVal === "function") {
         hooks[_idx] = newVal(hooks[_idx]);
       } else {
         hooks[_idx] = newVal;
@@ -43,38 +43,38 @@ const React = (function() {
 
 function Component() {
   const [count, setCount] = React.useState(1);
-  const [text, setText] = React.useState('apple');
+  const [text, setText] = React.useState("apple");
 
   React.useEffect(() =&gt; {
-    console.log('useEffect with count dep')
+    console.log("useEffect with count dep");
   }, [count]);
 
   React.useEffect(() =&gt; {
-    console.log('useEffect empty dep')
+    console.log("useEffect empty dep");
   }, []);
 
   React.useEffect(() =&gt; {
-    console.log('useEffect no dep')
+    console.log("useEffect no dep");
   });
 
   return {
-    render: () =&gt; console.log({count, text}),
+    render: () =&gt; console.log({ count, text }),
     click: () =&gt; setCount(count + 1),
-    type: word =&gt; setText(word)
-  }
+    type: word =&gt; setText(word),
+  };
 }
 
 var App = React.render(Component);
 App.click();
 var App = React.render(Component);
-App.type('pear');
+App.type("pear");
 var App = React.render(Component);
 
 /*
   useEffect with count dep
   useEffect empty dep
   useEffect no dep
-  {count: 1, text: "apple"} 
+  {count: 1, text: "apple"}
 
   useEffect with count dep
   useEffect no dep
@@ -130,7 +130,7 @@ render(&lt;App /&gt;, document.querySelector('#app'))
 <blockquote><p>You might recall that you needed to <code>import React from 'react'</code> to write JSX correctly. Starting with React 17, React introduced a new JSX transform that automatically imports special functions in the React package and calls them behind the scenes.</p>
 </blockquote>
 <h3>State updates are asynchronous and batched</h3>
-<pre><code class="lang-js">const [user, setUser] = useState({})
+<pre><code class="lang-js">const [user, setUser] = useState({});
 
 setUser(data);
 console.log(user);
@@ -150,7 +150,7 @@ function handleClick() {
 
 useEffect(() =&gt; {
   const id = setInterval(() =&gt; {
-    console.log('Interval tick');
+    console.log("Interval tick");
     setCount(count + 1);
   }, 1000);
   return () =&gt; {
@@ -170,20 +170,24 @@ useEffect(() =&gt; {
 </code></pre>
 <h3>How reconciliation works</h3>
 <p>If we had two components of the same type:</p>
-<pre><code class="lang-jsx">{isEditing ? (
-  &lt;input
-    type="text"
-    placeholder="Enter your name"
-    className="edit-input"
-  /&gt;
-) : (
-  &lt;input
-    type="text"
-    placeholder="Enter your name"
-    disabled
-    className="view-input"
-  /&gt;
-)}
+<pre><code class="lang-jsx">{
+  isEditing
+    ? (
+      &lt;input
+        type="text"
+        placeholder="Enter your name"
+        className="edit-input"
+      /&gt;
+    )
+    : (
+      &lt;input
+        type="text"
+        placeholder="Enter your name"
+        disabled
+        className="view-input"
+      /&gt;
+    );
+}
 </code></pre>
 <p>When React rerenders this conditional input component, it performs reconciliation by comparing the new virtual DOM tree with the previous one. Since both the editing and non-editing branches render an input element of the same type at the same position in the component tree, React treats them as the same element and preserves the existing DOM node rather than destroying and recreating it. During this process, React updates the element's props, but maintains the DOM element's internal state, including any text the user has typed.</p>
 <p>Note that here React still fully re-renders the component when <code>isEditing</code> changes. However, during reconciliation, React's diffing algorithm determines that the DOM node can be reused rather than recreated. This demonstrates that "DOM reuse" is not equivalent to "component render skip" - you can render a component again and still reuse DOM nodes.</p>
@@ -235,32 +239,30 @@ const SomeOutsideComponent = () =&gt; {
 <p>React compares the props of a memoized component with <code>Object.is</code> to check if it can skip rendering that sub-tree.</p>
 <pre><code class="lang-js">// Without memo, it still re-renders even though props didn't change
 const Child = React.memo(({ onClick, items }) =&gt; {
- return &lt;div onClick={onClick}&gt;{items.join(', ')}&lt;/div&gt;;
+  return &lt;div onClick={onClick}&gt;{items.join(", ")}&lt;/div&gt;;
 });
 
 const App = () =&gt; {
- const [count, setCount] = useState(0);
- const [filter, setFilter] = useState('');
+  const [count, setCount] = useState(0);
+  const [filter, setFilter] = useState("");
 
- const handleClick = useCallback(() =&gt; {
-   console.log('clicked');
- }, []);
+  const handleClick = useCallback(() =&gt; {
+    console.log("clicked");
+  }, []);
 
- const filteredItems = useMemo(() =&gt; {
-   return ['apple', 'banana', 'cherry'].filter(item =&gt; 
-     item.includes(filter)
-   );
- }, [filter]);
+  const filteredItems = useMemo(() =&gt; {
+    return ["apple", "banana", "cherry"].filter(item =&gt; item.includes(filter));
+  }, [filter]);
 
- return (
-   &lt;div&gt;
-     &lt;button onClick={() =&gt; setCount(count + 1)}&gt;Count: {count}&lt;/button&gt;
-     &lt;input onChange={(e) =&gt; setFilter(e.target.value)} /&gt;
+  return (
+    &lt;div&gt;
+      &lt;button onClick={() =&gt; setCount(count + 1)}&gt;Count: {count}&lt;/button&gt;
+      &lt;input onChange={(e) =&gt; setFilter(e.target.value)} /&gt;
 
-     {/* Will NOT re-render when count changes */}
-     &lt;Child onClick={handleClick} items={filteredItems} /&gt;
-   &lt;/div&gt;
- );
+      {/* Will NOT re-render when count changes */}
+      &lt;Child onClick={handleClick} items={filteredItems} /&gt;
+    &lt;/div&gt;
+  );
 };
 </code></pre>
 <blockquote><p><code>useCallback</code> and <code>useMemo</code> for props don’t prevent re-renders by themselves. They only create stable references. <code>React.memo</code> is what actually checks those references and prevents re-renders.</p>
@@ -274,7 +276,7 @@ const App = () =&gt; {
     &lt;ExpensiveTree&gt;
       &lt;p&gt;Hello, world!&lt;/p&gt;
     &lt;/ExpensiveTree&gt;
-  )
+  );
 }
 
 function ExpensiveComponent({ children }) {
@@ -283,9 +285,9 @@ function ExpensiveComponent({ children }) {
       I'm expensive!
       {children}
     &lt;/div&gt;
-  )
+  );
 }
-const ExpensiveTree = React.memo(ExpensiveComponent)
+const ExpensiveTree = React.memo(ExpensiveComponent);
 </code></pre>
 <p>How to memoize below code correctly? We can re-write the code to make the flow clearer by using children prop which accepts a React element. We re-create this object on every render, so that children prop changed, and will trigger re-render. And since <code>SomeOtherComponent</code>'s definition was re-created, it will trigger its re-render as well.</p>
 <pre><code class="lang-js">&lt;VerySlowComponent&gt;
@@ -305,7 +307,7 @@ export const SomeComponent = () =&gt; {
 </code></pre>
 <h4>Client wrapper for server components</h4>
 <p>Instead of turning the <code>ServerComponent</code> into a client component, we can pass it down as a child to a client component wrapper that handles the state and UI rendering. The server component is still responsible only for data fetching. <em>This also means that wrapping your root layout in the client component does not automatically turn your entire app into a client rendering.</em></p>
-<pre><code class="lang-js">'use client';
+<pre><code class="lang-js">"use client";
 
 function ClientWrapper({ children }) {
   const [visible, setVisible] = useState(true);
@@ -334,18 +336,19 @@ function Page() {
 
   return (
     &lt;ShowMore initial={5}&gt;
-      {categories.map((category) =&gt; (
-        &lt;div key={category.id}&gt;{category.name}&lt;/div&gt;
-      ))}
+      {categories.map((category) =&gt; &lt;div key={category.id}&gt;{category.name}
+      &lt;/div&gt;)}
     &lt;/ShowMore&gt;
   );
 }
 
-'use client';
+"use client";
 
 export default function ShowMore({ children, initial = 5 }) {
   const [expanded, setExpanded] = useState(false);
-  const items = expanded ? children : Children.toArray(children).slice(0, initial);
+  const items = expanded
+    ? children
+    : Children.toArray(children).slice(0, initial);
   const remaining = Children.count(children) - initial;
 
   return (
@@ -354,7 +357,7 @@ export default function ShowMore({ children, initial = 5 }) {
       {remaining &gt; 0 &amp;&amp; (
         &lt;div&gt;
           &lt;button onClick={() =&gt; setExpanded(!expanded)}&gt;
-            {expanded ? 'Show Less' : `Show More (${remaining})`}
+            {expanded ? "Show Less" : `Show More (${remaining})`}
           &lt;/button&gt;
         &lt;/div&gt;
       )}
@@ -430,7 +433,7 @@ function commitToDOM() {
 </blockquote>
 <pre><code class="lang-js">useEffect(() =&gt; {
   // Wrong: This Effect fires twice in development, exposing a problem in the code.
-  fetch('/api/buy', { method: 'POST' });
+  fetch("/api/buy", { method: "POST" });
 }, []);
 </code></pre>
 <p>You wouldn’t want to buy the product twice. This is also why you shouldn’t put this logic in an Effect. Buying is not caused by rendering; it’s caused by a specific interaction. It should run only when the user presses the button. Delete the Effect and move it into the Buy button event handler.</p>
@@ -439,8 +442,8 @@ function commitToDOM() {
 <pre><code class="lang-js">function ChatRoom({ roomId, theme }) {
   useEffect(() =&gt; {
     const connection = createConnection(serverUrl, roomId);
-    connection.on('connected', () =&gt; {
-      showNotification('Connected!', theme);
+    connection.on("connected", () =&gt; {
+      showNotification("Connected!", theme);
     });
     connection.connect();
     return () =&gt; connection.disconnect();
@@ -450,12 +453,12 @@ function commitToDOM() {
 </code></pre>
 <p>Since <code>theme</code> is a dependency, the chat also re-connects every time you switch between the dark and the light theme. That’s not great! In other words, you need a way to separate this non-reactive logic from the reactive Effect around it.</p>
 <pre><code class="lang-js">const onConnected = useEffectEvent(() =&gt; {
-  showNotification('Connected!', theme);
+  showNotification("Connected!", theme);
 });
 
 useEffect(() =&gt; {
   const connection = createConnection(serverUrl, roomId);
-  connection.on('connected', () =&gt; {
+  connection.on("connected", () =&gt; {
     onConnected();
   });
   connection.connect();
@@ -477,7 +480,7 @@ useEffect(() =&gt; {
 <li>Like state, refs let you retain information between re-renders of a component.</li>
 <li>Unlike state, setting the ref’s current value does not trigger a re-render.</li>
 </ul>
-<pre><code class="lang-js">import React, { useState, useEffect, useRef } from 'react';
+<pre><code class="lang-js">import React, { useEffect, useRef, useState } from "react";
 
 function usePrevious(value) {
   const ref = useRef();
@@ -508,11 +511,12 @@ function Counter() {
 <h4><code>ref</code> callback function</h4>
 <pre><code class="lang-js">React.useEffect(() =&gt; {
   // ref.current is always null when this runs
-  ref.current?.focus()
-}, [])
+  ref.current?.focus();
+}, []);
 
-
-{show &amp;&amp; &lt;input ref={ref} /&gt;}
+{
+  show &amp;&amp; &lt;input ref={ref} /&gt;;
+}
 </code></pre>
 <p>The input is not rendered at first, ref is still null, then effect runs, does nothing. When input is shown, ref will be filled, but will not be focussed because effect won't run again.</p>
 <p>This is where callback refs come into play. Instead of a ref object, you may <strong>pass a function to the <code>ref</code> attribute</strong>. When the <code>&lt;div&gt;</code> DOM node is added to the screen, React will call your <code>ref</code> callback with the DOM node as the argument. When that <code>&lt;div&gt;</code> DOM node is removed, React will call your <code>ref</code> callback with null. React will also call your <code>ref</code> callback whenever you pass a different <code>ref</code> callback.</p>
@@ -528,10 +532,10 @@ function Counter() {
   ref={(node) =&gt; {
     ref.current = node;
   }}
-/&gt;
+/&gt;;
 </code></pre>
 <pre><code class="lang-tsx">// move the function out of the component
-// never re-create the function during a re-render 
+// never re-create the function during a re-render
 const scroller = (node: HTMLDivElement | null) =&gt; {
   node?.scrollIntoView({ behavior: "smooth" });
 };
@@ -660,7 +664,7 @@ PostCard.Buttons = function PostCardButtons() {
 
     const onClick = () =&gt; {
       // console.info('Log on click something');
-      log('Log on click something');
+      log("Log on click something");
       props.onClick();
     };
 
@@ -733,14 +737,12 @@ const ListItemImpl = ({ item }) =&gt; (
 // Passing the component as a prop
 // Instead of &lt;List listItems={listItems} highContrast={highContrast} /&gt;
 // Do this:
-&lt;List listItems={listItems} ListItem={ListItemImpl} /&gt;
+&lt;List listItems={listItems} ListItem={ListItemImpl} /&gt;;
 
 // Using the injected component
 const List = ({ listItems, ListItem }) =&gt; (
   &lt;ul&gt;
-    {listItems.map((item) =&gt; (
-      &lt;ListItem key={item.id} item={item} /&gt;
-    ))}
+    {listItems.map((item) =&gt; &lt;ListItem key={item.id} item={item} /&gt;)}
   &lt;/ul&gt;
 );
 </code></pre>
@@ -759,7 +761,7 @@ const List = ({ listItems, ListItem }) =&gt; (
   );
 };
 </code></pre>
-<p>Calling <code>setLanguage</code> in a child via context updates the state in App. When state updates, React re-renders the component where that state lives — here, that’s App. Then all components that call  <code>useContext(LanguageContext)</code> see the new value and re-render.</p>
+<p>Calling <code>setLanguage</code> in a child via context updates the state in App. When state updates, React re-renders the component where that state lives — here, that’s App. Then all components that call <code>useContext(LanguageContext)</code> see the new value and re-render.</p>
 <blockquote><p>Even if <code>language</code> didn’t change but App re-rendered for some other reason, you’d still be creating a new <code>{ language, setLanguage }</code> object each time. That would cause all consumers to re-render unnecessarily. You can memoize the value: <code>const value = useMemo(() =&gt; ({ language, setLanguage }), [language])</code>.</p>
 </blockquote>
 <p>With MobX you don’t lift state into React, you keep it in a MobX store. Components re-render only if they directly use an observable value.</p>
