--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -50,8 +50,8 @@
 <h3>Establish third-party connections early</h3>
 <p>Every new origin we need to visit needs a connection opening, and that can be very costly: DNS resolution, TCP handshakes, and TLS negotiation all add up, and the story gets worse the higher the latency of the connection is.</p>
 <p>Server requests to third-party origins can also impact LCP. Use <code>rel="preconnect"</code> to inform the browser that your page intends to establish a connection as soon as possible. You can also use <code>dns-prefetch</code> to resolve DNS lookups faster.</p>
-<pre><code class="lang-html">&lt;link rel="preconnect" href="https://example.com"&gt;
-&lt;link rel="dns-prefetch" href="https://example.com"&gt;
+<pre><code class="lang-html">&lt;link rel="preconnect" href="https://example.com" /&gt;
+&lt;link rel="dns-prefetch" href="https://example.com" /&gt;
 </code></pre>
 <p>Modern browsers try their best to anticipate what connections a page will need, but they cannot reliably predict them all. The good news is that you can give them a hint. Adding <code>rel=preconnect</code> to a <code>&lt;link&gt;</code> informs the browser that your page intends to establish a connection to another domain, and that you'd like the process to start as soon as possible. Resources will load more quickly because the setup process has already been completed by the time the browser requests them. But it's ultimately up to the browser to decide whether to execute them. (Setting up and keeping a connection open is a lot of work, so the browser might choose to ignore resource hints or execute them partially depending on the situation.)</p>
 <p>While <code>dns-prefetch</code> only performs a DNS lookup, <code>preconnect</code> establishes a full connection (DNS, TCP, TLS) to a server. This process includes DNS resolution, as well as establishing the TCP connection, and performing the TLS handshake. If a page needs to make connections to many third-party domains, preconnecting all of them is counterproductive. <strong>The preconnect hint is best used for only the most critical connections. For all the rest, use <code>&lt;link rel=dns-prefetch&gt;</code> to save time on the first step, the DNS lookup</strong>.</p>
@@ -64,9 +64,9 @@
 </ul>
 <p>For script tags, <strong><code>&lt;script async&gt;</code></strong> downloads the file during HTML parsing and will pause the HTML parser to execute it when it has finished downloading. Async scripts are executed as soon as the script is loaded, so it doesn't guarantee the order of execution. <strong><code>&lt;script defer&gt;</code></strong> downloads the file during HTML parsing and will only execute it after the parser has completed. The good thing about defer is that you can guarantee the order of the script execution. <em>When you have both async and defer, <code>async</code> takes precedence and the script will be async.</em></p>
 <p>If you know that a particular resource should be prioritized, use <code>&lt;link rel="preload"&gt;</code> to fetch it sooner. By preloading a certain resource, you are telling the browser that you would like to fetch it sooner than the browser would discover it because you are certain that it is important for the current page. <strong>Preloading is best suited for resources typically discovered late by the browser</strong>. The browser caches preloaded resources so they are available immediately when needed. It doesn't execute the scripts or apply the stylesheets. Supplying the <code>as</code> attribute helps the browser set the priority of the prefetched resource according to its type and determine whether the resource already exists in the cache.</p>
-<pre><code class="lang-html">&lt;link rel="preload" as="script" href="script.js"&gt;
-&lt;link rel="preload" as="style" href="style.css"&gt;
-&lt;link rel="preload" as="image" href="img.png"&gt;
+<pre><code class="lang-html">&lt;link rel="preload" as="script" href="script.js" /&gt;
+&lt;link rel="preload" as="style" href="style.css" /&gt;
+&lt;link rel="preload" as="image" href="img.png" /&gt;
 </code></pre>
 <p>Another one, <code>&lt;link rel="prefetch"&gt;</code> is a low priority resource hint that allows the browser to fetch resources in the background (idle time) that might be needed later, and store them in the browser's cache. It is helpful when you know you’ll need that resource on a subsequent page, and you want to cache it ahead of time.</p>
 <p>Tools can be used:</p>
@@ -100,14 +100,28 @@
 <li><code>domContentLoadedEventEnd</code> event captures the time at which all JS wrapped in a <code>DOMContentLoaded</code> event listener has finished running.</li>
 <li><code>domInteractive</code> is the event before <code>domContentLoadedEventStart</code>. This is the moment the browser has finished parsing all synchronous DOM work. Basically, the browser is now at the <code>&lt;/html&gt;</code> tag and ready to run your deferred JavaScript.</li>
 </ul>
-<pre><code class="lang-js">window.addEventListener('load', (event) =&gt; {
+<pre><code class="lang-js">window.addEventListener("load", (event) =&gt; {
   const timings = window.performance.timing;
-  const start   = timings.navigationStart;
+  const start = timings.navigationStart;
 
-  console.log('Ready to start running `defer`ed code: ' + (timings.domInteractive - start + 'ms'));
-  console.log('`defer`ed code finished: ' + (timings.domContentLoadedEventEnd - start + 'ms'));
-  console.log('`defer`ed code duration: ' + (timings.domContentLoadedEventStart - timings.domInteractive + 'ms'));
-  console.log('`DOMContentLoaded`- wrapped code duration: ' + (timings.domContentLoadedEventEnd - timings.domContentLoadedEventStart + 'ms'));
+  console.log(
+    "Ready to start running `defer`ed code: " +
+      (timings.domInteractive - start + "ms")
+  );
+  console.log(
+    "`defer`ed code finished: " +
+      (timings.domContentLoadedEventEnd - start + "ms")
+  );
+  console.log(
+    "`defer`ed code duration: " +
+      (timings.domContentLoadedEventStart - timings.domInteractive + "ms")
+  );
+  console.log(
+    "`DOMContentLoaded`- wrapped code duration: " +
+      (timings.domContentLoadedEventEnd -
+        timings.domContentLoadedEventStart +
+        "ms")
+  );
 });
 </code></pre>
 <p>The tab spinner stops after the <code>load</code> event. This includes all images, stylesheets, scripts (even async or defer), fonts and other subresources.</p>
@@ -182,7 +196,7 @@
 }
 
 h1 {
-  font-family: "Open Sans"
+  font-family: "Open Sans";
 }
 </code></pre>
 <p>A common misconception is that a font is requested when a <code>@font-face</code> declaration is encountered—this is not true. By itself, <code>@font-face</code> declaration does not trigger font download. Rather, a font is downloaded only if it is referenced by styling that is used on the page. In other words, in the example above, <code>Open Sans</code> would only be downloaded if the page contained a <code>&lt;h1&gt;</code> element.</p>
@@ -190,8 +204,8 @@ h1 {
 <p>If your site loads fonts from a third-party site, it is highly recommended that you use the <code>preconnect</code> resource hint to establish early connections with the third-party origin. To preconnect the connection that is used to download the font file, add a separate preconnect resource hint that uses the <code>crossorigin</code> attribute. Unlike stylesheets, font files must be sent over a CORS connection.</p>
 <pre><code class="lang-html">&lt;head&gt;
   &lt;!-- These link tags should be placed as early in the document as possible. --&gt;
-  &lt;link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-  &lt;link rel="preconnect" href="https://fonts.gstatic.com" crossorigin&gt;
+  &lt;link rel="preconnect" href="https://fonts.googleapis.com" /&gt;
+  &lt;link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /&gt;
 &lt;/head&gt;
 </code></pre>
 <p>Font files typically include a large number of glyphs for all the various characters they support. But you may not need all the characters on your page and can reduce the size of font files by subsetting fonts. The <a href="https://developer.mozilla.org/docs/Web/CSS/@font-face/unicode-range">unicode-range</a> descriptor in the <code>@font-face</code> declartion informs the browser which characters a font can be used for. It is commonly used to serve different font files depending on the language used by page content.</p>
@@ -211,7 +225,7 @@ h1 {
 <li>Life of a Pixel: <a href="https://bit.ly/lifeofapixel">https://bit.ly/lifeofapixel</a></li>
 <li>A collection of the best practices that the Chrome DevRel team believes are the most effective ways to improve Core Web Vitals performance: <a href="https://web.dev/articles/top-cwv">https://web.dev/articles/top-cwv</a></li>
 <li>Web Performance Snippets: <a href="https://github.com/nucliweb/webperf-snippets">https://github.com/nucliweb/webperf-snippets</a></li>
+<li>Chrome DevTools for Debugging Web Performance: <a href="https://calendar.perfplanet.com/2025/chrome-devtools-for-debugging-web-performance">https://calendar.perfplanet.com/2025/chrome-devtools-for-debugging-web-performance</a></li>
 <li>Get your <code>&lt;head&gt;</code> in order: <a href="https://github.com/rviscomi/capo.js">https://github.com/rviscomi/capo.js</a></li>
-<li>Inline your app's critical CSS and lazy-load the rest: <a href="https://github.com/GoogleChromeLabs/critters">https://github.com/GoogleChromeLabs/critters</a></li>
 <li>Blazing Fast Websites with Speculation Rules: <a href="https://www.debugbear.com/blog/speculation-rules">https://www.debugbear.com/blog/speculation-rules</a></li>
 </ul>
