--- a/kexizeroing.github.io/Rice course - intro to database.html
+++ b/kexizeroing.github.io/Rice course - intro to database.html
@@ -42,7 +42,7 @@
 <li>Projection π: Projection removes attributes</li>
 <li>Selection σ: Selection removes tuples</li>
 <li>Rename ρ: Renames attribute or relation</li>
-<li>Assignment ←: For convenience, assigns the relation to a temporary variable </li>
+<li>Assignment ←: For convenience, assigns the relation to a temporary variable</li>
 <li>Join: Cartesian product (aka: cross product)，Theta Join，Natural Join</li>
 <li>Union, Intersection, Difference</li>
 </ul>
@@ -95,7 +95,7 @@ WHERE EXISTS (
  EXISTS 用于检查子查询是否至少会返回一行数据，该子查询实际上并不返回任何数据，而是返回 True/False
 */
 </code></pre>
-<p><strong>Aggregations and Grouping</strong><br/>
+<p><strong>Aggregations and Grouping</strong>\
 In database management, an aggregate function is a function where the values of multiple rows are grouped together to form a single value of more significant meaning.</p>
 <ul>
 <li>SUM, AVG, COUNT, MAX, MIN</li>
@@ -222,7 +222,7 @@ HAVING COUNT(*) &gt;= 3
 <ul>
 <li>BCNF is an advanced version of the third normal form, and it is also known as the 3.5 Normal Form.</li>
 <li>3rd Normal Form +</li>
-<li>X should be a superkey for every nontrivial functional dependency X -&gt; Y </li>
+<li>X should be a superkey for every nontrivial functional dependency X -&gt; Y</li>
 </ul>
 <blockquote><p>Thoughts on normalization</p>
 <ul>
@@ -243,7 +243,7 @@ SELECT * FROM Users WHERE UserId = 105; DROP TABLE Suppliers;
 -- sql = 'SELECT * FROM Users WHERE Name ="' + uName + '" AND Pass ="' + uPass + '"'
 SELECT * FROM Users WHERE Name ="" or ""="" AND Pass ="" or ""=""
 </code></pre>
-<p><strong>Indexing</strong><br/>
+<p><strong>Indexing</strong>\
 B+ Tree is the most common type of storage for RDBMSs</p>
 <ul>
 <li>Designed for accessing data on disk</li>
@@ -254,7 +254,7 @@ B+ Tree is the most common type of storage for RDBMSs</p>
 <li>Composed of (key, ptr) pairs. Mapping a key value to a disk location</li>
 <li>Search Key: Attribute or set of attributes used to look up records</li>
 </ul>
-<p><strong>Transaction</strong><br/>
+<p><strong>Transaction</strong>\
 Group of operations performed together, follow the ACID properties</p>
 <ul>
 <li>Atomicity: All or nothing</li>
@@ -275,7 +275,7 @@ COMMIT;
 <li>串行的 (serial): 如果在一个调度中，属于同一个事务的指令紧挨在一起 (no overlap between transactions)，我们就称这个调度是串行的。</li>
 <li>可串行化的 (Serializable): 几个事务并行执行是正确的，当且仅当其结果与某一次序串行执行它们的结果相同。</li>
 </ul>
-<p><strong>Isolation Level</strong><br/>
+<p><strong>Isolation Level</strong>\
 Dirty data: data written by a transaction that has not been committed</p>
 <ul>
 <li>dirty read: T2 修改了一行数据，然后 T1 在 T2 还未提交修改操作之前读取了被修改的行。此时如果 T2 回滚了修改操作，那么 T1 读取的数据就是是从未存在过的。</li>
@@ -290,33 +290,39 @@ Dirty data: data written by a transaction that has not been committed</p>
 <li>SERIALIZABLE，其他事务对该表的写操作将被挂起，这是隔离级别中最严格的。范围锁，Prevents other transactions from inserting tuples until this transaction completes. 隔离级别越高，执行效率就越低，像 Serializable 这样的级别，就是锁表的方式，使得其他线程只能在锁外等待。</li>
 </ul>
 <ol>
-<li>READ UNCOMMITTED<ul>
+<li>READ UNCOMMITTED</li>
+</ol>
+<ul>
 <li>No locks</li>
 </ul>
-</li>
-<li>READ COMMITTED<ul>
+<ol>
+<li>READ COMMITTED</li>
+</ol>
+<ul>
 <li>Read locks released when no longer needed</li>
 <li>Write locks held until transaction ends</li>
 <li>No range locks</li>
 </ul>
-</li>
-<li>REPEATABLE READ<ul>
+<ol>
+<li>REPEATABLE READ</li>
+</ol>
+<ul>
 <li>Read and Write locks held until transaction ends</li>
 <li>No range locks</li>
 </ul>
-</li>
-<li>SERIALIZABLE<ul>
+<ol>
+<li>SERIALIZABLE</li>
+</ol>
+<ul>
 <li>Read and Write locks held until transaction ends</li>
 <li>Range locks</li>
 </ul>
-</li>
-</ol>
-<p><strong>How can we deal with failures? --Logs</strong><br/>
+<p><strong>How can we deal with failures? --Logs</strong>\
 undo 日志用于记录事务开始前的状态，用于事务失败时的回滚操作；redo 日志记录事务执行后的状态，用来恢复未写入 data file 的已成功事务更新的数据。例如某一事务 T1，其对数据 X 进行修改，设 X 的原值是 5，修改后的值为 15，那么 Undo 日志为 <code>&lt;T1, X, 5&gt;</code>，Redo 日志为 <code>&lt;T1, X, 15&gt;</code>.</p>
-<blockquote><p>redo 日志<br/>
+<blockquote><p>redo 日志\
 当数据库对数据做修改的时候，需要把数据所在的 page 从磁盘读到 buffer pool 中，然后在 buffer pool 中进行修改，这时候 buffer 中的数据页就与磁盘上的数据页内容不一致（脏页），此时的数据尚在缓存中还没有持久化，如果 DB 出现故障就会导致丢失数据，因此，Innodb 会在 buffer pool 中的 data page 变更结束后，将相应的修改记录到 redo log 里进行持久化。redo log 记录某数据块被修改后的值，可以用来恢复未刷新到磁盘上的数据，并且总是日志先行，它先于脏页刷新到磁盘上。（在持久化数据文件前，保证之前的 redo 日志已经写到磁盘 flush the log to disk）</p>
 </blockquote>
-<p><strong>NoSQL</strong><br/>
+<p><strong>NoSQL</strong>\
 To address the need for storage of non-relational data</p>
 <ul>
 <li>Key-value stores (MemcacheDB)</li>
