--- a/kexizeroing.github.io/Screen and webcam recording.html
+++ b/kexizeroing.github.io/Screen and webcam recording.html
@@ -1,5 +1,5 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/screen-webcam-recording.md">仓库源文</a>，<a href="https://kexizeroing.github.io/screen-webcam-recording">站点原文</a></h2>
-<p>Let's explore how far browser technology has come in the way of screen sharing and recording, and attempt to create a tool that would allow us to quickly record a short video of our screen or webcam.  All of this is powered by browser APIs using no external services.</p>
+<p>Let's explore how far browser technology has come in the way of screen sharing and recording, and attempt to create a tool that would allow us to quickly record a short video of our screen or webcam. All of this is powered by browser APIs using no external services.</p>
 <h3>Capturing the screen</h3>
 <p>To allow the user to capture their screen, we can use the <code>MediaDevices.getDisplayMedia()</code> method available to us on the <code>navigator</code> global in modern browsers.</p>
 <pre><code class="lang-js">const captureScreen = async () =&gt; {
@@ -7,7 +7,7 @@
   const screenShareStream = await navigator.mediaDevices.getDisplayMedia({
     video: true,
   });
-}
+};
 </code></pre>
 <p>Now we have reference to a <code>MediaStream</code> instance returned from <code>getDisplayMedia</code>, and we’ll eventually want to use this stream to draw the captured display onto our canvas. However, the canvas API does not handle any sort of video decoding – so we’ll pass this media stream into an HTML5 <code>&lt;video&gt;</code> element as its <code>srcObject</code> property.</p>
 <pre><code class="lang-js">let screenShareVideoRef: HTMLVideoElement;
@@ -92,12 +92,12 @@ const ctx = canvas.getContext("2d");
 
 const startDrawing = () =&gt; {
   requestAnimationFrame(loop);
-}
+};
 
 const loop = () =&gt; {
-  draw();   
+  draw();
   requestAnimationFrame(loop);
-}
+};
 
 const draw = () =&gt; {
   const { width, height } = canvas;
@@ -112,7 +112,7 @@ const draw = () =&gt; {
   // draw our webcam in bottom-right
   // would need to do real math to get proper aspect ratio.
   ctx.drawImage(webcamVideoRef, width - 200, height - 100, 200, 100);
-}
+};
 </code></pre>
 <blockquote><p>The <code>CanvasRenderingContext2D.drawImage()</code> method of the Canvas 2D API provides different ways to draw an image onto the canvas. The specification permits any canvas image source, specifically, an <code>HTMLImageElement</code>, an <code>SVGImageElement</code>, an <code>HTMLVideoElement</code> or an <code>HTMLCanvasElement</code>.</p>
 </blockquote>
@@ -127,7 +127,7 @@ const canvasStream = canvas.captureStream(30);
 // combine the canvas stream and mic stream by collecting tracks from each
 const combinedStream = new MediaStream([
   ...canvasStream.getTracks(),
-  ...micStream.getTracks()
+  ...micStream.getTracks(),
 ]);
 </code></pre>
 <p>Now that we have a combined media stream, we can use the <code>MediaRecorder</code> API to record it. The general flow for using the <code>MediaRecorder</code> is roughly as follows:</p>
