--- a/kexizeroing.github.io/Server-sent events with examples.html
+++ b/kexizeroing.github.io/Server-sent events with examples.html
@@ -12,13 +12,13 @@
 <li>Unlike WebSockets, server-sent events are unidirectional; that is, data messages are delivered in one direction, from the server to the client. That makes them an excellent choice when there's no need to send data from the client to the server in message form. For example, handling things like social media status updates or news feeds.</li>
 <li>One potential downside of using Server-Sent Events is the limitations in data format. Since SSE is restricted to transporting UTF-8 messages, binary data is not supported. <strong>When not used over HTTP/2, another limitation is the restricted number of concurrent connections per browser</strong>. With only six concurrent open SSE connections allowed at any given time, opening multiple tabs with SSE connections can become a bottleneck.</li>
 </ul>
-<pre><code class="lang-js">const express = require('express');
+<pre><code class="lang-js">const express = require("express");
 const app = express();
 
-app.get('/real-time-updates', (req, res) =&gt; {
-  res.setHeader('Content-Type', 'text/event-stream');
-  res.setHeader('Cache-Control', 'no-cache');
-  res.setHeader('Connection', 'keep-alive');
+app.get("/real-time-updates", (req, res) =&gt; {
+  res.setHeader("Content-Type", "text/event-stream");
+  res.setHeader("Cache-Control", "no-cache");
+  res.setHeader("Connection", "keep-alive");
 
   const id = Date.now();
 
@@ -36,7 +36,7 @@ app.get('/real-time-updates', (req, res) =&gt; {
   }, 1000);
 });
 
-app.listen(3000, () =&gt; console.log('Listening on port 3000...'));
+app.listen(3000, () =&gt; console.log("Listening on port 3000..."));
 </code></pre>
 <pre><code class="lang-html">&lt;body&gt;
   &lt;h1&gt;Random Numbers:&lt;/h1&gt;
@@ -85,21 +85,21 @@ app.listen(3000, () =&gt; console.log('Listening on port 3000...'));
 <blockquote><p>The <code>id:</code> line sets the event ID for a particular message. When the browser receives it, it automatically stores the value in the background. If <code>id</code> is omitted, the browser does not track any event ID and will not send a Last-Event-ID on reconnect.</p>
 </blockquote>
 <p>With the default browser EventSource API, you can only make GET requests, and you cannot pass in a request body and custom request headers. <a href="https://github.com/Azure/fetch-event-source">fetch-event-source</a> from Azure provides a better API for making Event Source requests. It works by making a fetch request to a streaming endpoint and reading the response using a <code>ReadableStream</code>. As data arrives, it decodes the chunks and parses them using the SSE format.</p>
-<pre><code class="lang-js">import { fetchEventSource } from '@microsoft/fetch-event-source';
+<pre><code class="lang-js">import { fetchEventSource } from "@microsoft/fetch-event-source";
 
 const ctrl = new AbortController();
-await fetchEventSource('/api/sse', {
-  method: 'POST',
+await fetchEventSource("/api/sse", {
+  method: "POST",
   headers: {
-    'Content-Type': 'application/json',
+    "Content-Type": "application/json",
   },
   body: JSON.stringify({
-    foo: 'bar'
+    foo: "bar",
   }),
   signal: ctrl.signal,
-  onopen(response) { },
-  onclose() { },
-  onmessage(message) { },
+  onopen(response) {},
+  onclose() {},
+  onmessage(message) {},
 });
 </code></pre>
 <blockquote><p>The browser's built-in <code>EventSource</code> API has several limitations:</p>
@@ -157,21 +157,21 @@ console.log(decoded); // 'hello'
 return new Response(
   new ReadableStream({
     async start(controller) {
-      const suspensePromises = []
+      const suspensePromises = [];
 
-      controller.enqueue(encoder.encode('&lt;html lang="en"&gt;'))
-      controller.enqueue(encoder.encode('&lt;head&gt;'))
+      controller.enqueue(encoder.encode("&lt;html lang=\"en\"&gt;"));
+      controller.enqueue(encoder.encode("&lt;head&gt;"));
       // Load the code to allow "unsuspense"
       controller.enqueue(
-        enconder.encode('&lt;script src="unsuspense.js"&gt;&lt;/script&gt;')
-      )
-      controller.enqueue(encoder.encode('&lt;/head&gt;'))
-      controller.enqueue(encoder.encode('&lt;body&gt;'))
+        enconder.encode("&lt;script src=\"unsuspense.js\"&gt;&lt;/script&gt;"),
+      );
+      controller.enqueue(encoder.encode("&lt;/head&gt;"));
+      controller.enqueue(encoder.encode("&lt;body&gt;"));
 
       // Add a placeholder (suspense)
       controller.enqueue(
-        encoder.encode('&lt;div id="suspensed:1"&gt;Loading...&lt;/div&gt;')
-      )
+        encoder.encode("&lt;div id=\"suspensed:1\"&gt;Loading...&lt;/div&gt;"),
+      );
 
       // Load the content - without "await"
       suspensePromises.push(
@@ -179,25 +179,27 @@ return new Response(
           // enqueue the real content
           controller.enqueue(
             encoder.encode(
-              `&lt;template id="suspensed-content:1"&gt;${content}&lt;/template&gt;`
-            )
-          )
+              `&lt;template id="suspensed-content:1"&gt;${content}&lt;/template&gt;`,
+            ),
+          );
           // enqueue the script to replace the suspensed content to the real one
-          controller.enqueue(encoder.encode(`&lt;script&gt;unsuspense('1')&lt;/script&gt;`))
-        })
-      )
+          controller.enqueue(
+            encoder.encode(`&lt;script&gt;unsuspense('1')&lt;/script&gt;`),
+          );
+        }),
+      );
 
-      controller.enqueue(encoder.encode('&lt;div class="foo"&gt;Bar&lt;/div&gt;'))
-      controller.enqueue(encoder.encode('&lt;/body&gt;'))
-      controller.enqueue(encoder.encode('&lt;/html&gt;'))
+      controller.enqueue(encoder.encode("&lt;div class=\"foo\"&gt;Bar&lt;/div&gt;"));
+      controller.enqueue(encoder.encode("&lt;/body&gt;"));
+      controller.enqueue(encoder.encode("&lt;/html&gt;"));
 
       // Wait for all suspended content before closing the stream
-      await Promise.all(suspensePromises)
+      await Promise.all(suspensePromises);
 
-      controller.close()
+      controller.close();
     },
-  })
-)
+  }),
+);
 </code></pre>
 <h2>Download streamed data using vanilla JavaScript</h2>
 <ul>
@@ -206,7 +208,7 @@ return new Response(
 </ul>
 <pre><code class="lang-js">const url = "https://api.openai.com/v1/chat/completions";
 const apiKey = `your_api_key_here`;
-// Create an AbortController to control and cancel the fetch request, 
+// Create an AbortController to control and cancel the fetch request,
 // when the user hits the stop button.
 const controller = new AbortController();
 
@@ -242,7 +244,7 @@ for await (const chunk of response.body) {
   for (const line of lines) {
     const {
       choices: [
-        { 
+        {
           delta: { content },
         },
       ],
