--- a/kexizeroing.github.io/Setup a new mac.html
+++ b/kexizeroing.github.io/Setup a new mac.html
@@ -2,13 +2,13 @@
 <h2>Setting up development environment</h2>
 <ol>
 <li><p>The first step is getting around the firewall. You may <del>download <a href="https://github.com/yichengchen/clashX/releases">clashX</a></del> and acquire subscription links from ss.<em>（2023 年 11 月 Clash For Windows 删库，随后 Clash 内核、Clash Meta、For Android、ClashX 也都一起删库或归档停止维护）.</em> Use <a href="https://github.com/Shadowsocks-Wiki/shadowsocks/blob/master/zh_CN/trojan/clash-verge-rev-setup-guide.md">Clash Verge Rev</a> instead.</p>
-<pre><code class="lang-sh"> # Tell command-line programs to use a proxy server.
- export http_proxy=http://127.0.0.1:7890
- export https_proxy=http://127.0.0.1:7890
+<pre><code class="lang-sh"># Tell command-line programs to use a proxy server.
+export http_proxy=http://127.0.0.1:7890
+export https_proxy=http://127.0.0.1:7890
 
- # romove the proxy
- unset http_proxy
- unset https_proxy
+# romove the proxy
+unset http_proxy
+unset https_proxy
 </code></pre>
 </li>
 <li><p>Install <a href="https://brew.sh">Homebrew</a> package manager, and you can install almost any app from the command line. Make sure everything is up to date <code>brew update</code>. (M1 installation at <code>/opt/homebrew/</code>, Intel at <code>/usr/local/Cellar/</code>)</p>
@@ -18,14 +18,14 @@
 <li><p>Check <code>git --version</code> and may need to install Command Line Developer Tools.</p>
 </li>
 <li><p>Install VSCode, Chrome, iTerm2, Docker through Homebrew, then you can use <code>brew list</code> and <code>brew info google-chrome</code> to check.</p>
-<pre><code class="lang-shell"> # refer to https://formulae.brew.sh
- brew install git yarn make
- brew install --cask visual-studio-code google-chrome iterm2 docker
+<pre><code class="lang-shell"># refer to https://formulae.brew.sh
+brew install git yarn make
+brew install --cask visual-studio-code google-chrome iterm2 docker
 
- # replace with other mirror address (default is using GitHub)
- cd `brew --repo`
- git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
- brew update
+# replace with other mirror address (default is using GitHub)
+cd `brew --repo`
+git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
+brew update
 </code></pre>
 <blockquote><ul>
 <li><code>cask</code> is no longer a <code>brew</code> command. When you want to install a Cask, just do <code>brew install</code> or <code>brew install --cask</code> instead of <code>brew cask install</code></li>
@@ -35,7 +35,8 @@
 </li>
 <li><p>Catalina comes with <code>zsh</code> as the default shell. Install <a href="https://github.com/ohmyzsh/ohmyzsh">Oh My Zsh</a> and check the <code>.zshrc</code> file.</p>
 <ul>
-<li><p><code>robbyrussell</code> is the default theme, and you may change to use <a href="https://github.com/spaceship-prompt/spaceship-prompt">spaceship prompt</a> theme. The configuration for the prompt is stored in the <code>PS1</code> environment variable. You can see the default value by <code>echo $PS1</code>.</p>
+<li><code>robbyrussell</code> is the default theme, and you may change to use <a href="https://github.com/spaceship-prompt/spaceship-prompt">spaceship prompt</a> theme. The configuration for the prompt is stored in the <code>PS1</code> environment variable. You can see the default value by <code>echo $PS1</code>.</li>
+</ul>
 <blockquote><p>'unable to access error': Something is blocking the connection to github. It is likely some kind of firewall, either on your machine or in your network. If it works with a browser on same machine then the browser is probably using a proxy and you need to configure git to use this proxy too.</p>
 <ul>
 <li>check if your git uses proxy: <code>git config --global http.proxy</code></li>
@@ -43,8 +44,6 @@
 <li>reset the proxy: <code>git config --global --unset http.proxy</code></li>
 </ul>
 </blockquote>
-</li>
-</ul>
 </li>
 <li><p>Use <code>nvm</code> to install Node.js, then install a version of node <code>nvm install xx.xx</code>, <code>nvm use xx.xx</code> and run <code>nvm ls</code>. Use <code>node -v &amp;&amp; npm -v</code> to check the version.</p>
 <ul>
@@ -54,8 +53,9 @@
 <li><code>npm config set registry https://registry.npmmirror.com</code> to change the registry, <code>npm config delete registry</code> to change back to default (<code>https://registry.npmjs.org/</code>), <code>npm get registry</code> to see the current set.</li>
 <li>set npm proxy <code>npm config set proxy http://127.0.0.1:7890</code> and remove this proxy <code>npm config delete proxy</code>
 &lt;img alt="npm proxy" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008i3skNly1gz5abxu18ij31bu0eijtx.jpg" width="700"&gt;</li>
-<li><p>Global Node modules will be installed at <code>~/.nvm/versions/node/v12.13.0/bin/</code> if you use nvm.
-&lt;img alt="global node_modules" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</p>
+<li>Global Node modules will be installed at <code>~/.nvm/versions/node/v12.13.0/bin/</code> if you use nvm.
+&lt;img alt="global node_modules" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</li>
+</ul>
 <blockquote><p>package manager mirrors: <a href="https://github.com/eryajf/Thanks-Mirror">https://github.com/eryajf/Thanks-Mirror</a></p>
 <ul>
 <li>Taobao: <a href="http://registry.npmmirror.com">http://registry.npmmirror.com</a></li>
@@ -70,37 +70,35 @@
 </ul>
 </blockquote>
 </li>
-</ul>
-</li>
 <li><p>Set global configuration with Git <code>touch ~/.gitconfig</code>, and check with <code>git config --list</code>.</p>
-<pre><code> [user]
-   name   = Firstname Lastname
-   email  = you@example.com
- [github]
-   user   = username
- [alias]
-   a      = add
-   cm     = commit -m
-   s      = status
-   pom    = push origin master
-   puom   = pull origin master
-   co     = checkout
-   lg     = log --pretty=format:'%h %ad%x09%an%x09%s' --date=short
+<pre><code>[user]
+  name   = Firstname Lastname
+  email  = you@example.com
+[github]
+  user   = username
+[alias]
+  a      = add
+  cm     = commit -m
+  s      = status
+  pom    = push origin master
+  puom   = pull origin master
+  co     = checkout
+  lg     = log --pretty=format:'%h %ad%x09%an%x09%s' --date=short
 </code></pre>
 <p><em>(%h = commit hash, %x09 = tab, %an = author name, %ad = author date, %s = subject)</em></p>
 </li>
 <li><p>Some commands for Finder</p>
-<pre><code class="lang-shell"> # Show Library folder
- chflags nohidden ~/Library
+<pre><code class="lang-shell"># Show Library folder
+chflags nohidden ~/Library
 
- # Show hidden files
- defaults write com.apple.finder AppleShowAllFiles YES
+# Show hidden files
+defaults write com.apple.finder AppleShowAllFiles YES
 
- # Show path bar
- defaults write com.apple.finder ShowPathbar -bool true
+# Show path bar
+defaults write com.apple.finder ShowPathbar -bool true
 
- # Show status bar
- defaults write com.apple.finder ShowStatusBar -bool true
+# Show status bar
+defaults write com.apple.finder ShowStatusBar -bool true
 </code></pre>
 <ul>
 <li>A curated list of shell commands specific to macOS: <a href="https://git.herrbischoff.com/awesome-macos-command-line/about">https://git.herrbischoff.com/awesome-macos-command-line/about</a></li>
@@ -149,7 +147,7 @@ git config --global --unset user.name
 <p>SSH URLs provide access to a Git repository via SSH, a secure protocol. To use these URLs, you must generate an SSH keypair on your computer and add the public key to your GitHub account.</p>
 <ol>
 <li>Enter the directory <code>cd ~/.ssh</code></li>
-<li>Generate the personalised SSH key <code>ssh-keygen</code> <em>(multiple SSH keys: <code>ssh-keygen -t rsa -b 4096 -C email@another.com -f $HOME/.ssh/another/id_rsa</code>)</em></li>
+<li>Generate the personalised SSH key <code>ssh-keygen</code> _(multiple SSH keys: <code>ssh-keygen -t rsa -b 4096 -C email@another.com -f $HOME/.ssh/another/id_rsa</code>)_</li>
 <li>Copy the key <code>cat id_rsa.pub | pbcopy</code></li>
 <li>Go to Github Settings -&gt; select SSH and GPG keys -&gt; New SSH Key. Give the SSH key a description so we can know which device it belongs too (i.e., MacBook Pro 2020).</li>
 <li>Type <code>ssh-add -K ~/.ssh/id_rsa</code> to store the passphrase (<code>-K</code> for adding in your keychain). Note that <strong>the addition of keys to the agent is transient</strong> and they last only as long as the agent is running. If you kill it or restart your computer they're lost until you re-add them again.</li>
