--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -71,14 +71,16 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 //   height: 100px;
 //   color: ${red};
 // `;
-// 
-const styleElement = document.createElement('style');
+//
+const styleElement = document.createElement("style");
 document.head.appendChild(styleElement);
 const sheet = styleElement.sheet;
 
 const interleave = (strings, interpolations) =&gt; {
-  return strings.reduce((output, str, i) =&gt; 
-    output + str + (interpolations[i] ?? ''), '');
+  return strings.reduce(
+    (output, str, i) =&gt; output + str + (interpolations[i] ?? ""),
+    "",
+  );
 };
 
 export const css = (strings, ...interpolations) =&gt; {
@@ -100,34 +102,34 @@ export const css = (strings, ...interpolations) =&gt; {
 <pre><code class="lang-js">// What `twMerge` and `clsx` solve
 // `tailwind-merge` intelligently merges conflicting Tailwind classes.
 // twMerge('px-2 py-1 bg-red', 'p-3 bg-[#B91C1C]');
-// 
+//
 // But some developers prefer to use an object-based syntax for conditional classes
 // `clsx` is generally used to construct className strings conditionally.
 // clsx({ foo:true, bar:false, baz:isTrue() });
 //
 // Combine twMerge and clsx to a single `cn` (short for "class names") function
-import { clsx } from "clsx"
-import { twMerge } from "tailwind-merge"
+import { clsx } from "clsx";
+import { twMerge } from "tailwind-merge";
 
 export function cn(...inputs) {
-  return twMerge(clsx(inputs))
+  return twMerge(clsx(inputs));
 }
 
 // more `clsx` examples
-clsx('foo', true &amp;&amp; 'bar', 'baz');
-//=&gt; 'foo bar baz'
+clsx("foo", true &amp;&amp; "bar", "baz");
+// =&gt; 'foo bar baz'
 
-clsx({ foo:true, bar:false, baz:isTrue() });
-//=&gt; 'foo baz'
+clsx({ foo: true, bar: false, baz: isTrue() });
+// =&gt; 'foo baz'
 
-clsx({ foo:true }, { bar:false }, null, { '--foobar':'hello' });
-//=&gt; 'foo --foobar'
+clsx({ foo: true }, { bar: false }, null, { "--foobar": "hello" });
+// =&gt; 'foo --foobar'
 
-clsx(['foo', 0, false, 'bar']);
-//=&gt; 'foo bar'
+clsx(["foo", 0, false, "bar"]);
+// =&gt; 'foo bar'
 
-clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
-//=&gt; 'foo bar baz hello there'
+clsx(["foo"], ["", 0, false, "bar"], [["baz", [["hello"], "there"]]]);
+// =&gt; 'foo bar baz hello there'
 </code></pre>
 <p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS is used by Vite, and soon by Tailwind and Next.js. Tools like <code>postcss</code> and <code>autoprefixer</code> are being replaced by faster, all-in-one Rust toolchains.</p>
 <p>Lightning CSS can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
@@ -144,7 +146,7 @@ clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
 <ul>
 <li><a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> is one of the many popular PostCSS plugins. It doesn't add polyfills, only adds prefixes.</li>
 <li><a href="https://github.com/postcss/postcss-import">postcss-import</a> to transform <code>@import</code> rules by inlining content. (<code>postcss-import</code> is different than the import rule in native CSS. You should avoid the import rule in native CSS, since it can prevent stylesheets from being downloaded concurrently which affects the loading speed and performance.)</li>
-<li><a href="https://www.npmjs.com/package/postcss-preset-env">postcss-preset-env</a> is a plugin that allows you to use modern CSS features while automatically adding the necessary fallbacks for older browsers, based on the specified compatibility targets. It includes <code>Autoprefixer</code> as part of its feature set. </li>
+<li><a href="https://www.npmjs.com/package/postcss-preset-env">postcss-preset-env</a> is a plugin that allows you to use modern CSS features while automatically adding the necessary fallbacks for older browsers, based on the specified compatibility targets. It includes <code>Autoprefixer</code> as part of its feature set.</li>
 <li><a href="https://cssnano.co">cssnano</a> is a compression tool written on top of the PostCSS ecosystem to compact CSS appropriately.</li>
 </ul>
 <blockquote><p>Avoid <code>@import</code> in CSS: The <code>@import</code> rule in CSS creates additional HTTP requests and is render-blocking. Each imported file is fetched sequentially, which delays the overall CSS parsing. Instead of <code>@import</code>, use <code>&lt;link rel="stylesheet"&gt;</code> tags in HTML (which can load in parallel) or better yet, combine CSS files at build time when possible.</p>
@@ -168,20 +170,22 @@ clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
 <p>In the pages directory, <code>getStaticProps</code> function is used to pre-render a page at build time. In the app directory, data fetching with <code>fetch()</code> set <code>{ cache: 'force-cache' }</code>, which will cache the request data until manually invalidated. This is similar to <code>getStaticProps</code> in the pages directory.</p>
 <p>In the pages directory, <code>getStaticPaths</code> function is used to define the dynamic paths that should be pre-rendered at build time. In the app directory, <code>getStaticPaths</code> is replaced with <code>generateStaticParams</code>.</p>
 <pre><code class="lang-js">export default function Listing(props) {
-  return &lt;ListingLayout listings={props.listings} /&gt;
+  return &lt;ListingLayout listings={props.listings} /&gt;;
 }
 
 export async function getStaticProps(props) {
-  const data = await fetch(`https://example.com/api/listings/${props.params.id}`)
-  const { listings } = await data.json()
-  return { props: { listings } }
+  const data = await fetch(
+    `https://example.com/api/listings/${props.params.id}`,
+  );
+  const { listings } = await data.json();
+  return { props: { listings } };
 }
 
 // statically generate routes at build time
 export async function getStaticPaths() {
-  const data = await fetch(`https://example.com/api/listings`)
-  const { listings } = await data.json()
-  return { paths: listings.map(listing =&gt; ({ params: { id: listing.id } })) }
+  const data = await fetch(`https://example.com/api/listings`);
+  const { listings } = await data.json();
+  return { paths: listings.map(listing =&gt; ({ params: { id: listing.id } })) };
 }
 </code></pre>
 <h2>Headless UI and shadcn/ui</h2>
@@ -327,11 +331,11 @@ const processSummarization = inngest.createFunction(
 
     // Save result
     await db.jobs.update(jobId, {
-      status: 'completed',
-      result: summary
+      status: "completed",
+      result: summary,
     });
 
-    return { summary }
+    return { summary };
   },
 );
 
@@ -395,18 +399,18 @@ export const handler = async () =&gt; {
   return {
     statusCode: 200,
     body: JSON.stringify({
-      message: 'Hello world!'
-    })
-  }
-}
+      message: "Hello world!",
+    }),
+  };
+};
 </code></pre>
-<pre><code class="lang-js">fetchBtn.addEventListener('click', async () =&gt; {
-  const response = await fetch('/.netlify/functions/hello-world').then(
-    response =&gt; response.json()
-  )
+<pre><code class="lang-js">fetchBtn.addEventListener("click", async () =&gt; {
+  const response = await fetch("/.netlify/functions/hello-world").then(
+    response =&gt; response.json(),
+  );
 
-  responseText.innerText = JSON.stringify(response)
-})
+  responseText.innerText = JSON.stringify(response);
+});
 </code></pre>
 <h4><a href="https://nba-player-lookup.netlify.app">A real example</a> deployed to Netlify</h4>
 <blockquote><p>Bolt doesn’t have built-in hosting for your projects. Instead, it connects to Netlify to provide one-click deployments and hosting. Netlify provides hosting, automated deployment, domain registration, and monitoring tools.</p>
@@ -420,16 +424,16 @@ export const handler = async () =&gt; {
 <li>SPA routing: Handles client-side routing for React apps</li>
 </ul>
 <pre><code class="lang-toml">[build]
-  publish = "dist"
-  command = "npm run build"
+publish = "dist"
+command = "npm run build"
 
 [functions]
-  directory = ".netlify/functions"
+directory = ".netlify/functions"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
 </code></pre>
 <h3>What is "edge compute"?</h3>
 <p>To solve the latency problem, very smart folks came up with the idea of deploying multiple copies of a program and distributing it around the world. When a user makes a request, it can be handled by the closest copy, thus reducing the distance traveled and the time spent in transit.</p>
@@ -438,8 +442,8 @@ export const handler = async () =&gt; {
 <li><strong>CDNs</strong> store static content in multiple locations around the world. When a new request comes in, the closest CDN location to the user can respond with the cached result.</li>
 <li>Similar to CDNs, <strong>Edge servers</strong> are distributed to multiple locations around the world. But unlike CDNs, which store static content, some Edge servers can run small snippets of code. This means both caching and code execution can be done at the Edge closer to the user.</li>
 </ul>
-<blockquote><p>Cloud = a server, somewhere;<br/>
-Edge = a server, close to you;<br/>
+<blockquote><p>Cloud = a server, somewhere;\
+Edge = a server, close to you;\
 Edge functions = serverless functions run at the Edge;</p>
 <p>Edge functions without the database in the same place aren't providing meaningful improvements. Most data is not globally replicated. So running compute in many regions, which all connect to a us-east database, made no sense.</p>
 </blockquote>
