--- a/kexizeroing.github.io/Start to use Cursor, Copilot and Gemini CLI.html
+++ b/kexizeroing.github.io/Start to use Cursor, Copilot and Gemini CLI.html
@@ -104,7 +104,8 @@ globs: **/**
 <p>The Chat Agent will automatically use any MCP tools that are listed under <code>Available Tools</code> on the MCP settings page if it determines them to be relevant. To prompt tool usage intentionally, simply tell the agent to use the tool, referring to it either by name or by description. You can also enable or disable individual MCP tools from the settings page to control which tools are available to the Agent.</p>
 <blockquote><p>MCP servers offer two main capabilities: tools and resources. Tools are available in Cursor today, and allow Cursor to execute the tools offered by an MCP server, and use the output in its further steps. However, resources are not yet supported in Cursor. We are hoping to add resource support in future releases.</p>
 </blockquote>
-<h2>Coding agent and agent mode in GitHub Copilot</h2>
+<h2>GitHub Copilot</h2>
+<h3>Coding agent and agent mode</h3>
 <ul>
 <li>Agent mode: a real‑time collaborator that sits in your editor, works with you, and edits files based on your needs.</li>
 <li>Coding agent: an asynchronous teammate that lives in the cloud, takes on issues, and sends you fully tested pull requests while you do other things. <em>(Requires Copilot Pro+ or Copilot Enterprise)</em></li>
@@ -115,12 +116,40 @@ globs: **/**
 </blockquote>
 <p>[2025-07] Microsoft have released the GitHub Copilot Chat client for VS Code under an open source (MIT) license. So far this is just the extension that provides the chat component of Copilot. The agent instructions can be found in <a href="https://github.com/microsoft/vscode-copilot-chat/blob/main/src/extension/prompts/node/agent/agentInstructions.tsx">prompts/node/agent/agentInstructions.tsx</a>.</p>
 <p>[2025-09] GitHub releases the GitHub Copilot CLI, a new entry that brings the power of Copilot directly to the command line. By simply running <code>copilot</code>, you enter an interactive session where you can prompt the agent, review its plans, and approve its actions in a conversational turn-based manner. It defaults to Claude Sonnet 4 but you can set <code>COPILOT_MODEL=gpt-5</code> to switch to GPT-5. It's billed against your existing GitHub Copilot account.</p>
-<h3>Adding repository custom instructions</h3>
-<p>Create a <code>.github/copilot-instructions.md</code> file in your repository's root directory and add natural language instructions in Markdown format. These instructions will guide Copilot's behavior across your project.</p>
+<h3>Creating custom instructions</h3>
+<p>Repository-wide custom instructions, which apply to all requests made in the context of a repository. These are specified in a <code>.github/copilot-instructions.md</code> file in your repository's root directory.</p>
+<blockquote><p>Configure your repositories with <code>.github</code>: <a href="https://cassidoo.co/post/dot-github/">https://cassidoo.co/post/dot-github/</a></p>
+</blockquote>
+<p>Path-specific custom instructions, which apply to requests made in the context of files that match a specified path. These are specified in one or more <code>NAME.instructions.md</code> files within the <code>.github/instructions</code> directory in the repository. At the start of the file, create a frontmatter block containing the <code>applyTo</code> keyword. Use glob syntax to specify what files or directories the instructions apply to.</p>
+<p>You can create one or more <code>AGENTS.md</code> files, stored anywhere within the repository. It can be found at the root of a repository or within subdirectories (e.g., <code>backend/AGENTS.md</code>, <code>frontend/AGENTS.md</code>). This allows for fine-grained control and specialized instructions for different parts of a project.</p>
+<p>What happens when you send a prompt in Copilot Chat?</p>
+<pre><code>System Prompt
+(core identity and global rules, tool use instructions, output format instructions)
+  ↓
+User Prompt
+(environment info, workspace info and project file structure)
+  ↓
+User Prompt
+(current date/time, file you added to chat)
+  ↓
+User Request: "write a function that..."
+</code></pre>
+<h3>Agent Skills</h3>
+<p>Agent Skills are a lightweight, open format for extending AI agent capabilities with specialized knowledge and workflows. At its core, a skill is a folder containing a <code>SKILL.md</code> file. This file includes metadata and instructions that tell an agent how to perform a specific task. More at <a href="https://agentskills.io/">https://agentskills.io/</a></p>
+<p>You can create Agent Skills to teach Copilot how to perform specialized tasks in a specific, repeatable way. Agent Skills are folders containing instructions, scripts, and resources that Copilot automatically loads when relevant to your prompt. Skills support is coming to the stable version of VS Code in early January 2026.</p>
+<p>You can write your own skills, or use skills shared by others, such as those in the <a href="https://github.com/anthropics/skills">anthropics/skills</a> repository. Check out <a href="https://docs.github.com/copilot/concepts/agents/about-agent-skills">https://docs.github.com/copilot/concepts/agents/about-agent-skills</a></p>
+<blockquote><p>Skills and MCP</p>
+<p>MCP is where capability lives. It's what allows an AI agent to actually do things instead of just talking about them. Skills live at a different layer. Skills are about process and knowledge. They're markdown files that encode how work should be done.</p>
+<p>MCP gives agents abilities. Skills teach agents how to use those abilities well.</p>
+</blockquote>
+<h3>What are premium requests</h3>
+<p>Each time you send a prompt in a chat window or trigger a response from Copilot, you’re making a request. Some Copilot features use more advanced processing power and count as premium requests. Copilot Chat uses one premium request per user prompt, multiplied by the model's rate. This includes ask, edit, agent, and plan modes in Copilot Chat in an IDE.</p>
+<p>Different models have different premium request multipliers, which can affect how much of your monthly usage allowance is consumed. GPT-5 mini, GPT-4.1 and GPT-4o are the included models, and do not consume any premium requests if you are on a paid plan.</p>
+<p>If you use Copilot Free, your plan comes with up to 2,000 inline suggestion requests and up to 50 premium requests per month. All chat interactions count as premium requests.</p>
+<p>If you're on a paid plan, you get unlimited inline suggestions and unlimited chat interactions using the included models. Paid plans also receive a monthly allowance of premium requests (300 for Copilot Pro, 1000 for Copilot Enterprise).</p>
 <ul>
-<li><a href="https://code.visualstudio.com/docs/copilot/copilot-customization">https://code.visualstudio.com/docs/copilot/copilot-customization</a></li>
-<li><a href="https://github.com/github/awesome-copilot">https://github.com/github/awesome-copilot</a></li>
-<li><a href="https://burkeholland.github.io/posts/beast-mode-3-1">https://burkeholland.github.io/posts/beast-mode-3-1</a></li>
+<li><a href="https://docs.github.com/en/copilot/get-started/plans">https://docs.github.com/en/copilot/get-started/plans</a></li>
+<li><a href="https://docs.github.com/en/copilot/concepts/billing/copilot-requests">https://docs.github.com/en/copilot/concepts/billing/copilot-requests</a></li>
 </ul>
 <h2>Gemini CLI</h2>
 <p>Gemini CLI brings the capabilities of Gemini models to your terminal in an interactive Read-Eval-Print Loop (REPL) environment. Gemini CLI consists of a client-side application (<code>packages/cli</code>) that communicates with a local server (<code>packages/core</code>), which in turn manages requests to the Gemini API and its AI models. Gemini CLI also contains a variety of tools for tasks such as performing file system operations, running shells, and web fetching, which are managed by <code>packages/core</code>.</p>
@@ -138,8 +167,8 @@ globs: **/**
 /chat save &lt;tag&gt;
 /chat resume &lt;tag&gt;
 
-# Replace the entire chat context with a summary. 
-# This saves on tokens used for future tasks while 
+# Replace the entire chat context with a summary.
+# This saves on tokens used for future tasks while
 # retaining a high level summary of what has happened.
 /compress
 
