--- a/kexizeroing.github.io/String Matching – What’s behind Ctrl+F.html
+++ b/kexizeroing.github.io/String Matching – What’s behind Ctrl+F.html
@@ -2,7 +2,7 @@
 <p>When we do search for a string in a notepad file, browser, or database, pattern searching algorithms are used to show the search results. Boyer-Moore String Search is one such pattern searching algorithm, meaning it has large area of practical use.</p>
 <blockquote><p>Btw, BM25, or Best Match 25, is a widely used algorithm for full text search. It is the default in Elasticsearch and SQLite.</p>
 </blockquote>
-<p>String matching - Search for a string (pattern) in a large body of text<br/>
+<p>String matching - Search for a string (pattern) in a large body of text\
 Input:</p>
 <ul>
 <li>T: The text being searched within, length is n</li>
@@ -41,9 +41,9 @@ Input:</p>
 <li>Good suffix jumps: Upon a mismatch, shift so that the already matched suffix of P aligns with a previous occurrence of that suffix (or part of it) in P.</li>
 <li>Shift forward is larger of two heuristics, and it is always positive.</li>
 </ul>
-<p>&lt;img alt="Bad character" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/bad-character.png" width="600"&gt;</p>
+<p>&lt;img alt="Bad character" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/bad-character.png" width="600"&gt;</p>
 <p>&lt;br&gt;
-&lt;img alt="Good suffix" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/good-suffix.png" width="600"&gt;</p>
+&lt;img alt="Good suffix" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/good-suffix.png" width="600"&gt;</p>
 <p>The preprocessing for the good suffix heuristics is rather difficult to understand and to implement. Therefore, sometimes versions of the Boyer-Moore algorithm are found in which the good suffix heuristics is left away.</p>
 <pre><code class="lang-js">// A simplified Boyer Moore implementation, using only the bad-character heuristic.
 const ALPHABET_LEN = 256;
@@ -64,10 +64,10 @@ function bad_character_table(pat) {
 
 function simpleBoyerMoore(pattern, text) {
   let i,
-      j,
-      matches = [],
-      m = pattern.length,
-      shift = bad_character_table(pattern);
+    j,
+    matches = [],
+    m = pattern.length,
+    shift = bad_character_table(pattern);
 
   i = m - 1;
   while (i &lt; text.length) {
