--- a/kexizeroing.github.io/Type challenges solutions.html
+++ b/kexizeroing.github.io/Type challenges solutions.html
@@ -16,7 +16,7 @@ type TodoPreview = MyPick&lt;Todo, "title" | "completed"&gt;;
 // solution
 type MyPick&lt;T, K extends keyof T&gt; = {
   [P in K]: T[P];
-}
+};
 </code></pre>
 <p>Implement the built-in <code>Readonly&lt;T&gt;</code> generic without using it. Constructs a type with all properties of T set to <code>readonly</code>, meaning the properties of the constructed type cannot be reassigned.</p>
 <pre><code class="lang-ts">interface Todo {
@@ -34,20 +34,24 @@ todo.description = "barFoo"; // Error: cannot reassign a readonly property
 
 // solution
 type MyReadonly&lt;T&gt; = {
-  readonly [P in keyof T]: T[P]
-}
+  readonly [P in keyof T]: T[P];
+};
 </code></pre>
 <p>Implement a generic <code>MyReadonly2&lt;T, K&gt;</code> which takes two type arguments T and K. K specify the set of properties of T that should set to readonly. When K is not provided, it should make all properties readonly, just like the normal <code>Readonly&lt;T&gt;</code>.</p>
 <pre><code class="lang-ts">// step 1. intersection of both types
 type MyReadonly2&lt;T, K&gt; = Omit&lt;T, K&gt; &amp; { readonly [P in K]: T[P] };
 
 // step 2. set a constraint on K
-type MyReadonly2&lt;T, K extends keyof T&gt; = Omit&lt;T, K&gt; &amp; { readonly [P in K]: T[P] };
+type MyReadonly2&lt;T, K extends keyof T&gt; =
+  &amp; Omit&lt;T, K&gt;
+  &amp; { readonly [P in K]: T[P] };
 
 // step 3. when K is not set at all (K to be “all the keys from T”)
-type MyReadonly2&lt;T, K extends keyof T = keyof T&gt; = Omit&lt;T, K&gt; &amp; {
-  readonly [P in K]: T[P];
-};
+type MyReadonly2&lt;T, K extends keyof T = keyof T&gt; =
+  &amp; Omit&lt;T, K&gt;
+  &amp; {
+    readonly [P in K]: T[P];
+  };
 </code></pre>
 <p>Implement a generic <code>DeepReadonly&lt;T&gt;</code> which makes every parameter of an object and its sub-objects readonly recursively.</p>
 <pre><code class="lang-ts">type X = {
@@ -68,10 +72,10 @@ type Expected = {
 
 // solution
 type DeepReadonly&lt;T&gt; = {
-  readonly [P in keyof T]: T[P] extends string | number | boolean | Function 
-    ? T[P] 
-    : DeepReadonly&lt;T[P]&gt;
-}
+  readonly [P in keyof T]: T[P] extends string | number | boolean | Function
+    ? T[P]
+    : DeepReadonly&lt;T[P]&gt;;
+};
 
 // or
 type DeepReadonly&lt;T&gt; = {
@@ -88,14 +92,14 @@ const result: TupleToObject&lt;typeof tuple&gt;;
 
 // solution 1
 type TupleToObject&lt;T extends readonly (string | symbol | number)[]&gt; = {
-  [P in T[number]]: P
-}
+  [P in T[number]]: P;
+};
 
 // solution 2
 // built-in `PropertyKey` represents the data type of a property key.
 // It can be a string, a symbol, or a number.
 type TupleToObject&lt;T extends readonly PropertyKey[]&gt; = {
-  [P in T[number]]: P
+  [P in T[number]]: P;
 };
 </code></pre>
 <p>Implement a generic <code>First&lt;T&gt;</code> that takes an Array T and returns it's first element's type.</p>
@@ -117,7 +121,7 @@ type tail = Last&lt;arr&gt;; // expected to be 'c'
 type Last&lt;T extends any[]&gt; = T extends [...infer X, infer L] ? L : never;
 </code></pre>
 <pre><code class="lang-ts">type MyType&lt;T&gt; = T extends infer R ? R : never;
-type T1 = MyType&lt;{b: string}&gt; // T1 is { b: string; }
+type T1 = MyType&lt;{ b: string }&gt;; // T1 is { b: string; }
 type MyType2&lt;T&gt; = T extends R2 ? R2 : never; // error, R2 undeclared
 </code></pre>
 <blockquote><p>With <code>infer</code>, the compiler ensures that you have declared all type variables explicitly. Here we declare a new type variable R in <code>MyType</code>. Without <code>infer</code>, the compiler does not introduce an additional type variable R2 that is to be inferred. If R2 has not been declared, it will result in a compile error. <strong>Note that <code>infer</code> is only used within the <code>extends</code> clause of a conditional type.</strong></p>
@@ -154,9 +158,8 @@ type B = If&lt;false, "a", "b"&gt;; // expected to be 'b'
 // solution
 type If&lt;C extends boolean, T, F&gt; = C extends true ? T : F;
 // `strictNullChecks: false`
-type If&lt;C extends boolean, T, F&gt; = C extends undefined | null 
-  ? never
-  : (C extends true ? T : F)
+type If&lt;C extends boolean, T, F&gt; = C extends undefined | null ? never
+  : (C extends true ? T : F);
 </code></pre>
 <p>Implement the JavaScript <code>Array.concat</code> function in the type system. A type takes the two arguments. The output should be a new array that includes inputs in ltr order.</p>
 <pre><code class="lang-ts">type Result = Concat&lt;[1], [2]&gt;; // expected to be [1, 2]
@@ -166,13 +169,13 @@ type Concat&lt;T extends unknown[], U extends unknown[]&gt; = [...T, ...U];
 </code></pre>
 <p>Implement the JavaScript <code>Array.includes</code> function in the type system. A type takes the two arguments. The output should be a boolean true or false.</p>
 <pre><code class="lang-ts">// expected to be `false`
-type isFruit = Includes&lt;['apple', 'banana', 'orange'], 'dog'&gt; // expected to be `false`
+type isFruit = Includes&lt;["apple", "banana", "orange"], "dog"&gt;; // expected to be `false`
 
 // solution
 type Includes&lt;T extends unknown[], U&gt; = U extends T[number] ? true : false;
 </code></pre>
 <p>Implement the generic version of <code>Array.push</code> and <code>Array.unshift()</code>.</p>
-<pre><code class="lang-ts">type Result = Push&lt;[1, 2], "3"&gt;;  // [1, 2, '3']
+<pre><code class="lang-ts">type Result = Push&lt;[1, 2], "3"&gt;; // [1, 2, '3']
 type Result = Unshift&lt;[1, 2], 0&gt;; // [0, 1, 2]
 
 // solution
@@ -201,7 +204,7 @@ type MyParameters&lt;T&gt; = T extends (...args: infer P) =&gt; any ? P : never;
 type a = MyReturnType&lt;typeof fn&gt;; // should be "1 | 2"
 
 // solution
-type MyReturnType&lt;T&gt; = T extends (...args: any[]) =&gt; infer P ? P : never
+type MyReturnType&lt;T&gt; = T extends (...args: any[]) =&gt; infer P ? P : never;
 </code></pre>
 <p>Implement the built-in <code>Omit&lt;T, K&gt;</code> generic without using it. Constructs a type by picking all properties from T and then removing K.</p>
 <pre><code class="lang-ts">interface Todo {
@@ -221,11 +224,11 @@ type TodoPreview = MyOmit&lt;Todo, "description" | "title"&gt;;
 type MyOmit&lt;T, K&gt; = { [P in keyof T as P extends K ? never : P]: T[P] };
 </code></pre>
 <p>Implement a generic <code>TupleToUnion&lt;T&gt;</code> which covers the values of a tuple to its values union.</p>
-<pre><code class="lang-ts">type Arr = ['1', 2, boolean]
-type Test = TupleToUnion&lt;Arr&gt; // expected '1' | 2 | boolean
+<pre><code class="lang-ts">type Arr = ["1", 2, boolean];
+type Test = TupleToUnion&lt;Arr&gt;; // expected '1' | 2 | boolean
 
 // solution
-type TupleToUnion&lt;T&gt; = T extends unknown[] ? T[number] : never
+type TupleToUnion&lt;T&gt; = T extends unknown[] ? T[number] : never;
 </code></pre>
 <p>Type the function <code>PromiseAll</code> that accepts an array of <code>PromiseLike</code> objects. The returning value should be <code>Promise&lt;T&gt;</code> where T is the resolved result array.</p>
 <pre><code class="lang-ts">const promise1 = Promise.resolve(3);
@@ -241,7 +244,7 @@ const p = Promise.all([promise1, promise2, promise3] as const);
 // step 1. the function that returns Promise&lt;T&gt;
 declare function PromiseAll&lt;T&gt;(values: T): Promise&lt;T&gt;;
 
-// step 2. `values` is an array and has a readonly modifier 
+// step 2. `values` is an array and has a readonly modifier
 declare function PromiseAll&lt;T extends unknown[]&gt;(
   values: readonly [...T],
 ): Promise&lt;T&gt;;
@@ -266,10 +269,8 @@ type TrimLeft&lt;S&gt; = S extends `${" " | "\n" | "\t"}${infer T}` ? TrimLeft&l
 type ReplaceFirst&lt;T extends readonly unknown[], S, R&gt; = T extends [
   infer FI,
   ...infer Rest,
-]
-  ? FI extends S
-    ? [R, ...Rest]
-    : [FI, ...ReplaceFirst&lt;Rest, S, R&gt;]
+] ? FI extends S ? [R, ...Rest]
+  : [FI, ...ReplaceFirst&lt;Rest, S, R&gt;]
   : T;
 </code></pre>
 <p>Convert a string to CamelCase.</p>
@@ -277,9 +278,8 @@ type ReplaceFirst&lt;T extends readonly unknown[], S, R&gt; = T extends [
 
 // solution
 type CamelCase&lt;S&gt; = S extends `${infer H}-${infer T}`
-  ? T extends Capitalize&lt;T&gt;
-    ? `${H}-${CamelCase&lt;T&gt;}`
-    : `${H}${CamelCase&lt;Capitalize&lt;T&gt;&gt;}`
+  ? T extends Capitalize&lt;T&gt; ? `${H}-${CamelCase&lt;T&gt;}`
+  : `${H}${CamelCase&lt;Capitalize&lt;T&gt;&gt;}`
   : S;
 </code></pre>
 <p>Convert a string to kebab-case.</p>
@@ -291,9 +291,8 @@ type KebabCase&lt;S&gt; = S extends `${infer C}${infer T}` ? never : S;
 
 // step 2. have / don't have the capitalized tail
 type KebabCase&lt;S&gt; = S extends `${infer C}${infer T}`
-  ? T extends Uncapitalize&lt;T&gt;
-    ? `${Uncapitalize&lt;C&gt;}${KebabCase&lt;T&gt;}`
-    : `${Uncapitalize&lt;C&gt;}-${KebabCase&lt;T&gt;}`
+  ? T extends Uncapitalize&lt;T&gt; ? `${Uncapitalize&lt;C&gt;}${KebabCase&lt;T&gt;}`
+  : `${Uncapitalize&lt;C&gt;}-${KebabCase&lt;T&gt;}`
   : S;
 </code></pre>
 <p>Implement a type that adds a new field to the interface. The output should be an object with the new field.</p>
@@ -329,10 +328,8 @@ type merged = Merge&lt;Foo, Bar&gt;; // expected { a: number; b: number }
 
 // solution
 type Merge&lt;F, S&gt; = {
-  [P in keyof F | keyof S]: P extends keyof S
-    ? S[P]
-    : P extends keyof F
-    ? F[P]
+  [P in keyof F | keyof S]: P extends keyof S ? S[P]
+    : P extends keyof F ? F[P]
     : never;
 };
 </code></pre>
@@ -363,8 +360,7 @@ type test = Diff&lt;Foo, Bar&gt;; // expected { gender: number }
 type Diff&lt;O, O1&gt; = {
   [P in keyof O | keyof O1 as Exclude&lt;P, keyof O &amp; keyof O1&gt;]: P extends keyof O
     ? O[P]
-    : P extends keyof O1
-    ? O1[P]
+    : P extends keyof O1 ? O1[P]
     : never;
 };
 </code></pre>
@@ -386,9 +382,8 @@ type Sample2 = AnyOf&lt;[0, "", false, [], {}]&gt;; // expected to be false
 type Falsy = 0 | "" | false | [] | { [P in any]: never };
 
 type AnyOf&lt;T extends readonly any[]&gt; = T extends [infer H, ...infer T]
-  ? H extends Falsy
-    ? AnyOf&lt;T&gt;
-    : true
+  ? H extends Falsy ? AnyOf&lt;T&gt;
+  : true
   : false;
 </code></pre>
 <p>Implement <code>EndsWith&lt;T, U&gt;</code> which takes two exact string types and returns whether T ends with U.</p>
@@ -407,9 +402,8 @@ type Res2 = LastIndexOf&lt;[0, 0, 0], 2&gt;; // -1
 // solution
 // Check from the right if it is equal to the item we are looking for
 type LastIndexOf&lt;T, U&gt; = T extends [...infer R, infer I]
-  ? Equal&lt;I, U&gt; extends true
-    ? R["length"]
-    : LastIndexOf&lt;R, U&gt;
+  ? Equal&lt;I, U&gt; extends true ? R["length"]
+  : LastIndexOf&lt;R, U&gt;
   : -1;
 </code></pre>
 <p>Implement a type <code>Zip&lt;T, U&gt;</code>, T and U must be Tuple.</p>
@@ -419,16 +413,14 @@ type R = Zip&lt;[1, 2], [true, false]&gt;;
 // solution
 // step 1. if both tuples have the item and the tail - we can zip them together
 type Zip&lt;T, U&gt; = T extends [infer TI, ...infer TT]
-  ? U extends [infer UI, ...infer UT]
-    ? [TI, UI]
-    : never
+  ? U extends [infer UI, ...infer UT] ? [TI, UI]
+  : never
   : never;
 
 // step 2. recursive way of zipping the tail until it’s gone
 type Zip&lt;T, U&gt; = T extends [infer TI, ...infer TT]
-  ? U extends [infer UI, ...infer UT]
-    ? [[TI, UI], ...Zip&lt;TT, UT&gt;]
-    : []
+  ? U extends [infer UI, ...infer UT] ? [[TI, UI], ...Zip&lt;TT, UT&gt;]
+  : []
   : [];
 </code></pre>
 <p>Implement the type <code>Without&lt;T, U&gt;</code>, which takes an array T, number or array U and returns an array without the elements of U.</p>
@@ -438,16 +430,14 @@ type Res1 = Without&lt;[1, 2, 4, 1, 5], [1, 2]&gt;; // expected to be [4, 5]
 // solution
 // step 1. when U specified as a primitive type
 type Without&lt;T, U&gt; = T extends [infer H, ...infer T]
-  ? H extends U
-    ? [...Without&lt;T, U&gt;]
-    : [H, ...Without&lt;T, U&gt;]
+  ? H extends U ? [...Without&lt;T, U&gt;]
+  : [H, ...Without&lt;T, U&gt;]
   : [];
 
 // step 2. if U is a tuple of numbers
 type Without&lt;T, U&gt; = T extends [infer H, ...infer T]
-  ? H extends (U extends number[] ? U[number] : U)
-    ? [...Without&lt;T, U&gt;]
-    : [H, ...Without&lt;T, U&gt;]
+  ? H extends (U extends number[] ? U[number] : U) ? [...Without&lt;T, U&gt;]
+  : [H, ...Without&lt;T, U&gt;]
   : [];
 </code></pre>
 <p>Implement the type <code>Unique&lt;T&gt;</code>, which takes an array T, returns the array T without repeated values.</p>
@@ -458,9 +448,8 @@ type Res1 = Unique&lt;[1, "a", 2, "b", 2, "a"]&gt;; // expected to be [1, "a", 2
 // If T is present in other part of the tuple, T is the duplicate and we need to skip it,
 // otherwise, we add it to the result.
 type Unique&lt;T&gt; = T extends [...infer H, infer T]
-  ? T extends H[number]
-    ? [...Unique&lt;H&gt;]
-    : [...Unique&lt;H&gt;, T]
+  ? T extends H[number] ? [...Unique&lt;H&gt;]
+  : [...Unique&lt;H&gt;, T]
   : [];
 </code></pre>
 <h2>Total TypeScript's TypeScript Generics Workshop</h2>
@@ -499,7 +488,7 @@ const sum = &lt;T&gt;(array: readonly T[], mapper: (item: T) =&gt; number): numb
 
 // reduce&lt;U&gt;(callbackfn: (previousValue: U, currentValue: T, currentIndex: number, array: readonly T[]) =&gt; U, initialValue: U): U;
 
-// Here the U type is being inferred from the initial value, 
+// Here the U type is being inferred from the initial value,
 // which we can see when hovering over the `.reduce()` in our code.
 const obj = array.reduce&lt;Record&lt;string, { name: string }&gt;&gt;((accum, item) =&gt; {
   accum[item.name] = item;
@@ -572,7 +561,7 @@ const getValue = &lt;TObj, TKey extends keyof TObj&gt;(obj: TObj, key: TKey) =&g
   return obj[key];
 };
 
-const numberResult = getValue(obj, "a");  // number
+const numberResult = getValue(obj, "a"); // number
 const stringResult = getValue(obj, "b"); // string
 const booleanResult = getValue(obj, "c"); // boolean
 </code></pre>
