--- a/kexizeroing.github.io/URL-driven state in React.html
+++ b/kexizeroing.github.io/URL-driven state in React.html
@@ -28,8 +28,8 @@
 </code></pre>
 <p>Since all our state is in React, the search text and table data don't survive page reloads. And this is where the feature request comes in: "Can we make this screen shareable via the URL?" We're using Next.js, so we can grab the router from <code>useRouter</code> and the current path from <code>usePathname</code>, and call <code>router.push</code> to update the URL with the latest search text.</p>
 <pre><code class="lang-jsx">export default function Home() {
-  let searchParams = useSearchParams(); 
-  let [search, setSearch] = useState(searchParams.get('search') ?? ''); 
+  let searchParams = useSearchParams();
+  let [search, setSearch] = useState(searchParams.get("search") ?? "");
 
   let { data, isPlaceholderData } = useQuery({
     // ...
@@ -57,7 +57,7 @@
 </ul>
 <p>To fix this, you could add another effect that updates the <code>search</code> state when the URL changes:</p>
 <pre><code class="lang-jsx">useEffect(() =&gt; {
-  setSearch(searchParams.get('search') ?? '');
+  setSearch(searchParams.get("search") ?? "");
 }, [searchParams]);
 </code></pre>
 <p>We're heading down a bad road. And the fundamental reason why is that we now have two sources of truth for the search text:</p>
@@ -177,16 +177,16 @@ function Example() {
 <li>and without scrolling to the top of the page.</li>
 </ol>
 <p>Search params are strings by default, but you might want to use numbers, booleans, Dates, objects, arrays, or even custom types. This is where parsers come in.</p>
-<pre><code class="lang-js">useQueryState('int', parseAsInteger.withDefault(0))
+<pre><code class="lang-js">useQueryState("int", parseAsInteger.withDefault(0));
 
-useQueryState('bool', parseAsBoolean.withDefault(false))
+useQueryState("bool", parseAsBoolean.withDefault(false));
 
-const [pageIndex] = useQueryState('page', parseAsIndex.withDefault(0))
+const [pageIndex] = useQueryState("page", parseAsIndex.withDefault(0));
 
 const [state, setState] = useQueryState(
-  'foo',
-  parseAsString.withOptions({ history: 'push' })
-)
+  "foo",
+  parseAsString.withOptions({ history: "push" }),
+);
 
-setState('foo', { scroll: true })
+setState("foo", { scroll: true });
 </code></pre>
