--- a/kexizeroing.github.io/Understand npm concepts.html
+++ b/kexizeroing.github.io/Understand npm concepts.html
@@ -37,7 +37,7 @@
       "require": {
         "types": "./types/commonjs/index.d.cts",
         "default": "./commonjs/index.cjs"
-      },
+      }
     }
   },
   // Fall-back for older versions of TypeScript
@@ -133,7 +133,7 @@ export default defineConfig({
 <h3>npm ls</h3>
 <p><code>npm ls</code> (aliases: list, la, ll) list dependencies that have been installed to <code>node_modules</code>. It throws an error for discrepancies between <code>package.json</code> and its lock file.</p>
 <p>If <code>depth</code> is not set (default is 0), <code>npm ls</code> will show only the immediate dependencies of the root project. If <code>--all</code> is set, then npm will show all dependencies by default.</p>
-<blockquote><p>What do "idealTree" and "reify" mean in the context of npm?<br/>
+<blockquote><p>What do "idealTree" and "reify" mean in the context of npm?\
 An <code>idealTree</code> is the tree of package data that we intend to install. <code>actualTree</code> is the representation of the actual packages on disk.</p>
 <p>During lockfile validation, npm compares the inventory of package items in the tree that is about to be installed (<code>idealTree</code>) with the inventory of items stored in the package-lock file (<code>virtualTree</code>).</p>
 <p>During reification, the <code>idealTree</code> is diffed against the actual tree, and then the nodes from the ideal tree are extracted onto disk. At the end of <code>reify()</code>, the ideal tree is copied to <code>actualTree</code>, since then it reflects the actual state of the <code>node_modules</code> folder.</p>
@@ -157,9 +157,9 @@ An <code>idealTree</code> is the tree of package data that we intend to install.
 </blockquote>
 <h3>URLs as dependencies</h3>
 <ol>
-<li>Git URLs as dependencies using SSH or HTTPS with credentials:<pre><code> "my-package": "git+ssh://git@github.com:myaccount/myprivate.git"
- "my-package": "git+ssh://git@github.com:myaccount/myprivate.git#develop"
- "my-package": "git+https://username:password@github.com/myaccount/myprivate.git"
+<li>Git URLs as dependencies using SSH or HTTPS with credentials:<pre><code>"my-package": "git+ssh://git@github.com:myaccount/myprivate.git"
+"my-package": "git+ssh://git@github.com:myaccount/myprivate.git#develop"
+"my-package": "git+https://username:password@github.com/myaccount/myprivate.git"
 </code></pre>
 </li>
 <li>GitHub URLs: refer to GitHub urls as <code>"foo": "user/foo-project"</code>. This is equivalent to: <code>https://github.com/user/foo-project.git</code></li>
