--- a/kexizeroing.github.io/Understand the event loop.html
+++ b/kexizeroing.github.io/Understand the event loop.html
@@ -10,25 +10,25 @@
 <h2>Event loop</h2>
 <p>&lt;img alt="event-loop" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vxvgGly1h7ivwcb19zj317a0u0jvw.jpg" width="700" style="display:block; margin:auto"&gt;</p>
 <ul>
-<li><p><strong>Stack</strong><br/>
+<li><p><strong>Stack</strong>\
 A single call stack in which it keeps track of what function we’re currently executing and what function is to be executed after that. When we execute an infinite loop, everything on the screen just freezes, this is because the main thread is blocked doing the infinite loop and render tasks never get a chance to come in.</p>
 </li>
-<li><p><strong>Heap</strong><br/>
+<li><p><strong>Heap</strong>\
 Objects are allocated in a heap which is just a name to denote a large (mostly unstructured) region of memory.</p>
 </li>
-<li><p><strong>Web APIs</strong><br/>
+<li><p><strong>Web APIs</strong>\
 A number of powerful functions and interfaces exposed to us by the browser. These web APIs enhance JS and give it the ability to do all the powerful things like Network requests, DOM manipulation, Bluetooth, Location, setTimeout... In case of <em>callbacks</em> they will add your callback to the Callback queue, instead, in case of a <em>then (promise’s method)</em>, your code will be added to the Job queue.</p>
 </li>
-<li><p><strong>Task Queue</strong><br/>
+<li><p><strong>Task Queue</strong>\
 Also known as Callback Queue, which is a list of messages to be processed. Each message has an associated callback function which gets called in order to handle the message. Important to remember that when you have a <code>setTimeout</code> and a delay, it's not the delay until it gets moved onto the call stack. It's the delay until it gets moved to the task queue.</p>
 </li>
-<li><p><strong>Micro-Task Queue</strong><br/>
+<li><p><strong>Micro-Task Queue</strong>\
 Also known as Job Queue, which is reserved for promise’s thens. It is a prioritized queue, which means "execute this code later (= asynchronously), but as soon as possible (= before the next Event Loop tick)". After executing every task, the event loop will go to microtask queue and check if something is there and if it is then it will execute all of them.</p>
 </li>
-<li><p><strong>Render Queue</strong><br/>
+<li><p><strong>Render Queue</strong>\
 Takes care of tasks to be done before every screen update or repaints. This process is sometimes referred also as critical rendering path. Browsers generally are set to repaint around 60 times every second (60FPS), but it can happen at this speed only when the main thread is idle or the call stack is empty.</p>
 </li>
-<li><p><strong>Event Loop</strong><br/>
+<li><p><strong>Event Loop</strong>\
 The Event Loop is a constantly running process and it has one simple job — to monitor the Call Stack and the Queues. If the Call Stack is empty, it will take the first event from the queue and push it to the Call Stack. Node.js and Chrome do not use the same event loop implementation. Chrome/Chromium uses <code>libevent</code>, while Node.js uses <code>libuv</code>. Check out <a href="https://www.builder.io/blog/visual-guide-to-nodejs-event-loop">A Complete Visual Guide to Understanding the Node.js Event Loop</a>.</p>
 </li>
 </ul>
@@ -37,46 +37,46 @@ The Event Loop is a constantly running process and it has one simple job — to 
 <li>When executing tasks from the task queue, the runtime executes each task that is in the queue at the moment a new iteration of the event loop begins. Tasks added to the queue after the iteration begins will not run until the next iteration. <em>(setTimeout, DOM events, requestAnimationFrame)</em></li>
 <li>Each time a task exits, and the execution context stack is empty, each microtask in the microtask queue is executed, one after another. The difference is that execution of microtasks continues until the queue is empty—even if new ones are scheduled in the interim. In other words, microtasks can enqueue new microtasks and those new microtasks will execute before the next task begins to run, and before the end of the current event loop iteration. <em>(Promises, queueMicrotask, MutationObserver)</em></li>
 </ul>
-<pre><code class="lang-javascript">setTimeout(() =&gt; console.log(1), 0)
-async function async1(){
-  console.log(2)
-  await async2()  // just syntactic sugar on top of promise
-  console.log(3)
+<pre><code class="lang-javascript">setTimeout(() =&gt; console.log(1), 0);
+async function async1() {
+  console.log(2);
+  await async2(); // just syntactic sugar on top of promise
+  console.log(3);
 }
-async function async2(){
-  console.log(4)
+async function async2() {
+  console.log(4);
 }
-async1()
+async1();
 new Promise((resolve, reject) =&gt; {
-  console.log(5)
+  console.log(5);
   for (let i = 0; i &lt; 1000; i++) {
-    i === 999 &amp;&amp; resolve()
+    i === 999 &amp;&amp; resolve();
   }
-  console.log(6)
+  console.log(6);
 }).then(() =&gt; {
-  console.log(7)
-})
-console.log(8)
+  console.log(7);
+});
+console.log(8);
 /*
 output：2 4 5 6 8 3 7 1
 */
 </code></pre>
 <p>You may argue that <code>setTimeout</code> should be logged first because a task is run first before clearing the microtask queue. Well, you are right. But, no code runs in JS unless an event has occurred and the event is queued as a task. At the execution of any JS file, the JS engine wraps the contents in a function and associates the function with an event <code>start</code>, and add the event to the task queue. After emits the program <code>start</code> event, the JavaScript engine pulls that event off the queue, executes the registered handler, and then our program runs.</p>
-<pre><code class="lang-js">button.addEventListener('click', () =&gt; {
-  Promise.resolve().then(() =&gt; console.log('Microtask 1'));
-  console.log('listener 1');
+<pre><code class="lang-js">button.addEventListener("click", () =&gt; {
+  Promise.resolve().then(() =&gt; console.log("Microtask 1"));
+  console.log("listener 1");
 });
 
-button.addEventListener('click', () =&gt; {
-  Promise.resolve().then(() =&gt; console.log('Microtask 2'));
-  console.log('listener 2');
+button.addEventListener("click", () =&gt; {
+  Promise.resolve().then(() =&gt; console.log("Microtask 2"));
+  console.log("listener 2");
 });
 
-// If the user clicks the button: 
+// If the user clicks the button:
 // listener 1, Microtask 1, listener 2, Microtask 2
 
 button.click();
-// If click using JS: 
+// If click using JS:
 // listener 1, listener 2, Microtask 1, Microtask 2
 
 // User-triggered events run each listener in separate tasks.
@@ -90,7 +90,7 @@ button.click();
 <p>Common advice for keeping JavaScript apps fast tends to boil down to the advice: "Don't block the main thread" and "Break up your long tasks."</p>
 <p>Any task that takes longer than 50 milliseconds is a long task. When a user attempts to interact with a page when there are many long tasks, the user interface will feel unresponsive. To prevent the main thread from being blocked for too long, you can break up a long task into several smaller ones. One method developers have used to break up tasks into smaller ones involves <code>setTimeout()</code>. With this technique, you pass the function to <code>setTimeout()</code>. This postpones execution of the callback into a separate task, even if you specify a timeout of 0.</p>
 <pre><code class="lang-js">// blocks the rendering (freezes the webpage)
-button.addEventListener('click', event =&gt; {
+button.addEventListener("click", event =&gt; {
   while (true) {}
 });
 
@@ -105,7 +105,7 @@ loop();
   Promise.resolve().then(loop);
 })();
 </code></pre>
-<pre><code class="lang-js">function yieldToMain () {
+<pre><code class="lang-js">function yieldToMain() {
   return new Promise(resolve =&gt; {
     setTimeout(resolve, 0);
   });
@@ -140,12 +140,12 @@ while (tasks.length &gt; 0) {
 </blockquote>
 <pre><code class="lang-js">// Here is how you can "defer" a slow operation in JS
 const onIdle = (fn) =&gt; {
-  if ('scheduler' in window) {
+  if ("scheduler" in window) {
     return scheduler.postTask(fn, {
-      priority: 'background'
+      priority: "background",
     });
   }
-  if ('requestIdleCallback' in window) {
+  if ("requestIdleCallback" in window) {
     return requestIdleCallback(fn);
   }
 
