--- a/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
+++ b/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
@@ -2,7 +2,7 @@
 <h2>Blob concepts</h2>
 <p>Blob means "Binary Large Object" and it’s an opaque representation of a chunk of bytes. Blob can be read as text or binary data, or converted into a ReadableStream so its methods can be used for processing the data. The File interface is based on Blob, inheriting blob functionality and expanding it to support files on the user's system.</p>
 <p>A Blob has its size and MIME type just like a file has, and it can be created using <code>Blob(array, options)</code> constructor. The constructor takes an array of values <em>(Blob, ArrayBuffer, TypedArray, DataView, String)</em>. Even if you have just one string to put in the blob, you must wrap it in an array. Once you have a Blob object, you can access its size (the length in bytes of the content of the blob) and type.</p>
-<pre><code class="lang-js">new Blob(["&lt;h1&gt;This is my blob content&lt;/h1&gt;"], { type : "text/plain" });
+<pre><code class="lang-js">new Blob(["&lt;h1&gt;This is my blob content&lt;/h1&gt;"], { type: "text/plain" });
 
 const obj = { hello: "world" };
 const blob = new Blob([JSON.stringify(obj, null, 2)], {
@@ -17,24 +17,26 @@ const blob = new Blob([JSON.stringify(obj, null, 2)], {
 <li>read the text contents (json, txt, html...)</li>
 </ul>
 <p>As we have <code>file://</code> URLs, referencing to a real file in a local filesystem. Similarly, we have <code>blob://</code> URLs referencing to a blob. <code>blob://</code> URLs can be used almost wherever we use regular URLs. The <code>URL.createObjectURL()</code> static method creates a string containing a URL representing the object given in the parameter. <strong>The URL lifetime is tied to the document in the window on which it was created.</strong> To release an object URL, call <code>URL.revokeObjectURL()</code>.</p>
-<pre><code class="lang-js">let blobHtml = new Blob(['&lt;html&gt;&lt;head&gt;&lt;title&gt;Hello Blob&lt;/title&gt;&lt;/head&gt;&lt;body&gt;&lt;h1 style="color: red"&gt;Hello JavaScript!&lt;/h1&gt;&lt;/body&gt;&lt;/html&gt;'], { type: 'text/html' });
+<pre><code class="lang-js">let blobHtml = new Blob([
+  "&lt;html&gt;&lt;head&gt;&lt;title&gt;Hello Blob&lt;/title&gt;&lt;/head&gt;&lt;body&gt;&lt;h1 style=\"color: red\"&gt;Hello JavaScript!&lt;/h1&gt;&lt;/body&gt;&lt;/html&gt;",
+], { type: "text/html" });
 
-let link = document.createElement('a');
+let link = document.createElement("a");
 link.href = URL.createObjectURL(blobHtml);
 
 document.body.appendChild(link);
 </code></pre>
 <pre><code class="lang-js">// blob url as the image source
-const input = document.querySelector('input[type=file]');
+const input = document.querySelector("input[type=file]");
 
-input.addEventListener('change', e =&gt; {
-  const img = document.createElement('img');
+input.addEventListener("change", e =&gt; {
+  const img = document.createElement("img");
   const imageBlob = URL.createObjectURL(input.files[0]);
   img.src = imageBlob;
 
   img.onload = function() {
     URL.revokeObjectURL(imageBlob);
-  }
+  };
 
   input.parentNode.replaceChild(img, input);
 });
@@ -64,7 +66,11 @@ input.addEventListener('change', e =&gt; {
   context.font = "bold 40px serif";
   // get width of text
   const metrics = context.measureText(watermarkText);
-  context.fillText(watermarkText, canvasWidth - metrics.width - 20, canvasHeight - 20);
+  context.fillText(
+    watermarkText,
+    canvasWidth - metrics.width - 20,
+    canvasHeight - 20,
+  );
 
   return canvas.toDataURL();
 }
@@ -87,7 +93,7 @@ blob:https://example.com/550e8400-e29b-41d4-a716-446655440000"
 <li>An <strong>ArrayBuffer</strong> can be manipulated by using TypedArrays and DataView, whereas <strong>Blob</strong> is immutable.</li>
 <li><strong>Blob</strong> can become an <strong>ArrayBuffer</strong> using FileReader's <code>readAsArrayBuffer()</code> method. <strong>ArrayBuffer</strong> can also become <strong>Blob</strong> by using <code>new Blob([buffer])</code>.</li>
 </ul>
-<pre><code class="lang-js">const blobText = new Blob(['abc'], { type: 'text/plain' });
+<pre><code class="lang-js">const blobText = new Blob(["abc"], { type: "text/plain" });
 
 // readAsArrayBuffer, an event-based API
 let reader = new FileReader();
@@ -100,11 +106,11 @@ reader.readAsArrayBuffer(blobText);
 // readAsDataURL - the `result` property contains the data as a `data:URL` representing the file's data as a base64 encoded string.
 // readAsText - the `result` property contains the contents of the file as a text string.
 
-// `arrayBuffer()` method of the Blob returns a Promise that resolves with the contents of the blob 
+// `arrayBuffer()` method of the Blob returns a Promise that resolves with the contents of the blob
 // as binary data contained in an ArrayBuffer.
 blobText.arrayBuffer().then((buffer) =&gt; {
   console.log(buffer);
-})
+});
 </code></pre>
 <h2>TypedArray</h2>
 <p>A TypedArray object describes an array-like view of an underlying binary data buffer, and you use it to read and write the contents of the buffer. When creating an instance of a TypedArray subclass (e.g. Int8Array), an array buffer is created internally in memory or, if an ArrayBuffer object is given as constructor argument, that ArrayBuffer is used instead.</p>
@@ -178,7 +184,7 @@ document.body.appendChild(link);
 <p>In above example, you can see 10 pairs of letters and numbers (Node.js displays bytes using the hexadecimal system). Each pair represents a byte stored in the buffer. The total size of this particular buffer is 10.</p>
 <p><code>Buffer.from()</code> method is the most straightforward way to create a buffer. It accepts a string, an array, an ArrayBuffer, or another buffer instance.</p>
 <pre><code class="lang-js">// If no enconding is passed in the second parameter, defaults to 'utf-8'.
-let bufferOne = Buffer.from('This is a buffer example.');
+let bufferOne = Buffer.from("This is a buffer example.");
 console.log(bufferOne);
 
 // Output: &lt;Buffer 54 68 69 73 20 69 73 20 61 20 62 75 66 66 65 72 20 65 78 61 6d 70 6c 65 2e&gt;
