--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -10,7 +10,7 @@
 </blockquote>
 <h3>Exporting module features</h3>
 <p>The first thing you need to do to get access to module features is export them. This is done using the <code>export</code> statement. The easiest way to use it is to place it in front of any items you want exported out of the module. A more convenient way of exporting all the items is to use a single <code>export</code> statement at the end of your module file, followed by a comma-separated list of the features you want to export wrapped in curly braces. You can <strong>export functions, var, let, const, and classes</strong>. They need to be top-level items; you can't use export inside a function.</p>
-<pre><code class="lang-javascript">export const name = 'square';
+<pre><code class="lang-javascript">export const name = "square";
 
 export function draw(ctx, length, x, y, color) {
   ctx.fillStyle = color;
@@ -19,7 +19,7 @@ export function draw(ctx, length, x, y, color) {
 
 export class Square {}
 
-export { name, draw, reportArea, reportPerimeter };
+export { draw, name, reportArea, reportPerimeter };
 </code></pre>
 <p>A module can also "relay" values exported from other modules without the hassle of writing two separate import/export statements. This is often useful when creating a single module concentrating various exports from various modules (usually called a "barrel module").</p>
 <pre><code class="lang-js">export { default as function1, function2 } from "bar.js";
@@ -35,24 +35,24 @@ export * as ns from "mod";
 <p>There is also <code>export * from "mod"</code>, although there's no <code>import * from "mod"</code>. This re-exports all named exports from <code>mod</code> as the named exports of the current module, but the default export of mod is not re-exported.</p>
 <h3>Importing features into script</h3>
 <p>Once you've exported some features out of your module, you need to import them into your script to be able to use them. Use the <code>import</code> statement, followed by a comma-separated list of the features you want to import <strong>wrapped in curly braces</strong>, followed by the keyword <code>from</code>, followed by the path to the module file. Once you've imported the features into your script, you can use them just like they were defined inside the same file.</p>
-<pre><code class="lang-javascript">import { name, draw, reportArea, reportPerimeter } from './modules/square.js';
+<pre><code class="lang-javascript">import { draw, name, reportArea, reportPerimeter } from "./modules/square.js";
 
-import { Square } from './modules/square.js';
+import { Square } from "./modules/square.js";
 </code></pre>
 <pre><code class="lang-javascript">// ** imports are references, not values **
 
 // module.js
-export let thing = 'initial';
+export let thing = "initial";
 
 setTimeout(() =&gt; {
-  thing = 'changed';
+  thing = "changed";
 }, 500);
 
 // main.js
-import { thing as importedThing } from './module.js';
+import { thing as importedThing } from "./module.js";
 // ESM imports are asynchronous, which also allows for top-level await
-const module = await import('./module.js');
-let { thing } = await import('./module.js');
+const module = await import("./module.js");
+let { thing } = await import("./module.js");
 
 setTimeout(() =&gt; {
   console.log(importedThing); // "changed"
@@ -69,31 +69,31 @@ setTimeout(() =&gt; {
 // export anonymous function
 export default function() {}
 
-import myDefault from './modules/square.js';
+import myDefault from "./modules/square.js";
 // the above line is shorthand for
-import { default as myDefault } from './modules/square.js';
+import { default as myDefault } from "./modules/square.js";
 
 // import the default export and non-default export by name
-import React, { Component } from 'react'
+import React, { Component } from "react";
 </code></pre>
 <p>Inside the <code>import</code> and <code>export</code> statement's curly braces, you can use the keyword <code>as</code> along with a new feature name, to change the identifying name you will use inside the module. It arguably makes more sense to leave your module code alone, and make the changes in the imports. This especially makes sense when you are importing from third party modules that you don't have any control over.</p>
 <pre><code class="lang-javascript">// inside module.js
-export {
-  function1 as newFunctionName,
-  function2 as anotherNewFunctionName
-};
+export { function1 as newFunctionName, function2 as anotherNewFunctionName };
 
 // inside main.js
-import { newFunctionName, anotherNewFunctionName } from './modules/module.js';
+import { anotherNewFunctionName, newFunctionName } from "./modules/module.js";
 
 // inside module.js
 export { function1, function2 };
 
 // inside main.js
-import { function1 as newFunctionName, function2 as anotherNewFunctionName } from './modules/module.js';
+import {
+  function1 as newFunctionName,
+  function2 as anotherNewFunctionName,
+} from "./modules/module.js";
 
 // import as members of an object Module
-import * as Square from './modules/square.js';
+import * as Square from "./modules/square.js";
 
 Square.draw();
 Square.reportArea();
@@ -102,7 +102,7 @@ Square.reportArea();
 <p>Now we just need to apply the JavaScript module to our HTML page. This is very similar to how we apply a regular script to a page. You need to <strong>include <code>type="module"</code> in the <code>&lt;script&gt;</code> element to declare this script as a module</strong>. You can only use <code>import</code> and <code>export</code> statements inside modules; not regular scripts. Note that <strong>modules use strict mode automatically</strong>. JavaScript module scripts are <strong>deferred by default</strong> (<code>&lt;script defer&gt;</code>). This means the download for the module can happen in parallel with HTML parsing and the execuation is after the DOM is loaded.</p>
 <p>If a browser does not support modules, we need to use a combination of <code>type="module"</code> and <code>nomodule</code> attribute.</p>
 <ul>
-<li>In modern browsers that support module scripts, the script element with the <code>nomodule</code> attribute will be ignored, and the script element with a type of <code>module</code> will be fetched and evaluated as a module script. </li>
+<li>In modern browsers that support module scripts, the script element with the <code>nomodule</code> attribute will be ignored, and the script element with a type of <code>module</code> will be fetched and evaluated as a module script.</li>
 <li>Older browser will ignore the script element with a type of <code>module</code>, as that is an unknown script type for them, but they will have no problem fetching and evaluating the other script as a classic script, ignoring the <code>nomodule</code> attribute.</li>
 </ul>
 <pre><code class="lang-html">&lt;script type="module" src="main.js"&gt;&lt;/script&gt;
@@ -110,11 +110,11 @@ Square.reportArea();
 </code></pre>
 <h3>Dynamic module loading</h3>
 <p>This allows you to dynamically load modules only when they are needed, rather than having to load everything up front. You can call <code>import()</code> as a function, passing it the path to the module as a parameter. <strong>It returns a promise</strong>, which fulfills with a module object giving you access to that object's exports.</p>
-<pre><code class="lang-javascript">import('./modules/square.js').then((Module) =&gt; {
-  let square1 = new Module.Square();  // access member in module object
+<pre><code class="lang-javascript">import("./modules/square.js").then((Module) =&gt; {
+  let square1 = new Module.Square(); // access member in module object
   square1.draw();
   square1.reportArea();
-})
+});
 </code></pre>
 <h3>Import Attributes</h3>
 <blockquote><p>Previously, only <code>.js</code> JavaScript modules can be safely imported natively in all browsers. Other file types require either build tools (Vite, Webpack, etc.) or manual DOM manipulation (e.g., using <code>&lt;link&gt;</code> or <code>&lt;img&gt;</code> tags).</p>
@@ -126,7 +126,7 @@ Square.reportArea();
 import json from "./foo.json" with { type: "json" };
 
 // dynamic import
-import("foo.json", { with: { type: "json" } })
+import("foo.json", { with: { type: "json" } });
 </code></pre>
 <blockquote><p>Update on June 2025: Import Attributes and JSON Modules are now in ES2025. Import attributes now let you import JSON and other non-JavaScript assets natively, without bundler magic. You can now do this in plain JavaScript: <code>import config from './config.json' with { type: 'json' };</code>.</p>
 <p>Note that when you import a module (be it JS or JSON), it's cached for the lifetime of the environment, even if the result is a network or parsing failure. All imports for a given specifier &amp; type return the same module.</p>
@@ -135,16 +135,16 @@ import("foo.json", { with: { type: "json" } })
 <p>In common module systems, such as CommonJS, or a module bundler like webpack, the import specifier was mapped to a specific file, and users only needed to apply the bare module specifier (usually the package name) in the import statement, and concerns around module resolution were taken care of automatically.</p>
 <p>Now many web developers are using JavaScript's native module syntax, but combining it with bare import specifiers, making their code unable to run on the web without per-application, ahead-of-time modification. We'd like to solve that, and bring these benefits to the web.</p>
 <p>When importing modules in scripts, if you don't use the <code>type="importmap"</code> feature, then each module must be imported using a module specifier that is either an absolute or relative URL.</p>
-<pre><code class="lang-js">import { name as squareName, draw } from "./shapes/square.js";
-import { name as circleName } from "https://example.com/shapes/circle.js";
+<pre><code class="lang-js">import { name as circleName } from "https://example.com/shapes/circle.js";
+import { draw, name as squareName } from "./shapes/square.js";
 
 // import from CDN, and no need for a build step
 // https://www.skypack.dev
 import React from "https://cdn.skypack.dev/react";
-// or 
+// or
 // esm.sh translates anything into an ES Module
-import React from "https://esm.sh/react@19"
-import ReactDOMClient from "https://esm.sh/react-dom@19/client"
+import ReactDOMClient from "https://esm.sh/react-dom@19/client";
+import React from "https://esm.sh/react@19";
 </code></pre>
 <blockquote><p>UMD builds removed in React 19:</p>
 <p>UMD was widely used in the past as a convenient way to load React without a build step. Now, there are modern alternatives for loading modules as scripts in HTML documents. Starting with React 19, React will no longer produce UMD builds to reduce the complexity of its testing and release process. To load React 19 with a script tag, we recommend using an ESM-based CDN such as <code>esm.sh</code>.</p>
