--- a/kexizeroing.github.io/Using images in web.html
+++ b/kexizeroing.github.io/Using images in web.html
@@ -5,6 +5,12 @@
 <li><strong>Lossless</strong> means that the image is made smaller, but at no detriment to the quality. You can save the image over and over and never lose any data. All the original data can be recovered when the file is uncompressed.</li>
 <li><strong>Lossy</strong> means the image is made even smaller, but at a detriment to the quality. If you saved an image in a Lossy format over and over, the image quality would get progressively worse and worse.</li>
 </ul>
+<blockquote><p>If you have an HD screenshot (1920 × 1080 pixels), it contains over 2 million pixels. Each pixel needs 3 bytes (one for R, G, B). That's 6.2 megabytes (1,920 × 1,080 × 3 bytes) for a single image. You need a way to shrink this to a more manageable size.</p>
+<ul>
+<li>Lossy compression (used by JPEG) reduces size by deleting data the human eye won't miss, such as fine color details.</li>
+<li>Lossless compression (used by PNG) preserves every pixel perfectly using math tricks: storing the differences between neighbor pixels, referencing repeating patterns, and using shorter codes for common values.</li>
+</ul>
+</blockquote>
 <p>There are also different color depths: Indexed color and Direct color.</p>
 <ul>
 <li><strong>Indexed</strong> means that the image can only store a limited number of colors (usually 256).</li>
@@ -30,8 +36,14 @@
 <h3>SVG</h3>
 <p>SVG is different than all the above in that it's a vector file format (the above are all raster). This means SVG is perfect for logos and icons you wish to retain sharpness on Retina screens or at different sizes. It also means a small SVG logo can be used at a much larger size without degradation in image quality. SVG file sizes are often tiny, even if they're visually very large, which is great. However, it does depend on the complexity of the shapes used, and SVGs require more computing power than raster images because mathematical calculations are involved in drawing the curves and lines.</p>
 <pre><code class="lang-xml">&lt;svg viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg"&gt;
-  &lt;circle cx="400" cy="400" fill="none"
-    r="200" stroke-width="50" stroke="#E387FF" /&gt;
+  &lt;circle
+    cx="400"
+    cy="400"
+    fill="none"
+    r="200"
+    stroke-width="50"
+    stroke="#E387FF"
+  /&gt;
 &lt;/svg&gt;
 </code></pre>
 <p>An Introduction to SVGs: <a href="https://courses.nan.fyi/svg/00-svg-foundations">https://courses.nan.fyi/svg/00-svg-foundations</a></p>
@@ -65,33 +77,37 @@
 <p>This is where the <code>img</code> tag's <code>sizes</code> and <code>srcset</code> attributes come to into play. The TL;DR of these attributes is that it allows you to tell the browser different versions of your image for different screen widths and what size the image should be for a given set of media queries.</p>
 <pre><code class="lang-html">&lt;!-- Different sizes --&gt;
 &lt;!-- The `sizes` attribute is required any time you use `srcset` width descriptors --&gt;
-&lt;img srcset="elva-fairy-480w.jpg 480w,
-             elva-fairy-800w.jpg 800w"
-     sizes="(max-width: 600px) 480px,
+&lt;img
+  srcset="elva-fairy-480w.jpg 480w, elva-fairy-800w.jpg 800w"
+  sizes="(max-width: 600px) 480px,
             800px"
-     src="elva-fairy-800w.jpg"
-     alt="Elva dressed as a fairy"&gt;
+  src="elva-fairy-800w.jpg"
+  alt="Elva dressed as a fairy"
+/&gt;
 
 &lt;!-- Same size, different resolutions --&gt;
 &lt;!-- `background-image: image-set("foo.png" 1x, "foo-2x.png" 2x);` 
   is used in CSS for resolution switching. In fact, `srcset` was modeled after `image-set()`
 --&gt;
-&lt;img srcset="elva-fairy-320w.jpg,
-             elva-fairy-480w.jpg 1.5x,
-             elva-fairy-640w.jpg 2x"
-     src="elva-fairy-640w.jpg"
-     alt="Elva dressed as a fairy"&gt;
+&lt;img
+  srcset="elva-fairy-320w.jpg, elva-fairy-480w.jpg 1.5x, elva-fairy-640w.jpg 2x"
+  src="elva-fairy-640w.jpg"
+  alt="Elva dressed as a fairy"
+/&gt;
 
 &lt;!-- Use modern image formats boldly --&gt;
 &lt;picture&gt;
-  &lt;source srcset="photo.avif" type="image/avif"&gt;
-  &lt;source srcset="photo.webp" type="image/webp"&gt;
-  &lt;img src="photo.jpg" alt="Description" width="360" height="240"&gt;
+  &lt;source srcset="photo.avif" type="image/avif" /&gt;
+  &lt;source srcset="photo.webp" type="image/webp" /&gt;
+  &lt;img src="photo.jpg" alt="Description" width="360" height="240" /&gt;
 &lt;/picture&gt;
 
 &lt;!-- Only play the GIF if the user doesn't have reduced motion turned on --&gt;
 &lt;picture&gt;
-  &lt;source srcset="underconstruction.gif" media="(prefers-reduced-motion: no-preference)"&gt;
+  &lt;source
+    srcset="underconstruction.gif"
+    media="(prefers-reduced-motion: no-preference)"
+  /&gt;
   &lt;img src="underconstruction.png" alt="Under construction" /&gt;
 &lt;/picture&gt;
 </code></pre>
@@ -147,14 +163,16 @@ function MyComponent() {
   "
 /&gt;
 </code></pre>
+<blockquote><p>Servers often serve different content to different browsers based on those browsers capabilities. One of the most common examples of this is image CDNs, where you can request <code>https://images.example.com/hero.png?auto=format</code> and it will return one of the newer formats (WebP, AVIF, JXL) based on the browser support advertised in the <code>Accept</code> HTTP request header. Because the URL does not specify the format (well it specifies the original file is in png format, but not the format that will actually be delivered based on that file) this causes its own caching problems. To avoid that, servers can include a <code>Vary</code> HTTP response header telling caches that the content can “vary” depending on specific HTTP request headers (<code>Accept</code> in this case). Caches can then store multiple copies and serve the appropriate one, ensuring each browser gets the format they need.</p>
+</blockquote>
 <h3>Next.js <code>&lt;Image&gt;</code> component</h3>
 <p>For local images:</p>
 <ol>
 <li>Files inside <code>public</code> folder can be referenced by your code starting from the base URL (<code>/</code>).</li>
 <li>If the image is statically imported, Next.js will automatically determine the intrinsic width and height.</li>
 </ol>
-<pre><code class="lang-js">import Image from 'next/image'
-import ProfileImage from './profile.png'
+<pre><code class="lang-js">import Image from "next/image";
+import ProfileImage from "./profile.png";
 
 export default function Page() {
   return (
@@ -165,7 +183,7 @@ export default function Page() {
       // blurDataURL="data:..." automatically provided
       // placeholder="blur" // Optional blur-up while loading
     /&gt;
-  )
+  );
 }
 </code></pre>
 <p>For remote images:</p>
@@ -173,13 +191,13 @@ export default function Page() {
 <li>Since Next.js does not have access to remote files during the build process, you'll need to provide the <code>width</code>, <code>height</code> and optional <code>blurDataURL</code> props manually. <em>(infer the correct aspect ratio and avoid layout shift)</em></li>
 <li>To safely allow images from remote servers, you need to define a list of supported URL patterns in <code>next.config.js</code></li>
 </ol>
-<pre><code class="lang-js">import type { NextConfig } from 'next'
+<pre><code class="lang-js">import type { NextConfig } from "next";
 
 const nextConfig: NextConfig = {
   images: {
-    remotePatterns: [new URL('https://res.cloudinary.com/**')],
+    remotePatterns: [new URL("https://res.cloudinary.com/**")],
   },
-}
+};
 
-export default nextConfig
+export default nextConfig;
 </code></pre>
