--- a/f2h2h1.github.io/_人工智能和数据科学.html
+++ b/f2h2h1.github.io/_人工智能和数据科学.html
@@ -1212,6 +1212,10 @@ ollama
             顾投平台
             量化回测 supermind <a href="https://quant.10jqka.com.cn/view/">https://quant.10jqka.com.cn/view/</a> 这个好像有新闻数据的
             量化策略平台 backtest <a href="https://backtest.10jqka.com.cn/backtest/app.html">https://backtest.10jqka.com.cn/backtest/app.html</a>
+        增值服务
+            神奇电波 仙人指路 财富密码 走势预测
+            尾盘致胜 涨停密探 AI波段 筹码先锋 超能形态
+            神奇九转
     有哪些量化交易的平台，即使只有回测或模拟盘也可以
         www.fmz.com
         PandaAI 量化因子库
@@ -1237,7 +1241,32 @@ ollama
 <a href="https://github.com/stanfordnlp/dspy">https://github.com/stanfordnlp/dspy</a>
         Fin-Agent <a href="https://github.com/YUHAI0/fin-agent">https://github.com/YUHAI0/fin-agent</a>
             Fin-Agent 是一个基于 DeepSeek 等大模型和 Tushare 金融数据的智能金融分析代理
-电子支付，区块链，数字货币
+财务，会计，税务
+    财务报表
+        一个完整的财务报表至少包含 四表一注
+        资产负债表
+        损益表（利润表）
+        现金流量表
+        所有者权益变动表
+        附注
+    会计准则
+        IFRS
+        GAAP
+        CAS
+        HKFRS
+    会计要素
+        中国
+            资产、负债、所有者权益、收入、费用、利润 六要素
+        台湾
+            资产、负债、业主权益、损益计算 四要素
+        国际会计准则
+            资产、负债、产权、收益、费用 五要素
+        美国财务会计准则
+            资产、负债、权益、业主投资、派给业主款、总收益、营业收入、费用、利得、损失 十要素
+    会计等式(Accounting equation)</p>
+<pre><code>流水 成本 营业额 营业成本 营业收入 营业利润 税前利润 净利润 利润 毛利润 毛利率
+</code></pre>
+<p>电子支付，区块链，数字货币
     名词
         数字货币 digital currency
         虚拟货币 virtual currency
@@ -1471,7 +1500,15 @@ A minimal LLM chat app that runs entirely in your browser</p>
 多格式文档解析和导出工具。这是一个由 IBM 开源的 Python 工具，
 专门用于将各类文档转化为适合生成式 AI 使用的格式。
 它能够将 PDF、DOCX、PPTX、图片、HTML、Markdown 等多种流行文档格式，
-导出为 Markdown 和 JSON 格式</p>
+导出为 Markdown JSON Text HTML 格式</p>
+<p>从文档里看，还可以在指定 llm 模型来完成对 pdf 或 图片的 orc 识别</p>
+<p>python -m pip install docling</p>
+<p>from docling.document_converter import DocumentConverter
+source = "./docs/test.pdf"
+converter = DocumentConverter()
+result = converter.convert(source)
+result.document.export_to_markdown()</p>
+<p>docling --from pdf --to md test.pdf</p>
 <p>一个通用的文档转换工具，似乎自持很多格式
 <a href="https://pandoc.org/index.html">https://pandoc.org/index.html</a>
 <a href="https://github.com/jgm/pandoc">https://github.com/jgm/pandoc</a></p>
