--- a/f2h2h1.github.io/socket编程.html
+++ b/f2h2h1.github.io/socket编程.html
@@ -622,7 +622,21 @@ if __name__ == "__main__":
         if stop_thread == True:
             sys.exit(0)
 </code></pre>
-<p>版本7 使用面向对象写法的 静态http</p>
+<p>版本7 使用面向对象写法的 静态http
+    config
+        log level
+        log target
+    log
+    http server
+        request
+            line
+            header
+                cookie
+            body
+        response
+            line
+            header
+            body</p>
 <p>版本7 有配置的静态http
     ip port rootdir
     mime 这个可以用 mimetypes ，不需要配置
@@ -632,7 +646,8 @@ if __name__ == "__main__":
 <p>版本7 有配置的静态http+cgi+http代理</p>
 <p>版本7 有配置的静态http+cgi+http代理+socks5代理</p>
 <p>既然要实现 http代理 那么 https 和 ws 和 wss 的代理应该也差不多吧
-暂时先忽略 fastcgi 和 wsgi</p>
+暂时先忽略 fastcgi 和 wsgi
+还有 h2 h3 tls1.2 tls1.3</p>
 <p>python的命令行参数
 <a href="https://docs.python.org/zh-cn/3/library/argparse.html">https://docs.python.org/zh-cn/3/library/argparse.html</a>
 <a href="https://docs.python.org/zh-cn/3/library/getopt.html">https://docs.python.org/zh-cn/3/library/getopt.html</a></p>
