--- a/f2h2h1.github.io/关于字符编码的一些坑.html
+++ b/f2h2h1.github.io/关于字符编码的一些坑.html
@@ -2639,4 +2639,21 @@ int main(){
 }
 
 
+linux 判断一个文件的编码
+file -i 文件路径
+输出示例
+文件路径: text/plain; charset=us-ascii
+怎样判断 utf-8 有没有bom？
+
+linux 判断一个文件的换行符
+cat -A 文件路径
+cat -A 文件路径 | head
+$ 表示 LF（\n）
+^M$ 表示 CRLF（\r\n）
+^M 表示 CR（\r）
+
+hexdump -C 文件路径 | head
+od -c 文件路径 | head
+
+
 --&gt;
