--- a/kexizeroing.github.io/Create a video player.html
+++ b/kexizeroing.github.io/Create a video player.html
@@ -58,19 +58,19 @@
 <p>The <code>span</code> within the <code>&lt;progress&gt;</code> element is for browsers that do not support the progress element and will be updated at the same time as progress (this <code>span</code> element won't be visible on browsers that support <code>progress</code>).</p>
 <p>The controls are initially hidden with a CSS <code>display:none</code> and will be enabled with JavaScript. Again if a user has JavaScript disabled, the custom control set will not appear and they can use the browser's default control set unhindered.</p>
 <p>Before dealing with the individual buttons, a number of initialization calls are required.</p>
-<pre><code class="lang-js">const videoContainer = document.getElementById('videoContainer');
-const video = document.getElementById('video');
-const videoControls = document.getElementById('video-controls');
+<pre><code class="lang-js">const videoContainer = document.getElementById("videoContainer");
+const video = document.getElementById("video");
+const videoControls = document.getElementById("video-controls");
 
 // Hide the default controls
 video.controls = false;
 
 // Display the user defined video controls
-videoControls.style.display = 'block';
+videoControls.style.display = "block";
 </code></pre>
 <h3>Play/Pause</h3>
 <p>When a <code>click</code> event is detected on the play/pause button, the handler first checks if the video is currently paused or has ended; if so, it uses the <code>play()</code> method to playback the video. Otherwise the video must be playing, so it is paused using the <code>pause()</code> method.</p>
-<pre><code class="lang-js">playpause.addEventListener('click', (e) =&gt; {
+<pre><code class="lang-js">playpause.addEventListener("click", (e) =&gt; {
   if (video.paused || video.ended) {
     video.play();
   } else {
@@ -80,7 +80,7 @@ videoControls.style.display = 'block';
 </code></pre>
 <h3>Stop</h3>
 <p>The Media API doesn't have a stop method, so to mimic this the video is paused, and its <code>currentTime</code> (i.e. the video's current playing position) and the <code>&lt;progress&gt;</code> element's position is set to 0.</p>
-<pre><code class="lang-js">stop.addEventListener('click', (e) =&gt; {
+<pre><code class="lang-js">stop.addEventListener("click", (e) =&gt; {
   video.pause();
   video.currentTime = 0;
   progress.value = 0;
@@ -88,7 +88,7 @@ videoControls.style.display = 'block';
 </code></pre>
 <h3>Mute</h3>
 <p>The mute button is a simple toggle button that uses the Media API's <code>muted</code> attribute to mute the video: this is a <code>Boolean</code> indicating whether the video is muted or not.</p>
-<pre><code class="lang-js">mute.addEventListener('click', (e) =&gt; {
+<pre><code class="lang-js">mute.addEventListener("click", (e) =&gt; {
   video.muted = !video.muted;
 });
 </code></pre>
@@ -98,9 +98,9 @@ videoControls.style.display = 'block';
   // might be something like 0.6999999 due to floating point imprecision
   const currentVolume = Math.floor(video.volume * 10) / 10;
 
-  if (dir === '+' &amp;&amp; currentVolume &lt; 1) {
+  if (dir === "+" &amp;&amp; currentVolume &lt; 1) {
     video.volume += 0.1;
-  } else if (dir === '-' &amp;&amp; currentVolume &gt; 0) {
+  } else if (dir === "-" &amp;&amp; currentVolume &gt; 0) {
     video.volume -= 0.1;
   }
 }
@@ -110,28 +110,34 @@ videoControls.style.display = 'block';
 <blockquote><p>If there is no <code>value</code> attribute, the progress bar is indeterminate; this indicates that an activity is ongoing with no indication of how long it is expected to take.</p>
 </blockquote>
 <p>Ideally, the correct value of the video's <code>duration</code> attribute is available when the <code>loadedmetadata</code> event is raised, which occurs when the video's metadata has been loaded:</p>
-<pre><code class="lang-js">video.addEventListener('loadedmetadata', () =&gt; {
-  progress.setAttribute('max', video.duration);
+<pre><code class="lang-js">video.addEventListener("loadedmetadata", () =&gt; {
+  progress.setAttribute("max", video.duration);
 });
 </code></pre>
 <p>Another event, <code>timeupdate</code>, is raised periodically as the video is being played through. This event is ideal for updating the progress bar's value, setting it to the value of the video's <code>currentTime</code> attribute, which indicates how far through the video the current playback is. The <code>&lt;span&gt;</code> element mentioned earlier, for browsers that do not support the <code>&lt;progress&gt;</code> element, is also updated at this time, setting its width to be a percentage of the total time played.</p>
-<pre><code class="lang-js">video.addEventListener('timeupdate', () =&gt; {
+<pre><code class="lang-js">video.addEventListener("timeupdate", () =&gt; {
   progress.value = video.currentTime;
-  progressBar.style.width = `${Math.floor(video.currentTime * 100 / video.duration)}%`;
+  progressBar.style.width = `${
+    Math.floor(video.currentTime * 100 / video.duration)
+  }%`;
 });
 </code></pre>
 <p>Coming back to the <code>video.duration</code> problem, unfortunately in some mobile browsers, when <code>loadedmetadata</code> is raised, <code>video.duration</code> may not have the correct value. So something else needs to be done. When the <code>timeupdate</code> event is raised, in most mobile browsers the video's <code>duration</code> attribute should now have the correct value. This can be taken advantage of to set the <code>progress</code> element's <code>max</code> attribute if it is currently not set:</p>
-<pre><code class="lang-js">video.addEventListener('timeupdate', () =&gt; {
-  if (!progress.getAttribute('max')) progress.setAttribute('max', video.duration);
+<pre><code class="lang-js">video.addEventListener("timeupdate", () =&gt; {
+  if (!progress.getAttribute("max")) {
+    progress.setAttribute("max", video.duration);
+  }
   progress.value = video.currentTime;
-  progressBar.style.width = `${Math.floor(video.currentTime * 100 / video.duration)}%`;
+  progressBar.style.width = `${
+    Math.floor(video.currentTime * 100 / video.duration)
+  }%`;
 });
 </code></pre>
 <blockquote><p>The <code>timeupdate</code> event frequency is dependent on the system load, but will be thrown between about 4Hz and 66Hz (assuming the event handlers don't take longer than 250ms to run). User agents are encouraged to vary the frequency of the event based on the system load and the average cost of processing the event each time, so that the UI updates are not any more frequent than the user agent can comfortably handle while decoding the video.</p>
 </blockquote>
 <h3>Skip Ahead</h3>
 <p>Another feature of most browser default video control sets is the ability to click on the video's progress bar to "skip ahead" to a different point in the video. This can also be achieved by adding a <code>click</code> event listener to the <code>progress</code> element:</p>
-<pre><code class="lang-js">progress.addEventListener('click', (e) =&gt; {
+<pre><code class="lang-js">progress.addEventListener("click", (e) =&gt; {
   const rect = progress.getBoundingClientRect();
   const pos = (e.pageX - rect.left) / progress.offsetWidth;
   video.currentTime = pos * video.duration;
@@ -151,11 +157,11 @@ videoControls.style.display = 'block';
 
 // used to set some CSS to improve the styling of the custom controls when they are in fullscreen
 function setFullscreenData(state) {
-  videoContainer.setAttribute('data-fullscreen', !!state);
+  videoContainer.setAttribute("data-fullscreen", !!state);
 }
 </code></pre>
 <p>When a video goes into fullscreen mode, it usually displays a message indicating that the user can press the <code>Esc</code> key to exit fullscreen mode, so the code also needs to listen for relevant events in order to call the <code>setFullscreenData()</code> function to ensure the control styling is correct:</p>
-<pre><code class="lang-js">document.addEventListener('fullscreenchange', (e) =&gt; {
+<pre><code class="lang-js">document.addEventListener("fullscreenchange", (e) =&gt; {
   setFullscreenData(!!document.fullscreenElement);
 });
 </code></pre>
@@ -163,7 +169,7 @@ function setFullscreenData(state) {
 <p>Sometimes it's useful to know how much <code>&lt;audio&gt;</code> or <code>&lt;video&gt;</code> has downloaded or is playable without delay — a good example of this is the buffered progress bar of an audio or video player.</p>
 <p>The <code>buffered</code> attribute will tell us which parts of the media has been downloaded. It returns a <code>TimeRanges</code> object, which will tell us which chunks of media have been downloaded. This is usually contiguous but if the user jumps about while media is buffering, it may contain holes.</p>
 <pre><code class="lang-js">// a simple audio example
-const audio = document.getElementById('my-audio');
+const audio = document.getElementById("my-audio");
 const bufferedTimeRanges = audio.buffered;
 </code></pre>
 <p>TimeRanges are a series of non-overlapping ranges of time, with start and stop times. A TimeRanges Object consists of the following properties:</p>
@@ -175,22 +181,24 @@ const bufferedTimeRanges = audio.buffered;
 <p>Without any user interaction there is usually only one time range, but if you jump about in the media more than one time range can appear. <em>The time ranges are ordered by start time in ascending order.</em></p>
 <pre><code class="lang-js">// represents two buffered time ranges:
 // one spanning 0 to 5 seconds and the second spanning 15 to 19 seconds.
-audio.buffered.length;   // returns 2
+audio.buffered.length; // returns 2
 audio.buffered.start(0); // returns 0
-audio.buffered.end(0);   // returns 5
+audio.buffered.end(0); // returns 5
 audio.buffered.start(1); // returns 15
-audio.buffered.end(1);   // returns 19
+audio.buffered.end(1); // returns 19
 </code></pre>
 <p>If we wish to create our own custom player, it is better perhaps to give an indication of how much media has actually downloaded — this what the browser's native players seem to display.</p>
-<pre><code class="lang-js">// The progress event is fired as data is downloaded, 
+<pre><code class="lang-js">// The progress event is fired as data is downloaded,
 // this is a good event to react to if we want to display buffering progress.
-audio.addEventListener('progress', () =&gt; {
+audio.addEventListener("progress", () =&gt; {
   const duration = audio.duration;
   if (duration &gt; 0) {
     for (let i = 0; i &lt; audio.buffered.length; i++) {
       // find the buffered range closest to the current playback position
-      if (audio.buffered.start(audio.buffered.length - 1 - i) &lt; audio.currentTime) {
-        document.getElementById('buffered-amount').style.width = `${
+      if (
+        audio.buffered.start(audio.buffered.length - 1 - i) &lt; audio.currentTime
+      ) {
+        document.getElementById("buffered-amount").style.width = `${
           (audio.buffered.end(audio.buffered.length - 1 - i) * 100) / duration
         }%`;
         break;
@@ -203,28 +211,28 @@ audio.addEventListener('progress', () =&gt; {
 <blockquote><p>Refer to this article: <a href="https://web.dev/media-mobile-web-video-playback">https://web.dev/media-mobile-web-video-playback</a></p>
 </blockquote>
 <p>Rather than adjusting our video controls in the <code>click</code> event listener, we use the <code>play</code> and <code>pause</code> video events. Making our controls events based helps with flexibility and will allow us to keep our controls in sync if the browser intervenes in the playback.</p>
-<pre><code class="lang-js">video.addEventListener('play', function () {
-  playPauseButton.classList.add('playing');
+<pre><code class="lang-js">video.addEventListener("play", function() {
+  playPauseButton.classList.add("playing");
 });
 
-video.addEventListener('pause', function () {
-  playPauseButton.classList.remove('playing');
+video.addEventListener("pause", function() {
+  playPauseButton.classList.remove("playing");
 });
 
-video.addEventListener('ended', function () {
-  playPauseButton.classList.remove('playing');
+video.addEventListener("ended", function() {
+  playPauseButton.classList.remove("playing");
   video.currentTime = 0;
 });
 </code></pre>
 <p>Prevent automatic fullscreen. On iOS, <code>video</code> elements automatically enter fullscreen mode when media playback begins. Set the <code>playsinline</code> attribute of the <code>video</code> element to force it to play inline on iPhone and not enter fullscreen mode when playback begins. Note that this has no side effects on other browsers.</p>
 <p>When user clicks the "fullscreen button", let's exit fullscreen mode with <code>document.exitFullscreen()</code> if fullscreen mode is currently in use by the document. Otherwise, request fullscreen on the video container with the method <code>requestFullscreen()</code> if available or fallback to <code>webkitEnterFullscreen()</code> on the video element only on iOS.</p>
-<pre><code class="lang-js">fullscreenButton.addEventListener('click', function (event) {
+<pre><code class="lang-js">fullscreenButton.addEventListener("click", function(event) {
   event.stopPropagation();
   if (document.fullscreenElement) {
     document.exitFullscreen();
   } else {
     requestFullscreenVideo();
-    lockScreenInLandscape();  // will explain it later
+    lockScreenInLandscape(); // will explain it later
   }
 });
 
@@ -237,9 +245,9 @@ function requestFullscreenVideo() {
 }
 </code></pre>
 <p>As user rotates device in landscape mode, let's be smart about this and automatically request fullscreen to create an immersive experience. How does this work? As soon as we detect the screen orientation changes, let's request fullscreen if the browser window is in landscape mode. If not, let's exit fullscreen.</p>
-<pre><code class="lang-js">if ('orientation' in screen) {
-  screen.orientation.addEventListener('change', function () {
-    if (screen.orientation.type.startsWith('landscape')) {
+<pre><code class="lang-js">if ("orientation" in screen) {
+  screen.orientation.addEventListener("change", function() {
+    if (screen.orientation.type.startsWith("landscape")) {
       requestFullscreenVideo();
     } else if (document.fullscreenElement) {
       document.exitFullscreen();
@@ -249,16 +257,18 @@ function requestFullscreenVideo() {
 </code></pre>
 <p>As video may be better viewed in landscape mode, we may want to lock screen in landscape when user clicks the "fullscreen button". Locking screen in landscape is as easy as calling <code>screen.orientation.lock('landscape')</code>. However, we should do this only when device is in portrait mode with <code>matchMedia('(orientation: portrait)')</code> and can be held in one hand with <code>matchMedia('(max-device-width: 768px)')</code> as this wouldn't be a great experience for users on tablet.</p>
 <pre><code class="lang-js">function lockScreenInLandscape() {
-  if (!('orientation' in screen)) {
+  if (!("orientation" in screen)) {
     return;
   }
-  if (matchMedia('(orientation: portrait) and (max-device-width: 768px)').matches) {
-    screen.orientation.lock('landscape');
+  if (
+    matchMedia("(orientation: portrait) and (max-device-width: 768px)").matches
+  ) {
+    screen.orientation.lock("landscape");
   }
 }
 </code></pre>
 <p>Pause video on page visibility change. Code below pauses video when page is hidden. This happens when screen lock is active or when you switch tabs for instance.</p>
-<pre><code class="lang-js">document.addEventListener('visibilitychange', function () {
+<pre><code class="lang-js">document.addEventListener("visibilitychange", function() {
   if (document.hidden) {
     video.pause();
   }
@@ -266,7 +276,7 @@ function requestFullscreenVideo() {
 </code></pre>
 <p>If you use the Intersection Observer API, you can be even more granular at no cost. This API lets you know when an observed element enters or exits the browser's viewport. We want the video to autoplay when it is visible and probably pause when it's not visible.</p>
 <pre><code class="lang-js">function onIntersection(entries) {
-  entries.forEach(function (entry) {
+  entries.forEach(function(entry) {
     if (entry.isIntersecting) {
       video.play();
     } else {
