--- a/kexizeroing.github.io/Data Fetching with TanStack Query.html
+++ b/kexizeroing.github.io/Data Fetching with TanStack Query.html
@@ -2,15 +2,15 @@
 <h2>Background story</h2>
 <pre><code class="lang-jsx">// common fetch in useEffect example
 function Bookmarks({ category }) {
-  const [data, setData] = useState([])
-  const [error, setError] = useState()
+  const [data, setData] = useState([]);
+  const [error, setError] = useState();
 
   useEffect(() =&gt; {
     fetch(`${endpoint}/${category}`)
       .then(res =&gt; res.json())
       .then(d =&gt; setData(d))
-      .catch(e =&gt; setError(e))
-  }, [category])
+      .catch(e =&gt; setError(e));
+  }, [category]);
 }
 </code></pre>
 <p>Bugs from the above code:</p>
@@ -27,44 +27,44 @@ function Bookmarks({ category }) {
 <li>Race conditions &amp; cancellation</li>
 </ul>
 <pre><code class="lang-js">export default function useQuery(url) {
-  const [data, setData] = React.useState(null)
-  const [isLoading, setIsLoading] = React.useState(true)
-  const [error, setError] = React.useState(null)
+  const [data, setData] = React.useState(null);
+  const [isLoading, setIsLoading] = React.useState(true);
+  const [error, setError] = React.useState(null);
 
   React.useEffect(() =&gt; {
-    let active = true
+    let active = true;
 
     const handleFetch = async () =&gt; {
-      setData(null)
-      setIsLoading(true)
-      setError(null)
+      setData(null);
+      setIsLoading(true);
+      setError(null);
 
       try {
-        const res = await fetch(url)
+        const res = await fetch(url);
         if (!active) {
-          return 
+          return;
         }
         if (!res.ok) {
-          throw new Error(`Error: ${res.status}`)
+          throw new Error(`Error: ${res.status}`);
         }
-        const json = await res.json()
+        const json = await res.json();
 
-        setData(json)
-        setIsLoading(false)
+        setData(json);
+        setIsLoading(false);
       } catch (e) {
-        setError(e.message)
-        setIsLoading(false)
+        setError(e.message);
+        setIsLoading(false);
       }
-    }
+    };
 
-    handleFetch()
+    handleFetch();
 
     return () =&gt; {
-      active = false
-    }
-  }, [url])
+      active = false;
+    };
+  }, [url]);
 
-  return { data, isLoading, error }
+  return { data, isLoading, error };
 }
 </code></pre>
 <blockquote><p><code>useEffect</code> callback cannot be async. React expects <code>useEffect(() =&gt; {})</code> to return nothing or a cleanup function — not a Promise. So if you need <code>await</code>, you must define an inner async function and call it inside the effect.</p>
@@ -81,11 +81,11 @@ function Bookmarks({ category }) {
 <p>That's <a href="https://ui.dev/c/query/why-react-query">why React Query</a> was created. With React Query, the above <code>Bookmarks</code> example code becomes:</p>
 <pre><code class="lang-jsx">const useBookmarks = (category) =&gt; {
   return useQuery({
-    queryKey: ['bookmarks', category],
+    queryKey: ["bookmarks", category],
     queryFn: async () =&gt; {
       const response = await fetch(`${endpoint}/${category}`);
       if (!response.ok) {
-        throw new Error('Failed to fetch');
+        throw new Error("Failed to fetch");
       }
       return response.json();
     },
@@ -102,9 +102,7 @@ const Bookmarks = ({ category }) =&gt; {
     &lt;div&gt;
       &lt;h2&gt;{category} Bookmarks&lt;/h2&gt;
       &lt;ul&gt;
-        {data.map((bookmark) =&gt; (
-          &lt;li key={bookmark.id}&gt;{bookmark.title}&lt;/li&gt;
-        ))}
+        {data.map((bookmark) =&gt; &lt;li key={bookmark.id}&gt;{bookmark.title}&lt;/li&gt;)}
       &lt;/ul&gt;
     &lt;/div&gt;
   );
@@ -185,12 +183,12 @@ const Bookmarks = ({ category }) =&gt; {
 }
 </code></pre>
 <p>Use <code>useSuspenseQuery</code> when you want to leverage React's Suspense for declarative data fetching, which automatically suspends the component while data is loading. When using suspense mode, <code>status</code> states and <code>error</code> objects are not needed and are then replaced by usage of the Suspense and ErrorBoundary. <code>data</code> is guaranteed to be defined.</p>
-<pre><code class="lang-js">import { useSuspenseQuery } from '@tanstack/react-query';
+<pre><code class="lang-js">import { useSuspenseQuery } from "@tanstack/react-query";
 
 function SuspendedComponent() {
   const { data } = useSuspenseQuery({
-    queryKey: ['dataKey'],
-    queryFn: fetchData
+    queryKey: ["dataKey"],
+    queryFn: fetchData,
   });
 
   return &lt;p&gt;{data}&lt;/p&gt;;
@@ -206,12 +204,12 @@ function App() {
 </code></pre>
 <p>One of the best ways to share <code>queryKey</code> and <code>queryFn</code> between multiple places is to use the <code>queryOptions</code> helper. It makes sense to abstract the object away into a query definition. At runtime, this helper just returns whatever you pass into it, but it has a lot of advantages when using it with TypeScript.</p>
 <pre><code class="lang-ts">const todosQuery = queryOptions({
-  queryKey: ['todos'],
+  queryKey: ["todos"],
   queryFn: async () =&gt; {
-    const response = await fetch('/api/todos');
+    const response = await fetch("/api/todos");
     return response.json();
   },
-  staleTime: 1000 * 60
+  staleTime: 1000 * 60,
 });
 
 // Then, use it in a component
@@ -227,7 +225,7 @@ const {
   isFetching,
   isFetchingNextPage,
 } = useInfiniteQuery({
-  queryKey: ['users'],
+  queryKey: ["users"],
   queryFn: getUsers,
   initialPageParam: 1,
   // fetch('/api/users?cursor=0')
@@ -235,7 +233,7 @@ const {
   // fetch('/api/users?cursor=3')
   // { data: [...], nextCursor: 6}
   getNextPageParam: (lastPage, pages) =&gt; lastPage.nextCursor,
-})
+});
 </code></pre>
 <blockquote><p><a href="https://pinia-colada.esm.dev">Pinia Colada</a> is the smart data fetching layer for Vue.js. You don't even need to learn Pinia to use Pinia Colada because it exposes its own composables.</p>
 <p>Pinia Colada shares similarities with TanStack Query and has adapted some of its APIs for easier migration. However, Pinia Colada is tailored specifically for Vue, resulting in a lighter library with better and official integrations like Data Loaders. If you're familiar with TanStack Query, you'll find Pinia Colada intuitive and easy to use. The size of Pinia Colada is much smaller.</p>
