--- a/kexizeroing.github.io/Explore running code in browser.html
+++ b/kexizeroing.github.io/Explore running code in browser.html
@@ -32,11 +32,11 @@ console.log(data);
 <p>JSX isn't natively understood by browsers, so we need to transform it into regular JavaScript. This is typically done using Babel. In this case, we're using <code>@babel/standalone</code>, which is a browser version of Babel.</p>
 <blockquote><p>If you're using Babel in production, you should normally not use <code>@babel/standalone</code>. Instead, you should use a build system running on Node.js, such as Webpack, Rollup, or Parcel, to transpile your JS ahead of time.</p>
 </blockquote>
-<pre><code class="lang-js">import { transform } from '@babel/standalone';
+<pre><code class="lang-js">import { transform } from "@babel/standalone";
 
 const babelTransform = (code) =&gt; {
   return transform(code, {
-    presets: ['react', 'typescript'],
+    presets: ["react", "typescript"],
   }).code;
 };
 
@@ -50,31 +50,31 @@ const compiledCode = babelTransform(jsxCode);
 console.log(compiledCode);
 </code></pre>
 <p>Monaco Editor (<a href="https://github.com/microsoft/monaco-editor">https://github.com/microsoft/monaco-editor</a>) can provide a rich editing experience for the JSX code. It is a browser based code editor that powers VS Code, but it's an overkill for websites that only need to show read-only codeblocks.</p>
-<pre><code class="lang-js">import * as monaco from 'https://esm.sh/monaco-editor@0.30.1';
+<pre><code class="lang-js">import * as monaco from "https://esm.sh/monaco-editor@0.30.1";
 
-const editor = monaco.editor.create(document.getElementById('editor'), {
+const editor = monaco.editor.create(document.getElementById("editor"), {
   value: `const App = () =&gt; {
     return &lt;h1&gt;Hello, World!&lt;/h1&gt;;
     };`,
-  language: 'javascript',
-  theme: 'vs-dark'
+  language: "javascript",
+  theme: "vs-dark",
 });
 </code></pre>
 <p>To prevent the main thread from being blocked during code compilation, which could cause the UI to feel sluggish, we can use a Web Worker:</p>
 <pre><code class="lang-js">// compiler.worker.js
-self.addEventListener('message', async ({ data }) =&gt; {
+self.addEventListener("message", async ({ data }) =&gt; {
   const compiledCode = babelTransform(data);
   self.postMessage(compiledCode);
 });
 
 // main.js
-const compilerWorker = new Worker('compiler.worker.js');
+const compilerWorker = new Worker("compiler.worker.js");
 
 compilerWorker.postMessage(jsxCode);
 
-compilerWorker.addEventListener('message', ({ data }) =&gt; {
+compilerWorker.addEventListener("message", ({ data }) =&gt; {
   // data contains the compiled code
-  console.log('Compiled code:', data);
+  console.log("Compiled code:", data);
 });
 </code></pre>
 <blockquote><p><a href="https://github.com/LionyxML/web-workers-react-talk">https://github.com/LionyxML/web-workers-react-talk</a></p>
@@ -102,7 +102,7 @@ compilerWorker.addEventListener('message', ({ data }) =&gt; {
 const compiledModuleCode = babelTransform(moduleCode);
 
 const moduleURL = URL.createObjectURL(
-  new Blob([compiledModuleCode], { type: 'application/javascript' })
+  new Blob([compiledModuleCode], { type: "application/javascript" }),
 );
 
 // Now you can import this module using:
@@ -169,7 +169,7 @@ ReactDOM.render(
 const engine = await webllm.CreateMLCEngine(selectedModel);
 </code></pre>
 <p>Pyodide is a Python distribution for the browser and Node.js based on WebAssembly. Pyodide makes it possible to install and run Python packages in the browser. Try Pyodide in a <a href="https://pyodide.org/en/stable/console.html">REPL</a> directly in your browser, or <a href="https://pydantic.run/">pydantic.run</a>, a Python browser sandbox based on Pyodide. Write and share Python code, run it in the browser.</p>
-<pre><code class="lang-js">async function main(){
+<pre><code class="lang-js">async function main() {
   let pyodide = await loadPyodide();
   console.log(pyodide.runPython(`
       import sys
