--- a/kexizeroing.github.io/Making constants type-safe in TypeScript.html
+++ b/kexizeroing.github.io/Making constants type-safe in TypeScript.html
@@ -22,14 +22,14 @@ SOCIAL_POST: 'cat_789',
 <li>Allow any number of keys, all optional</li>
 </ul>
 <pre><code class="lang-typescript">const cache: { [key: string]: number } = {};
-cache['item_1'] = 42;
+cache["item_1"] = 42;
 </code></pre>
 <h3>Mapped Type: <code>{ [K in Type]: Value }</code></h3>
 <ul>
 <li><code>Type</code> can be a <strong>union</strong> or <strong>enum</strong></li>
 <li>Keys are known and fixed, all required unless marked optional</li>
 </ul>
-<pre><code class="lang-typescript">type CacheKey = 'item_1' | 'item_2';
+<pre><code class="lang-typescript">type CacheKey = "item_1" | "item_2";
 type Cache = { [K in CacheKey]: number };
 
 const cache: Cache = {
@@ -42,9 +42,9 @@ const cache: Cache = {
 <h2>Option 1: Object with <code>as const</code></h2>
 <p>When you use <code>as const</code>, TypeScript makes the value deeply readonly and narrows all literals to their exact values.</p>
 <pre><code class="lang-typescript">export const Categories = {
-  PRESENTATION: 'cat_123',
-  POSTER: 'cat_456',
-  SOCIAL_POST: 'cat_789',
+  PRESENTATION: "cat_123",
+  POSTER: "cat_456",
+  SOCIAL_POST: "cat_789",
 } as const;
 
 export type Category = (typeof Categories)[keyof typeof Categories];
@@ -56,9 +56,9 @@ const id = Categories.PRESENTATION; // 'cat_123'
 
 // Works with Record
 const styles: Record&lt;Category, string&gt; = {
-  [Categories.PRESENTATION]: 'Professional',
-  [Categories.POSTER]: 'Creative',
-  [Categories.SOCIAL_POST]: 'Casual',
+  [Categories.PRESENTATION]: "Professional",
+  [Categories.POSTER]: "Creative",
+  [Categories.SOCIAL_POST]: "Casual",
 };
 </code></pre>
 <h3>Common Pitfall</h3>
@@ -69,9 +69,9 @@ const styles: { [key: Category]: string } = { ... };
 <p>You cannot use a literal union type in an <strong>index signature</strong>. However, <code>Record&lt;Category, string&gt;</code> works because it is implemented as a <strong>mapped type</strong>, not an index signature.</p>
 <h2>Option 2: <code>const enum</code></h2>
 <pre><code class="lang-typescript">export const enum Categories {
-  PRESENTATION = 'cat_123',
-  POSTER = 'cat_456',
-  SOCIAL_POST = 'cat_789',
+  PRESENTATION = "cat_123",
+  POSTER = "cat_456",
+  SOCIAL_POST = "cat_789",
 }
 </code></pre>
 <h3>Usage Example</h3>
@@ -101,8 +101,8 @@ const styles3: { [key: Categories]: string } = { ... };
 <p>A <code>const enum</code> is different: it is completely erased at compile time. No runtime object is generated at all — the compiler inlines the values directly.</p>
 </blockquote>
 <pre><code class="lang-typescript">export const enum Category {
-  PRESENTATION = 'cat_123',
-  POSTER = 'cat_456',
+  PRESENTATION = "cat_123",
+  POSTER = "cat_456",
 }
 
 const id = Category.PRESENTATION;
@@ -116,5 +116,37 @@ const id = "cat_123";
 <li><code>const enum</code> is compile-time only. It disappears after compilation and cannot be referenced dynamically.</li>
 </ul>
 <h2>Bonus: Runtime Validation with Zod</h2>
-<p>Zod adds a third, practical option that bridges runtime and compile-time checks.</p>
-<p>If you need runtime validation as well as type safety, libraries like Zod go a step further. With Zod, you can define your constants once, validate them at runtime, and infer their types automatically. It’s heavier than <code>as const</code> or <code>const enum</code>, but ideal when values come from external sources like APIs or configs.</p>
+<p>There’s one area where TypeScript alone falls short: runtime validation. When data comes from external sources (API responses, form submissions or user inputs), TypeScript can’t guarantee that the data matches our expected types at runtime. This is where a library like Zod comes in.</p>
+<p>Zod bridges the gap between compile-time type safety and runtime validation. It allows us to define schemas that not only validate data at runtime but also automatically infer TypeScript types, giving us the best of both worlds.</p>
+<pre><code class="lang-js">interface User {
+  name: string;
+  email: string;
+  age: number;
+}
+
+async function fetchUser(id: string): Promise&lt;User&gt; {
+  const response = await fetch(`/api/users/${id}`);
+  const data = await response.json();
+
+  // Type assertion - dangerous!
+  return data as User;
+}
+</code></pre>
+<pre><code class="lang-js">import { z } from 'zod';
+
+const UserSchema = z.object({
+  name: z.string(),
+  email: z.string().email(),
+  age: z.number().positive()
+});
+
+type User = z.infer&lt;typeof UserSchema&gt;;
+
+async function fetchUser(id: string): Promise&lt;User&gt; {
+  const response = await fetch(`/api/users/${id}`);
+  const data = await response.json();
+
+  // Validate and parse the data
+  return UserSchema.parse(data); // Throws if validation fails
+}
+</code></pre>
