--- a/kexizeroing.github.io/Notes on Model Context Protocol.html
+++ b/kexizeroing.github.io/Notes on Model Context Protocol.html
@@ -6,9 +6,8 @@
 <p>MCP adds another layer: your tools are hosted outside your app, on a separate server. MCP servers make sense when you want your context and tools to be shared across many apps, models, or environments.</p>
 </blockquote>
 <h3>MCP is not magic</h3>
-<p>MCP isn't magic — it's a standard way for AI to discover and use tools without learning every API's specific details. An MCP server is like a menu of tools. Each tool has a name, a description, a schema defining what info it needs, and the actual code that makes the API calls. AI applications (like Claude or Cline) can dynamically query these servers to execute tasks such as reading files, querying databases, or creating new integrations.</p>
-<blockquote><p>Most MCP servers work "locally" (over a mechanism called <code>stdio</code>): you download a copy of the source code and run the code on your own computer. Servers rely on a command line tool either <code>npx</code> or <code>uvx</code> to download and run the server's code on your local machine.</p>
-</blockquote>
+<p>MCP isn't magic — it's a standard way for AI to discover and use tools without learning every API's specific details. An MCP server is like a menu of tools. Each tool has a name, a description, a schema defining what info it needs, and the actual code that makes the API calls. AI applications can dynamically query these servers to execute tasks such as reading files, querying databases, or creating new integrations.</p>
+<p>Whether you’re using OpenAI, Anthropic, or another LLM, MCP stays the same. The code becomes more maintainable (since you’re calling a generic <code>mcpClient.request</code> rather than service-specific code). Debugging is also easier, since you can monitor the JSON-RPC messages to see exactly what was requested and returned, rather than parsing model-generated text for clues.</p>
 <h3>MCP server and client</h3>
 <p>MCP uses a client-server design where applications can connect to multiple resources.</p>
 <p>The <strong>MCP host</strong> is the program that's going to access the MCP servers. This might be Claude Desktop, Cursor, Windsurf, or any other application that supports MCP. Any application implementing the MCP protocol to allow connections to MCP servers is a host.</p>
@@ -17,15 +16,17 @@
 <p>The client connects to its server using a <strong>transport</strong>. This transport is responsible for sending messages between the client and the server. There are currently two supported transports. You can communicate via <code>stdio</code> - in other words, via the terminal. Or you can communicate through HTTP via server-sent events. This is useful if you want to run your server on a remote machine.</p>
 <blockquote><p>Transports are how the model talks to your MCP server. Today, StreamableHTTP is the main one. The model uses standard HTTP to hit a URL and create a connection. Optionally, it also allows the use of SSE on the side for real time notifications. The other popular transport is stdio, used in local or CLI environments where the model and tools share the same process.</p>
 </blockquote>
-<p>The <strong>protocol</strong> defines JSON message formats, based on JSON-RPC 2.0, for communication between client and server. This simple contract allows for incredible flexibility. Your server doesn’t need to know anything about the LLM, and the LLM doesn’t need to know anything about your server’s internal implementation. They just need to speak the common language of MCP.</p>
-<pre><code class="lang-json">// Client sends...
+<p>The <strong>protocol</strong> defines JSON message formats, based on JSON-RPC, for communication between client and server. This simple contract allows for incredible flexibility. Your server doesn’t need to know anything about the LLM, and the LLM doesn’t need to know anything about your server’s internal implementation. They just need to speak the common language of MCP.</p>
+<pre><code class="lang-json">// To list available tools, an MCP client sends a request like this:
 {
   "jsonrpc": "2.0",
   "id": 1,
-  "method": "tools/list"
+  "method": "tools/list",
+  "params": {}
 }
 
-// Server sends back...
+// Server would reply with a structured JSON listing the tools
+// (each with a name, description, and input schema)
 {
   "jsonrpc": "2.0",
   "id": 1,
@@ -40,7 +41,7 @@
   ]
 }
 
-// Client sends...
+// Client invokes a call
 {
   "jsonrpc": "2.0",
   "id": 2,
@@ -55,7 +56,8 @@
   }
 }
 
-// Server sends back...
+// Server executes the function
+// returns the result in a structured JSON response
 {
   "jsonrpc": "2.0",
   "id": 2,
@@ -67,8 +69,11 @@
   ],
   "isError": false
 }
+
+// The client can then feed that result back into the model’s context or response.
 </code></pre>
 <h3>The simplest MCP server</h3>
+<p>One of the standout features of MCP is its flexibility in server development. Developers can use any programming language that can print to stdout or serve an HTTP endpoint, allowing them to choose their preferred language and technology stack.</p>
 <pre><code class="lang-js">// npm i @modelcontextprotocol/sdk zod
 // server-logic.js
 import { McpServer } from "@modelcontextprotocol/sdk/server/mcp.js";
@@ -82,9 +87,9 @@ export const server = new McpServer({
 server.tool(
   "getWeather",
   "Tool to get the weather for a city",
-  { city: z.string().describe('The city to get the weather for') },
+  { city: z.string().describe("The city to get the weather for") },
   async ({ city }) =&gt; {
-    // await fetch('wheather API') 
+    // await fetch('wheather API')
 
     return {
       content: [
@@ -94,7 +99,7 @@ server.tool(
         },
       ],
     };
-  },
+  }
 );
 </code></pre>
 <blockquote><p>The <code>register*</code> methods (<code>registerTool</code>, <code>registerPrompt</code>, <code>registerResource</code>) are the recommended approach for new code. The older methods (<code>tool</code>, <code>prompt</code>, <code>resource</code>) remain available for backwards compatibility. The optional <code>title</code> field for better UI presentation. The title is used as a display name, while <code>name</code> remains the unique identifier.</p>
@@ -105,13 +110,13 @@ server.registerTool(
   {
     title: "Weather Fetcher",
     description: "Get weather data for a city",
-    inputSchema: { city: z.string() }
+    inputSchema: { city: z.string() },
   },
   async ({ city }) =&gt; {
     const response = await fetch(`https://api.weather.com/${city}`);
     const data = await response.text();
     return {
-      content: [{ type: "text", text: data }]
+      content: [{ type: "text", text: data }],
     };
   }
 );
@@ -126,8 +131,8 @@ await server.connect(transport);
 </code></pre>
 <p>SSE transport enables server-to-client streaming with HTTP POST requests for client-to-server communication.</p>
 <pre><code class="lang-js">// 2. use sse
-import express from "express";
 import { SSEServerTransport } from "@modelcontextprotocol/sdk/server/sse.js";
+import express from "express";
 import { server } from "./server-logic.js";
 
 const app = express();
@@ -152,16 +157,11 @@ app.listen(port, () =&gt; {
   "mcpServers": {
     "weather-example": {
       "command": "node",
-      "args": [
-        "/ABSOLUTE/PATH/TO/PARENT/FOLDER/weather/build/index.js"
-      ]
+      "args": ["/ABSOLUTE/PATH/TO/PARENT/FOLDER/weather/build/index.js"]
     },
     "sequential-thinking": {
       "command": "npx",
-      "args": [
-        "-y",
-        "@modelcontextprotocol/server-sequential-thinking",
-      ]
+      "args": ["-y", "@modelcontextprotocol/server-sequential-thinking"]
     }
   }
 }
@@ -181,23 +181,23 @@ claude
 </code></pre>
 <h3>AI SDK MCP clients</h3>
 <p>The SDK supports connecting to MCP servers via either stdio (for local tools) or SSE (for remote servers). Once connected, you can use MCP tools directly with the AI SDK. The client exposes a <code>tools</code> method for retrieving tools from a MCP server.</p>
-<pre><code class="lang-js">import { experimental_createMCPClient as createMCPClient } from 'ai';
-import { openai } from '@ai-sdk/openai';
+<pre><code class="lang-js">import { openai } from "@ai-sdk/openai";
+import { experimental_createMCPClient as createMCPClient } from "ai";
 
 const mcpClient = await createMCPClient({
   transport: {
-    type: 'sse',
-    url: 'http://localhost:8081/sse',
+    type: "sse",
+    url: "http://localhost:8081/sse",
   },
-  name: 'My MCP Server',
+  name: "My MCP Server",
 });
 
 // The client's tools method acts as an adapter between MCP tools and AI SDK tools.
 // https://sdk.vercel.ai/docs/ai-sdk-core/tools-and-tool-calling#using-mcp-tools
 const response = await generateText({
-  model: openai('gpt-4o'),
+  model: openai("gpt-4o"),
   tools: await mcpClient.tools(),
-  prompt: 'Find products under $100',
+  prompt: "Find products under $100",
 });
 </code></pre>
 <pre><code class="lang-js">// Sometimes it's good to hint to the AI that you want it to use tools.
