--- a/kexizeroing.github.io/PDF custom rendering.html
+++ b/kexizeroing.github.io/PDF custom rendering.html
@@ -190,7 +190,7 @@
 <p>To edit a PDF in any meaningful GUI way, you would need to unpack the PDF and render the components (images, formatted text, pages) to the display device; then allow folks to mess with the layout; then re-pack the PDF. You would have to do this perfectly in line with the PDF standards otherwise you may find the downstream consumers of your edited PDF file crash or are unable to render it. It's a very complicated subject.</p>
 <p>If you need to annotate the PDF then things are easier. On the server, you need to generate images of the pages of the document, send those to the client, display them to the user, let the user mark them up, capture the co-ordinates of the annotations back to the server and use a server-side PDF library to render the annotations into the PDF. It is achievable, though requires various skillsets for server-side PDF to image manipulation and client side presentation and annotation capture.</p>
 <blockquote><p>PDF.js provides only viewer. It is designed for reading PDF files, not editing them. Because of that we don't support adding any kind of annotations. However, we do support rendering annotations for viewing.</p>
-<p>页面上展示出来的每一页 PDF 有三层：<br/>
+<p>页面上展示出来的每一页 PDF 有三层：\
 canvas 预览层（原始 pdf）-&gt; annotationLayer 批注层（使用 svg，记录坐标）-&gt; textLayer 文字层（透明的，在最上层保证文字一直可选）</p>
 </blockquote>
 <p>See also:</p>
