--- a/kexizeroing.github.io/SWR, SWC, and MSW.html
+++ b/kexizeroing.github.io/SWR, SWC, and MSW.html
@@ -3,41 +3,41 @@
 <h2>SWR - React Hooks for Data Fetching</h2>
 <p>The name “SWR” is derived from <code>stale-while-revalidate</code>, a cache invalidation strategy. SWR is a strategy to first return the data from cache (stale), then send the fetch request (revalidate), and finally come with the up-to-date data.</p>
 <p><code>useSWR</code> accepts a key and a fetcher function. The key is a unique identifier of the request, normally the URL of the API. And the fetcher accepts key as its parameter and returns the data asynchronously. The fetcher can be any asynchronous function, you can use your favourite data-fetching library to handle that part.</p>
-<pre><code class="lang-jsx">import useSWR from 'swr'
+<pre><code class="lang-jsx">import useSWR from "swr";
 // you can use the native fetch or tools like Axios
-const fetcher = (...args) =&gt; fetch(...args).then(res =&gt; res.json())
+const fetcher = (...args) =&gt; fetch(...args).then(res =&gt; res.json());
 
-function Profile () {
-  const { data, error, isLoading } = useSWR('/api/user/123', fetcher)
+function Profile() {
+  const { data, error, isLoading } = useSWR("/api/user/123", fetcher);
 
-  if (error) return &lt;div&gt;failed to load&lt;/div&gt;
-  if (isLoading) return &lt;div&gt;loading...&lt;/div&gt;
+  if (error) return &lt;div&gt;failed to load&lt;/div&gt;;
+  if (isLoading) return &lt;div&gt;loading...&lt;/div&gt;;
 
-  return &lt;div&gt;hello {data.name}!&lt;/div&gt;
+  return &lt;div&gt;hello {data.name}!&lt;/div&gt;;
 }
 </code></pre>
 <p>When building a web app, you might need to reuse the data in many places of the UI. It is incredibly easy to create reusable data hooks on top of SWR:</p>
-<pre><code class="lang-jsx">function useUser (id) {
-  const { data, error, isLoading } = useSWR(`/api/user/${id}`, fetcher)
+<pre><code class="lang-jsx">function useUser(id) {
+  const { data, error, isLoading } = useSWR(`/api/user/${id}`, fetcher);
 
   return {
     user: data,
     isLoading,
-    isError: error
-  }
+    isError: error,
+  };
 }
 
 // use it in your components
-function Content () {
-  const { user, isLoading } = useUser()
-  if (isLoading) return &lt;Spinner /&gt;
-  return &lt;h1&gt;Welcome back, {user.name}&lt;/h1&gt;
+function Content() {
+  const { user, isLoading } = useUser();
+  if (isLoading) return &lt;Spinner /&gt;;
+  return &lt;h1&gt;Welcome back, {user.name}&lt;/h1&gt;;
 }
 
-function Avatar () {
-  const { user, isLoading } = useUser()
-  if (isLoading) return &lt;Spinner /&gt;
-  return &lt;img src={user.avatar} alt={user.name} /&gt;
+function Avatar() {
+  const { user, isLoading } = useUser();
+  if (isLoading) return &lt;Spinner /&gt;;
+  return &lt;img src={user.avatar} alt={user.name} /&gt;;
 }
 </code></pre>
 <p>By adopting this pattern, you can forget about fetching data in the imperative way: start the request, update the loading state, and return the final result. Instead, your code is more declarative: you just need to specify what data is used by the component.</p>
@@ -57,29 +57,33 @@ function Avatar () {
 <p>There're 2 ways to use the mutate API to mutate the data, the global mutate API which can mutate any key and the bound mutate API which only can mutate the data of corresponding SWR hook.</p>
 <p>When you call <code>mutate(key)</code> or just <code>mutate()</code> with the bound mutate API without any data, it will trigger a revalidation (mark the data as expired and trigger a refetch) for the resource.</p>
 <pre><code class="lang-js">// global mutate
-import { useSWRConfig } from "swr"
+import { useSWRConfig } from "swr";
 
 function App() {
-  const { mutate } = useSWRConfig()
-  mutate(key, data, options)
+  const { mutate } = useSWRConfig();
+  mutate(key, data, options);
 }
 </code></pre>
-<pre><code class="lang-jsx">// bound mutate 
-function Profile () {
-  const { data, mutate } = useSWR('/api/user', fetcher)
+<pre><code class="lang-jsx">// bound mutate
+function Profile() {
+  const { data, mutate } = useSWR("/api/user", fetcher);
 
   return (
     &lt;div&gt;
       &lt;h1&gt;My name is {data.name}.&lt;/h1&gt;
-      &lt;button onClick={async () =&gt; {
-        const newName = data.name.toUpperCase()
-        // send a request to the API to update the data
-        await requestUpdateUsername(newName)
-        // update the local data immediately and revalidate (refetch)
-        mutate({ ...data, name: newName })
-      }}&gt;Uppercase my name!&lt;/button&gt;
+      &lt;button
+        onClick={async () =&gt; {
+          const newName = data.name.toUpperCase();
+          // send a request to the API to update the data
+          await requestUpdateUsername(newName);
+          // update the local data immediately and revalidate (refetch)
+          mutate({ ...data, name: newName });
+        }}
+      &gt;
+        Uppercase my name!
+      &lt;/button&gt;
     &lt;/div&gt;
-  )
+  );
 }
 </code></pre>
 <p>SWR also provides <code>useSWRMutation</code> as a hook for remote mutations.</p>
@@ -134,29 +138,29 @@ npx swc ./file.js -o output.js
 <p>SWC and esbuild are both fast compilers for JavaScript and TypeScript, but they serve different purposes. <strong>SWC</strong>, written in Rust, is mainly used as a drop-in replacement for Babel, focusing on fast code transformation. <strong>esbuild</strong>, written in Go, is a bundler and transformer known for its speed, and it's often used internally by tools like Vite for dependency pre-bundling.</p>
 <pre><code class="lang-js">// npm install @swc/core @swc/cli --save-dev
 
-const { transformFileSync } = require('@swc/core');
-const fs = require('fs');
-const path = require('path');
+const { transformFileSync } = require("@swc/core");
+const fs = require("fs");
+const path = require("path");
 
-const inputFilePath = path.join(__dirname, 'example.jsx');
-const outputFilePath = path.join(__dirname, 'example.js');
+const inputFilePath = path.join(__dirname, "example.jsx");
+const outputFilePath = path.join(__dirname, "example.js");
 
 const output = transformFileSync(inputFilePath, {
   jsc: {
     parser: {
-      syntax: 'ecmascript',
-      jsx: true
+      syntax: "ecmascript",
+      jsx: true,
     },
     transform: {
       react: {
-        runtime: 'classic', // use React.createElement
-      }
-    }
-  }
+        runtime: "classic", // use React.createElement
+      },
+    },
+  },
 });
 
 fs.writeFileSync(outputFilePath, output.code);
-console.log('Transformation complete. Output written to example.js');
+console.log("Transformation complete. Output written to example.js");
 </code></pre>
 <h3>Biome - Toolchain of the web</h3>
 <ul>
@@ -180,10 +184,8 @@ biome migrate prettier --write
 <p><a href="https://rolldown.rs">Rolldown</a> is a Rust-based next-generation bundler with Rollup-compatible API. Oxc acts as foundational layer for Rolldown, providing the necessary building blocks for efficient JavaScript and TypeScript processing.</p>
 <p>Rolldown is primary designed to serve as the underlying bundler in Vite, with the goal to replace esbuild and Rollup with one unified build tool. Although designed for Vite, Rolldown is also fully capable of being used as a standalone, general-purpose bundler. It can serve as a drop-in replacement for Rollup in most cases.</p>
 <blockquote><ol>
-<li><p>A deep analysis on why bundlers are still needed: <a href="https://rolldown.rs/guide/in-depth/why-bundlers">https://rolldown.rs/guide/in-depth/why-bundlers</a></p>
-</li>
-<li><p>Try out the Rolldown-powered Vite today by using the <a href="https://voidzero.dev/posts/announcing-rolldown-vite">rolldown-vite</a> package instead of the default vite package. It is a drop-in replacement, as Rolldown will become the default bundler for Vite in the future.</p>
-</li>
+<li>A deep analysis on why bundlers are still needed: <a href="https://rolldown.rs/guide/in-depth/why-bundlers">https://rolldown.rs/guide/in-depth/why-bundlers</a></li>
+<li>Try out the Rolldown-powered Vite today by using the <a href="https://voidzero.dev/posts/announcing-rolldown-vite">rolldown-vite</a> package instead of the default vite package. It is a drop-in replacement, as Rolldown will become the default bundler for Vite in the future.</li>
 </ol>
 </blockquote>
 <pre><code class="lang-json">{
@@ -198,12 +200,12 @@ biome migrate prettier --write
 <p>Mock Service Worker is an API mocking library for browser and Node.js that uses a Service Worker to intercept requests that actually happened. Developers come to MSW for various reasons: to establish proper testing boundaries, to prototype applications, debug network-related issues, or monitor production traffic.</p>
 <p>Mock Service Worker intercepts requests on the network level. It respects the Fetch API specification, which means that the mocked responses you construct are the same responses you would receive when making a fetch call.</p>
 <pre><code class="lang-js">// MSW 2.0 new syntax
-import { http, HttpResponse } from 'msw'
+import { http, HttpResponse } from "msw";
 
 export const handlers = [
-  http.get('/resource', () =&gt; {
-    return HttpResponse.text('Hello world!')
+  http.get("/resource", () =&gt; {
+    return HttpResponse.text("Hello world!");
   }),
-]
+];
 </code></pre>
 <p>With MSW, we no longer need to worry about mocking specific libraries like Axios or the fetch method. It provides a library-agnostic solution, enabling consistent tests regardless of the underlying HTTP library used in our projects.</p>
