--- a/kexizeroing.github.io/Vue reactivity clone.html
+++ b/kexizeroing.github.io/Vue reactivity clone.html
@@ -1,13 +1,13 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/vue-reactivity-clone.md">仓库源文</a>，<a href="https://kexizeroing.github.io/vue-reactivity-clone">站点原文</a></h2>
 <p>In a reactive programming context, dependency tracking is a technique used to automatically update computations that depend on some input data when that data changes. In order for dependency tracking to work, the reactive framework needs to know which computations depend on which data. This is typically done by wrapping the data in reactive objects or variables that the framework can monitor for changes. When a piece of data changes, the framework can then notify any computations that depend on that data and trigger a re-evaluation of those computations.</p>
 <p>Reactive data can be broadly thought of as data that causes some intended side effect when accessed or modified. By default, JavaScript isn’t reactive.</p>
-<pre><code class="lang-js">let framework = 'Vue'
-let sentence = `${framework} is awesome`
-console.log(sentence)
+<pre><code class="lang-js">let framework = "Vue";
+let sentence = `${framework} is awesome`;
+console.log(sentence);
 // logs "Vue is awesome"
 
-framework = 'React'
-console.log(sentence)
+framework = "React";
+console.log(sentence);
 // still logs "Vue is awesome"
 // should log "React is awesome" if 'sentence' is reactive.
 </code></pre>
@@ -19,61 +19,61 @@ console.log(sentence)
 </blockquote>
 <h3>Vue reactivity implementation</h3>
 <p>&lt;img alt="Vue3 reactivity" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/ba9fd338-ae71-43ab-88cc-52086aa8700a.png" width="650" /&gt;</p>
-<pre><code class="lang-js">let activeEffect = null
+<pre><code class="lang-js">let activeEffect = null;
 
 // targetMap: WeakMap&lt;target, depsMap&gt;
 // depsMap: Map&lt;key, dep&gt;
 // dep: Set&lt;effect&gt;
-const targetMap = new Map()
+const targetMap = new Map();
 
 function track(target, key) {
   if (activeEffect) {
-    let depsMap = targetMap.get(target)
+    let depsMap = targetMap.get(target);
     if (!depsMap) {
-      depsMap = new Map()
-      targetMap.set(target, depsMap)
+      depsMap = new Map();
+      targetMap.set(target, depsMap);
     }
 
-    let dep = depsMap.get(key)
+    let dep = depsMap.get(key);
     if (!dep) {
-      dep = new Set()
-      depsMap.set(key, dep)
+      dep = new Set();
+      depsMap.set(key, dep);
     }
 
-    dep.add(activeEffect)
+    dep.add(activeEffect);
   }
 }
 
 function trigger(target, key) {
-  const depsMap = targetMap.get(target)
-  if (!depsMap) return
+  const depsMap = targetMap.get(target);
+  if (!depsMap) return;
 
-  const dep = depsMap.get(key)
-  if (!dep) return
+  const dep = depsMap.get(key);
+  if (!dep) return;
 
-  dep.forEach(effect =&gt; effect())
+  dep.forEach(effect =&gt; effect());
 }
 
 function reactive(target) {
   const handler = {
     get(target, key, receiver) {
-      const result = Reflect.get(target, key, receiver)
-      track(target, key)
-      return result
+      const result = Reflect.get(target, key, receiver);
+      track(target, key);
+      return result;
     },
     set(target, key, value, receiver) {
-      const result = Reflect.set(target, key, value, receiver)
-      trigger(target, key)
-      return result
-    }
-  }
-  return new Proxy(target, handler)
+      const result = Reflect.set(target, key, value, receiver);
+      trigger(target, key);
+      return result;
+    },
+  };
+  return new Proxy(target, handler);
 }
 
 function effect(fn) {
-  activeEffect = fn
-  activeEffect()
-  activeEffect = null
+  activeEffect = fn;
+  activeEffect();
+  activeEffect = null;
 }
 
 // targetMap: Map {
@@ -82,16 +82,16 @@ function effect(fn) {
 //     'quantity' → Set { effect1, effect3 }
 //   }
 // }
-let product = reactive({ price: 10, quantity: 4 })
-let total = 0
+let product = reactive({ price: 10, quantity: 4 });
+let total = 0;
 
 effect(() =&gt; {
-  total = product.price * product.quantity
-  console.log('total changed ', total)
-})
+  total = product.price * product.quantity;
+  console.log("total changed ", total);
+});
 
-product.quantity = 5
-product.price = 12
+product.quantity = 5;
+product.price = 12;
 </code></pre>
 <blockquote><p>Purpose of <code>if (activeEffect)</code> check and <code>activeEffect = null</code></p>
 <ol>
@@ -101,62 +101,62 @@ product.price = 12
 </blockquote>
 <p>&lt;br&gt;
 &lt;img alt="Vue2 reactivity" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/6a6e5dab-2f12-4dd2-ab94-f47dec512c71.png" width="650" /&gt;</p>
-<pre><code class="lang-js">let activeEffect = null
+<pre><code class="lang-js">let activeEffect = null;
 
 class Dep {
   constructor() {
-    this.subscribers = new Set()
+    this.subscribers = new Set();
   }
 
   depend() {
     if (activeEffect) {
-      this.subscribers.add(activeEffect)
+      this.subscribers.add(activeEffect);
     }
   }
 
   notify() {
-    this.subscribers.forEach(effect =&gt; effect())
+    this.subscribers.forEach(effect =&gt; effect());
   }
 }
 
 function defineReactive(target) {
   Object.keys(target).forEach(key =&gt; {
-    let value = target[key]
-    const dep = new Dep()
+    let value = target[key];
+    const dep = new Dep();
 
     Object.defineProperty(target, key, {
       get() {
-        dep.depend() // track logic
-        return value
+        dep.depend(); // track logic
+        return value;
       },
       set(newVal) {
         if (newVal !== value) {
-          value = newVal
-          dep.notify() // trigger logic
+          value = newVal;
+          dep.notify(); // trigger logic
         }
-      }
-    })
-  })
+      },
+    });
+  });
 
-  return target
+  return target;
 }
 
 function effect(fn) {
-  activeEffect = fn
-  activeEffect()
-  activeEffect = null
+  activeEffect = fn;
+  activeEffect();
+  activeEffect = null;
 }
 
-let product = defineReactive({ price: 10, quantity: 4 })
-let total = 0
+let product = defineReactive({ price: 10, quantity: 4 });
+let total = 0;
 
 effect(() =&gt; {
-  total = product.price * product.quantity
-  console.log('total changed ', total)
-})
+  total = product.price * product.quantity;
+  console.log("total changed ", total);
+});
 
-product.quantity = 5
-product.price = 12
+product.quantity = 5;
+product.price = 12;
 </code></pre>
 <p>Vue 2 reactivity caveats: Since Vue 2 performs the getter/setter conversion process during instance initialization, a property must be present in the data object in order for Vue to convert it and make it reactive.</p>
 <ol>
@@ -175,34 +175,34 @@ product.price = 12
 </ol>
 <pre><code class="lang-js">function computed(getter) {
   // 缓存计算函数执行后的返回值
-  let value
+  let value;
   // 缓存过期标志
-  let dirty = true
+  let dirty = true;
 
   // 这里用一个 effect 包裹 getter，配置 {lazy: true}，表示不会立刻执行
   const runner = effect(() =&gt; {
-    value = getter()
+    value = getter();
   }, {
     lazy: true,
     scheduler() {
-      dirty = true
+      dirty = true;
       // 把 computed 的变化向外广播，让依赖它的 effect 重新跑
-      trigger(obj, 'value')
-    }
-  })
+      trigger(obj, "value");
+    },
+  });
 
   const obj = {
     get value() {
       if (dirty) {
-        dirty = false
-        runner()
+        dirty = false;
+        runner();
         // 别人依赖 computed 的时候做的事
-        track(obj, 'value')
+        track(obj, "value");
       }
-      return value
-    }
-  }
+      return value;
+    },
+  };
 
-  return obj
+  return obj;
 }
 </code></pre>
